i18n: Sync translation data from Transifex.

--- a/static/locale/cs/translations.json
+++ b/static/locale/cs/translations.json
@@ -1,7 +1,9 @@
 {
   "\"__file_name__\" was too large; the maximum file size is 25MiB.": "\"__file_name__\" byl příliš velký; největší velikost souboru je 25 MiB.",
   "(This user has been deactivated)": "(Tento uživatel byl vypnut)",
+  "(away)": "",
   "(no topic)": "(žádný předmět hovoru)",
+  "(you)": "",
   "1 day": "1 den",
   "1 hour": "1 hodina",
   "1 week": "1 týden",
@@ -15,8 +17,10 @@
   "<p>The stream <b>__stream_name__</b> does not exist.</p><p>Manage your subscriptions <a href='#streams/all'>on your Streams page</a>.</p>": "<p>Skupina <b>__stream_name__</b> není.</p><p>Spravujte své odběry <a href='#streams/all'>na stránce s vašimi skupinami</a>.</p>",
   "<strong>__name__</strong> is not subscribed to this stream. They will not be notified if you mention them.": "",
   "<strong>__name__</strong> is not subscribed to this stream. They will not be notified unless you subscribe them.": "<strong>__name__</strong> neodebírá tuto skupinu. Nebudou upozorněni, dokud je nezačnete odebírat.",
+  "A square logo used to brand your Zulip organization.": "",
   "A stream needs to have a name": "Skupina musí mít název",
   "A stream with this name already exists": "Skupina s tímto názvem již existuje",
+  "A wide image, replacing the Zulip logo in the upper left corner of the Zulip apps.": "",
   "API key": "Klíč API",
   "Action": "Činnost",
   "Actions": "Činnost",
@@ -69,9 +73,9 @@
   "An hour ago": "Před hodinou",
   "An unknown error occurred.": "Vyskytla se neznámá chyba",
   "Announce stream": "Oznámit skupinu",
+  "Any member of this organization can add custom emoji.": "",
   "Any time": "Kdykoli",
   "Anyone in this organization can add bots": "Každý v této organizaci může přidávat roboty",
-  "Anyone in this organization can add custom emoji.": "Každý v této organizaci může přidávat vlastní obličeje",
   "Apply this change to all current stream subscriptions?": "Použít tuto změnu na všechny nynější odběry skupiny?",
   "Are invitations required for joining the organization?": "Jsou pro připojení se k organizaci požadována pozvání?",
   "Are you sure you want to create stream '__stream_name__' and subscribe __count__ users to it?": "Jste si jistý, že chcete vytvořit skupinu '__stream_name__' a přihlásit k jejímu odběru __count__ uživatelů?",
@@ -110,6 +114,7 @@
   "Choose avatar": "Vybrat obrázek zastupující uživatele",
   "Choose custom color": "Vybrat vlastní barvu",
   "Clear avatar": "Smazat obrázek zastupující uživatele",
+  "Clear away status": "",
   "Clear emoji image": "Vyprázdnit obrázek obličeje",
   "Click anywhere on a message to reply.": "Klepněte kamkoli na zprávu pro odpovězení.",
   "Click outside the input box to save. We\\'ll automatically notify anyone that was added or removed.": "Pro uložení klepněte mimo zadávací pole. Automaticky bude upozorněn každý, kdo byl přidán nebo odstraněn.",
@@ -139,6 +144,8 @@
   "Custom profile fields": "Pole vlastního profilu",
   "Customize avatar": "Přizpůsobit obrázek zastupující uživatele",
   "Date uploaded": "Datum nahrání",
+  "Day": "",
+  "Day mode": "",
   "Deactivate": "Vypnout",
   "Deactivate account": "Vypnout účet",
   "Deactivate now": "Vypnout nyní",
@@ -156,6 +163,7 @@
   "Delete draft": "Smazat návrh",
   "Delete file": "Smazat soubor",
   "Delete icon": "Smazat ikonu",
+  "Delete logo": "",
   "Delete message": "Smazat zprávu",
   "Delete stream": "Smazat skupinu",
   "Delete user group": "Smazat uživatelskou skupinu",
@@ -201,7 +209,6 @@
   "Error adding subscription": "Chyba při přidávání odběru",
   "Error checking subscription": "Chyba při označování odběru",
   "Error creating stream": "Chyba při vytváření skupiny",
-  "Error deactivating account": "Chyba při vypínání účtu",
   "Error deleting message": "Chyba při mazání zprávy",
   "Error fetching message edit history": "Chyba při natahování historie úprav zprávy",
   "Error getting API key": "Chyba při získávání klíče API",
@@ -211,7 +218,9 @@
   "Error removing subscription": "Chyba při odstraňování odběru",
   "Error removing user from this stream.": "Chyba při odstraňování uživatele z této skupiny.",
   "Error saving edit": "Chyba při ukládání úpravy",
+  "Error: Cannot deactivate the only organization administrator.": "",
   "Estimated messages per week": "Odhadovaný počet zpráv za týden",
+  "External link": "",
   "Failed": "Nepodařilo se",
   "Failed to change notifications stream!": "Nepodařilo se změnit skupinu oznámení!",
   "Failed to change signup notifications stream!": "Nepodařilo se změnit skupinu pro oznámení o odběru!",
@@ -237,6 +246,7 @@
   "Go back": "Jít zpět",
   "Got it!": "Rozumím",
   "Guest": "",
+  "Guest users cannot edit custom emoji.": "",
   "High contrast mode": "Režim vysokého kontrastu",
   "Hint": "Rada",
   "Hint (up to 80 characters)": "Rada (až 80 znaků)",
@@ -280,6 +290,7 @@
   "Member": "Člen",
   "Members and admins": "",
   "Members and admins, but only admins can add generic bots": "",
+  "Members, admins, and guests": "",
   "Mentioned in": "Zmíněno v",
   "Message actions": "Činnosti pro zprávy",
   "Message editing": "Upravování zpráv",
@@ -293,18 +304,20 @@
   "Mobile notifications always (even when online)": "Oznámení na mobilu vždy (i když jste připojeni k internetu)",
   "Mobile notifications when offline": "Oznámení na mobilu, když nejste připojení k internetu",
   "Mobile push notifications are not configured on this server.": "",
+  "More details are available <a href=\"/help/add-a-custom-linkification-filter\" target=\"_blank\">in the Help Center article</a>.": "",
   "More than 2 weeks ago": "Před více než 2 týdny",
   "Mute stream": "Utlumit skupinu",
   "Mute the stream <b>__stream.name__</b>": "Utlumit skupinu <b>__stream.name__</b>",
-  "Mute the topic <b>__subject__</b>": "Utlumit předmět hovoru <b>__subject__</b>",
+  "Mute the topic <b>__topic__</b>": "",
   "Mute the topic <b>__topic_name__</b>": "Utlumit předmět hovoru <b>__topic_name__</b>",
   "Mute topic": "Utlumit předmět hovoru",
   "Muted streams don't show up in \\\"All messages\\\" or generate notifications unless you are mentioned.": "Utlumené skupiny neukazují \\\"Všechny zprávy\\\", ani nevytvářejí oznámení, dokud nejste zmíněn.",
   "Muted topics": "Utlumené předměty hovoru",
   "N": "N",
   "Name": "Název",
+  "Narrow to __- message_recipient__": "",
   "Narrow to stream &quot;__display_recipient__&quot;": "Zúžit na skupinu &quot;__display_recipient__&quot;",
-  "Narrow to stream &quot;__display_recipient__&quot;, topic &quot;__subject__&quot;": "Zúžit na skupinu &quot;__display_recipient__&quot;, topic &quot;__subject__&quot;",
+  "Narrow to stream &quot;__display_recipient__&quot;, topic &quot;__topic__&quot;": "",
   "Narrow to stream <b>__stream.name__</b>": "Zúžit na skupinu <b>__stream.name__</b>",
   "Narrow to topic <b>__topic_name__</b>": "Zúžit na předmět hovoru <b>__topic_name__</b>",
   "Narrow to your private messages with __display_reply_to__": "Zúžit na vaše soukromé zprávy s __display_reply_to__",
@@ -327,6 +340,7 @@
   "New topic": "Nový předmět hovoru",
   "New user notifications:": "Nová oznámení od uživatele:",
   "Next week": "Příští týden",
+  "Night": "",
   "Night mode": "Noční režim",
   "No": "Ne",
   "No bots match your current filter.": "Vašemu nynějšímu filtru neodpovídají žádní roboti.",
@@ -341,6 +355,7 @@
   "None": "Žádný",
   "Note that any bots that you maintain will be disabled.": "Povšimněte si, že všichni vámi spravovaní roboti budou zakázáni.",
   "Nothing to preview": "Nic k náhledu",
+  "Notification sound:": "",
   "Notifications": "Oznámení",
   "Notifications are triggered when a message arrives and Zulip isn't in focus or the message is offscreen.": "Oznámení jsou spuštěna, když přijde zpráva a okno Zulipu není zaměřeno nebo je zpráva mimo plátno obrazovky. ",
   "Notifications stream changed!": "Skupina oznámení změněna!",
@@ -355,10 +370,12 @@
   "Only organization administrators can post.": "Poslat zprávu mohou pouze správci organizace.",
   "Only organization admins are allowed to post to this stream.": "Pouze správci organizace mohou této skupině poslat zprávu.",
   "Optional": "Volitelné",
+  "Or, to automatically linkify GitHub's <code>org/repo#1234</code> syntax:": "",
   "Organization": "Organizace",
   "Organization administrators can change this in the organization settings.": "Správci organizace mohou toto měnit v nastavení organizace.",
   "Organization avatar": "Obrázek zastupující organizaci",
   "Organization description": "Popis organizace",
+  "Organization logo": "",
   "Organization name": "Název organizace",
   "Organization permissions": "Povolení organizace",
   "Organization profile": "Profil organizace",
@@ -374,6 +391,7 @@
   "People to add": "Lidé k přidání",
   "Pin stream <b>__stream.name__</b> to top": "Přišpendlit skupinu <b>__stream.name__</b> nahoru",
   "Pin stream to top of left sidebar": "Přišpendlit skupinu v levém postranním panelu nahoru",
+  "Play sound": "",
   "Please just upload one file.": "Nahrejte, prosím, pouze jeden soubor.",
   "Please re-enter your password to confirm your identity.": "Zadejte, prosím, znovu své heslo pro potvrzení vaší totožnosti.",
   "Please specify a date or time": "Stanovte, prosím, datum nebo čas",
@@ -390,7 +408,6 @@
   "Quote and reply": "Ocitovat a odpovědět",
   "Reactivate": "Oživit",
   "Reactivate bot": "Oživit robota",
-  "Regular expression": "Regulární výraz",
   "Remind me about this": "Připomenout mi to",
   "Reminder not set!": "Připomenutí nenastaveno!",
   "Reminder set!": "Množina připomenutí!",
@@ -431,6 +448,12 @@
   "Send emails introducing Zulip to new users": "Poslat elektronický dopis s uvedením do Zulipu novým uživatelům",
   "Send private message": "Poslat soukromou zprávu",
   "Sent!": "Poslat",
+  "Sent! Scroll down to view your message.": "",
+  "Sent! Your message is outside your current narrow.": "",
+  "Sent! Your message was sent to a stream you have muted.": "",
+  "Sent! Your message was sent to a topic you have muted.": "",
+  "Sent! Your recent message is outside the current search.": "",
+  "Set status to away": "",
   "Settings": "Nastavení",
   "Setup": "Nastavit",
   "Setup two factor authentication": "Nastavit dvousložkové ověření",
@@ -479,7 +502,7 @@
   "There are no messages to reply to.": "Nejsou žádné zprávy, na něž by se mohlo odpovědět.",
   "These settings are explained in detail in the <a target=\"_blank\" href=\"/help/stream-permissions\">help center</a>.": "",
   "This action is permanent and cannot be undone. All users will permanently lose access to their Zulip accounts.": "Tento krok je trvalý a nelze jej vrátit zpět. Všichni uživatelé trvale ztratí přístup ke svým účtům Zulip.",
-  "This is a <span class=\"fa fa-globe\" aria-hidden=\"true\"></span> <b>public stream</b>. Anybody in your organization can join.": "",
+  "This is a <span class=\"fa fa-globe\" aria-hidden=\"true\"></span> <b>public stream</b>. Any member of the organization can join without an invitation.": "",
   "This is a <span class=\"fa fa-lock\" aria-hidden=\"true\"></span> <b>private stream</b>. Only people who have been invited can access its content, but any member of the stream can invite others.": "",
   "This is a private stream": "Toto je soukromá skupina",
   "This organization is configured to restrict editing of message content to __minutes_to_edit__ minutes after it is sent.": "Tato organizace je nastavena tak, aby byly úpravy obsahu zprávy omezeny na __minutes_to_edit__ minut, poté co byla odeslána.",
@@ -492,6 +515,7 @@
   "Tomorrow": "Zítra",
   "Topic": "Předmět hovoru",
   "Topic editing only": "Pouze upravení předmětu hovoru",
+  "Topic muted": "Předmět hovoru utlumen",
   "Try again": "Zkusit znovu",
   "Two factor authentication": "Dvousložkové ověření",
   "Type": "Typ",
@@ -501,8 +525,9 @@
   "Uncheck all": "Odznačit vše",
   "Unknown": "Neznámý",
   "Unless I say otherwise for a particular stream, I want:": "Až dokud pro určitou skupinu neřeknu jinak, chci:",
+  "Unmute": "Zrušit utlumení",
   "Unmute the stream <b>__stream.name__</b>": "Zrušit utlumení skupiny <b>__stream.name__</b>",
-  "Unmute the topic <b>__subject__</b>": "Zrušit utlumení předmětu hovoru <b>__subject__</b>",
+  "Unmute the topic <b>__topic__</b>": "",
   "Unmute the topic <b>__topic_name__</b>": "Zrušit utlumení předmětu hovoru <b>__topic_name__</b>",
   "Unpin stream <b>__stream.name__</b> from top": "Odepnout skupinu <b>__stream.name__</b> odshora",
   "Unstar": "Odhvězdičkovat",
@@ -517,10 +542,13 @@
   "Upload avatar": "Nahrát obrázek zastupující uživatele",
   "Upload icon": "Nahrát ikonu",
   "Upload image or GIF": "Nahrát obrázek nebo GIF",
+  "Upload logo": "",
   "Upload new avatar": "Nahrát nový obrázek zastupující uživatele",
   "Upload new icon": "Nahrát novou ikonu",
+  "Upload new logo": "",
   "Uploaded files": "Nahrané soubory",
   "Uploading icon.": "Nahrává se ikona.",
+  "Uploading logo.": "",
   "Uploading\u2026": "Nahrává se...",
   "User already subscribed.": "Uživatel již odebírán.",
   "User avatar": "Obrázek zastupující uživatele",
@@ -540,6 +568,7 @@
   "View file": "Zobrazit soubor",
   "View messages sent": "Podívat se na poslané zprávy",
   "View private messages": "Podívat se na soukromé zprávy",
+  "View private messages to myself": "",
   "View source": "Podívat se na zdroj",
   "View source / Edit topic": "Podívat se na zdroj/Upravit předmět hovoru",
   "View stream": "Podívat se na skupinu",
@@ -550,6 +579,7 @@
   "Who can add bots": "Kdo může přidat roboty",
   "Who can add custom emoji": "Kdo může přidat vlastní obličej",
   "Who can create streams": "Kdo může vytvářet skupiny",
+  "Who can see users email addresses": "",
   "Working\u2026": "Pracuje...",
   "Yes": "Ano",
   "Yes, delete this stream": "Ano, smazat tuto skupinu",
@@ -564,6 +594,7 @@
   "You are not subscribed to stream __stream__": "Neodebíráte skupinu __stream__",
   "You can send emails to Zulip! Just copy and use this address as an email recipient, and:": "Můžete do Zulipu poslat elektronický dopis! Tuto adresu jednoduše zkopírujte a vložte do pole příjemce e-mailu, a pak:",
   "You cannot create a stream with no subscribers!": "Nemůžete vytvořit skupinu, ve které nejsou odebírající.",
+  "You have muted the topic <span class=\"topic\"></span> under the <span class=\"stream\"></span> stream.": "",
   "You have no active bots.": "Nemáte žádné činné roboty.",
   "You have no inactive bots.": "Nemáte žádné nečinné roboty.",
   "You have not muted any topics yet.": "Ještě jste neutlumil žádný předmět hovoru!",
@@ -590,11 +621,14 @@
   "__wildcard_mention_token__ (Notify stream)": "__wildcard_mention_token__ (upozornit skupinu)",
   "and": "a",
   "cookie": "Koláček",
+  "group private messages with __recipient__": "",
   "in 1 hour": "za 1 hodinu",
   "in 20 minutes": "za 20 minut",
   "in 3 hours": "za 3 hodiny",
   "leafy green vegetable": "",
   "marketing": "Odbyt",
   "more conversations": "více rozhovorů",
-  "more topics": "více předmětů hovoru"
+  "more topics": "více předmětů hovoru",
+  "private messages with __recipient__": "",
+  "private messages with yourself": ""
 }
