--- a/static/locale/fr/translations.json
+++ b/static/locale/fr/translations.json
@@ -1,7 +1,9 @@
 {
   "\"__file_name__\" was too large; the maximum file size is 25MiB.": "\"__file_name__\" est trop grand ; la taille maximale d'un fichier est de 25Mo.",
   "(This user has been deactivated)": "(Cet utilisateur a été désactivé)",
+  "(away)": "",
   "(no topic)": "(pas de sujet)",
+  "(you)": "",
   "1 day": "1 journée",
   "1 hour": "1 heure",
   "1 week": "1 semaine",
@@ -15,8 +17,10 @@
   "<p>The stream <b>__stream_name__</b> does not exist.</p><p>Manage your subscriptions <a href='#streams/all'>on your Streams page</a>.</p>": "<p>Le canal <b>__stream_name__</b> n'existe pas.</p><p>Gérer vos abonnements <a href='#streams/all'>dans la page de vos canaux</a>.</p>",
   "<strong>__name__</strong> is not subscribed to this stream. They will not be notified if you mention them.": "<strong>__name__</strong> n'est pas abonné à ce canal. Ils ne seront pas avertis si vous les mentionnez.",
   "<strong>__name__</strong> is not subscribed to this stream. They will not be notified unless you subscribe them.": "<strong>__name__</strong> n'est pas abonné à ce canal. Il ne recevra aucune notification tant que vous ne l'y aurez pas abonné.",
+  "A square logo used to brand your Zulip organization.": "",
   "A stream needs to have a name": "Un canal doit avoir un nom",
   "A stream with this name already exists": "Ce nom de canal existe déjà",
+  "A wide image, replacing the Zulip logo in the upper left corner of the Zulip apps.": "",
   "API key": "Clé API",
   "Action": "Action",
   "Actions": "Actions",
@@ -69,9 +73,9 @@
   "An hour ago": "Il y a une heure",
   "An unknown error occurred.": "Une erreur inconnue s'est produite.",
   "Announce stream": "Canal d'annonce",
+  "Any member of this organization can add custom emoji.": "",
   "Any time": "À tout moment",
   "Anyone in this organization can add bots": "N'importe qui dans l'organisation peut ajouter des robots",
-  "Anyone in this organization can add custom emoji.": "Tous les membres de cette organisation peuvent ajouter un emoji personnalisé.",
   "Apply this change to all current stream subscriptions?": "Appliquer ce changement à tous les canaux abonnés actuels ?",
   "Are invitations required for joining the organization?": "Une invitation est-elle nécessaire pour rejoindre l'organisation?",
   "Are you sure you want to create stream '__stream_name__' and subscribe __count__ users to it?": "Êtes-vous sûr de vouloir créer un nouveau canal '__stream_name' et d'y inscrire __count__ utilisateurs ?",
@@ -110,6 +114,7 @@
   "Choose avatar": "Choisir un avatar",
   "Choose custom color": "Choisir une couleur personnalisé",
   "Clear avatar": "Retirer l'avatar",
+  "Clear away status": "",
   "Clear emoji image": "Retirer l'image emoji",
   "Click anywhere on a message to reply.": "Cliquer n'importe où sur un message pour y répondre.",
   "Click outside the input box to save. We\\'ll automatically notify anyone that was added or removed.": "Cliquer en dehors de la fenêtre pour sauvegarder. Une notification sera émise automatiquement à chaque fois qu'une personne sera ajoutée ou retirée.",
@@ -139,6 +144,8 @@
   "Custom profile fields": "Champs de profil personnalisés",
   "Customize avatar": "Personnaliser l'avatar",
   "Date uploaded": "Date envoyée",
+  "Day": "",
+  "Day mode": "",
   "Deactivate": "Désactiver",
   "Deactivate account": "Désactiver le compte",
   "Deactivate now": "Désactiver maintenant",
@@ -156,6 +163,7 @@
   "Delete draft": "Supprimer le brouillon",
   "Delete file": "Supprimer le fichier",
   "Delete icon": "Supprimer l'icône",
+  "Delete logo": "",
   "Delete message": "Supprimer le message",
   "Delete stream": "Supprimer le canal",
   "Delete user group": "Supprimer le groupe utilisateur",
@@ -201,7 +209,6 @@
   "Error adding subscription": "Erreur durant l'abonnement",
   "Error checking subscription": "Erreur lors de la vérification de l'abonnement",
   "Error creating stream": "Erreur lors de la création du canal",
-  "Error deactivating account": "Erreur lors de la désactivation du compte",
   "Error deleting message": "Erreur lors de la suppression du message",
   "Error fetching message edit history": "Erreur lors de la récupération de l'historique des messages modifiés",
   "Error getting API key": "Erreur lors de l'obtention d une clé API",
@@ -211,7 +218,9 @@
   "Error removing subscription": "Erreur durant la suppression de l'abonnement",
   "Error removing user from this stream.": "Erreur lors de la suppression de l'utilisateur de ce canal",
   "Error saving edit": "Erreur durant l'enregistrement de l'édition",
+  "Error: Cannot deactivate the only organization administrator.": "",
   "Estimated messages per week": "Estimation du nombre de messages par semaine",
+  "External link": "",
   "Failed": "Échoué",
   "Failed to change notifications stream!": "Échec lors de la mise à jour des notifications du canal!",
   "Failed to change signup notifications stream!": "Échec lors de la mise à jour des notifications du canal!",
@@ -237,6 +246,7 @@
   "Go back": "Retourner",
   "Got it!": "Compris !",
   "Guest": "Invité",
+  "Guest users cannot edit custom emoji.": "",
   "High contrast mode": "Mode contraste élevé",
   "Hint": "Indice",
   "Hint (up to 80 characters)": "Indication (jusqu'à 80 caractères)",
@@ -280,6 +290,7 @@
   "Member": "Membre",
   "Members and admins": "Membres et administrateurs",
   "Members and admins, but only admins can add generic bots": "Membres et administrateurs, mais seuls les administrateurs peuvent ajouter des bots génériques",
+  "Members, admins, and guests": "",
   "Mentioned in": "Mentionné dans",
   "Message actions": "Options du message",
   "Message editing": "Modification de message",
@@ -293,18 +304,20 @@
   "Mobile notifications always (even when online)": "Toujours activer les notifications Push Mobile (même en ligne)",
   "Mobile notifications when offline": "Notifications Push Mobile en mode hors connexion",
   "Mobile push notifications are not configured on this server.": "Les notifications mobiles ne sont pas configurées sur ce serveur.",
+  "More details are available <a href=\"/help/add-a-custom-linkification-filter\" target=\"_blank\">in the Help Center article</a>.": "",
   "More than 2 weeks ago": "Il y a plus de 2 semaines",
   "Mute stream": "Rendre muet le canal",
   "Mute the stream <b>__stream.name__</b>": "Rendre le canal <b>__stream.name__</b> muet  ",
-  "Mute the topic <b>__subject__</b>": "Rendre le sujet <b>__subject__</b> muet",
+  "Mute the topic <b>__topic__</b>": "",
   "Mute the topic <b>__topic_name__</b>": "Rendre le sujet <b>__topic_name__</b> muet",
   "Mute topic": "Rendre le sujet muet",
   "Muted streams don't show up in \\\"All messages\\\" or generate notifications unless you are mentioned.": "Les canaux muets n'apparaissent pas dans \\\"Tous les messages\\\" et ne générent pas de notifications à moins d'être mentioné.",
   "Muted topics": "Sujets muets",
   "N": "N",
   "Name": "Nom",
+  "Narrow to __- message_recipient__": "",
   "Narrow to stream &quot;__display_recipient__&quot;": "Restreindre au canal &quot;__display_recipient__&quot;",
-  "Narrow to stream &quot;__display_recipient__&quot;, topic &quot;__subject__&quot;": "Restreindre au canal &quot;__display_recipient__&quot;, sujet &quot;__subject__&quot;",
+  "Narrow to stream &quot;__display_recipient__&quot;, topic &quot;__topic__&quot;": "",
   "Narrow to stream <b>__stream.name__</b>": "Restreindre au canal <b>__stream.name__</b>",
   "Narrow to topic <b>__topic_name__</b>": "Restreindre au sujet <b>__topic_name__</b>",
   "Narrow to your private messages with __display_reply_to__": "Restreindre à vos messages privés avec __display_reply_to__",
@@ -327,6 +340,7 @@
   "New topic": "Nouveau sujet",
   "New user notifications:": "Notification de nouvel utilisateur:",
   "Next week": "Semaine prochaine",
+  "Night": "",
   "Night mode": "Mode nuit",
   "No": "Non",
   "No bots match your current filter.": "Aucun robot ne correspond à votre filtre.",
@@ -341,6 +355,7 @@
   "None": "Aucun",
   "Note that any bots that you maintain will be disabled.": "Notez que tous les robots que vous maintenez seront désactivés.\n",
   "Nothing to preview": "Rien à prévisualiser",
+  "Notification sound:": "",
   "Notifications": "Notifications",
   "Notifications are triggered when a message arrives and Zulip isn't in focus or the message is offscreen.": "Les notifications sont déclenchées lorsqu'un message arrive et que Zulip n'est pas actif ou que le message est hors de l'écran.",
   "Notifications stream changed!": "Les notifications du canal ont changé !",
@@ -355,10 +370,12 @@
   "Only organization administrators can post.": "Seuls les administrateurs de l'organisation peuvent poster de messages.",
   "Only organization admins are allowed to post to this stream.": "Seuls les administrateurs de l'organisation peuvent poster sur ce canal.",
   "Optional": "Optionnel",
+  "Or, to automatically linkify GitHub's <code>org/repo#1234</code> syntax:": "",
   "Organization": "Organisation",
   "Organization administrators can change this in the organization settings.": "Les administrateurs de l'organisation peuvent changer cela dans les paramètre de l'organisation.",
   "Organization avatar": "Avatar de l'organisation",
   "Organization description": "Description de l'organisation",
+  "Organization logo": "",
   "Organization name": "Nom de l'organisation",
   "Organization permissions": "Permissions de l'organisation",
   "Organization profile": "Profil de l'organisation",
@@ -374,6 +391,7 @@
   "People to add": "Personnes à ajouter",
   "Pin stream <b>__stream.name__</b> to top": "Épingler le canal <b>__stream.name__</b> en haut",
   "Pin stream to top of left sidebar": "Épingler le canal en haut de la barre latérale",
+  "Play sound": "",
   "Please just upload one file.": "Veuillez télécharger juste un fichier.",
   "Please re-enter your password to confirm your identity.": "Veuillez re-saisir votre mot de passe pour confirmer votre identité.",
   "Please specify a date or time": "Merci de préciser la date ou l'heure",
@@ -390,7 +408,6 @@
   "Quote and reply": "Citer et répondre",
   "Reactivate": "Réactiver",
   "Reactivate bot": "Réactiver le robot",
-  "Regular expression": "Expression régulière",
   "Remind me about this": "Me faire un rappel à ce sujet",
   "Reminder not set!": "Rappel non paramétré !",
   "Reminder set!": "Rappel mis en place!",
@@ -431,6 +448,12 @@
   "Send emails introducing Zulip to new users": "Envoyer un email de présentation aux nouveaux utilisateurs de Zulip",
   "Send private message": "Envoyer un message privé",
   "Sent!": "Envoyé !",
+  "Sent! Scroll down to view your message.": "",
+  "Sent! Your message is outside your current narrow.": "",
+  "Sent! Your message was sent to a stream you have muted.": "",
+  "Sent! Your message was sent to a topic you have muted.": "",
+  "Sent! Your recent message is outside the current search.": "",
+  "Set status to away": "",
   "Settings": "Paramètres",
   "Setup": "Configurer",
   "Setup two factor authentication": "Configurer l'authentification à deux facteurs",
@@ -479,7 +502,7 @@
   "There are no messages to reply to.": "Il n'y aucun message auquel répondre.",
   "These settings are explained in detail in the <a target=\"_blank\" href=\"/help/stream-permissions\">help center</a>.": "Ce paramétrage est expliquer en détail dans le <a target=\"_blank\" href=\"/help/stream-permissions\">centre d'aide</a>.",
   "This action is permanent and cannot be undone. All users will permanently lose access to their Zulip accounts.": "Cette action est définitive et irrévocable. Tous les utilisateurs vont perdre l'accès à leur compte Zulip.",
-  "This is a <span class=\"fa fa-globe\" aria-hidden=\"true\"></span> <b>public stream</b>. Anybody in your organization can join.": "C'est un <span class=\"fa fa-globe\" aria-hidden=\"true\"></span> <b>canal public</b>. N'importe qui au sein de l'organisation peut le rejoindre.",
+  "This is a <span class=\"fa fa-globe\" aria-hidden=\"true\"></span> <b>public stream</b>. Any member of the organization can join without an invitation.": "",
   "This is a <span class=\"fa fa-lock\" aria-hidden=\"true\"></span> <b>private stream</b>. Only people who have been invited can access its content, but any member of the stream can invite others.": "Ceci est un <span class=\"fa fa-lock\" aria-hidden=\"true\"></span> <b>private stream</b>. Seules les personnes qui ont été invitées peuvent accéder à son contenu, cependant tous les membres du canal peuvent inviter quelqu'un.",
   "This is a private stream": "Ceci est un canal privé",
   "This organization is configured to restrict editing of message content to __minutes_to_edit__ minutes after it is sent.": "Cette organisation est configurée pour restreindre l'édition du contenu du message à __minutes_to_edit__ minutes après son envoi.",
@@ -492,6 +515,7 @@
   "Tomorrow": "Demain",
   "Topic": "Sujet",
   "Topic editing only": "Édition de sujet seulement",
+  "Topic muted": "Topic muet",
   "Try again": "Essayez à nouveau",
   "Two factor authentication": "Authentification à deux facteurs",
   "Type": "Type",
@@ -501,8 +525,9 @@
   "Uncheck all": "Tout désélectionner",
   "Unknown": "Inconnu",
   "Unless I say otherwise for a particular stream, I want:": "À moins que je dise le contraire pour un canal particulier, je veux : ",
+  "Unmute": "Ne plus rendre muet",
   "Unmute the stream <b>__stream.name__</b>": "Désactiver le canal<b>__stream.name__</b>",
-  "Unmute the topic <b>__subject__</b>": "Désactiver le sujet <b>__subject__</b>",
+  "Unmute the topic <b>__topic__</b>": "",
   "Unmute the topic <b>__topic_name__</b>": "Désactiver le sujet <b>__topic_name__</b>",
   "Unpin stream <b>__stream.name__</b> from top": "Retirer le canal <b>__stream.name__</b> du dessus",
   "Unstar": "Enlever des favoris",
@@ -517,10 +542,13 @@
   "Upload avatar": "Envoyer un avatar",
   "Upload icon": "Envoyer une icône",
   "Upload image or GIF": "Charger une image ou un GIF",
+  "Upload logo": "",
   "Upload new avatar": "Envoyer un nouvel avatar",
   "Upload new icon": "Envoyer une nouvelle icône",
+  "Upload new logo": "",
   "Uploaded files": "Fichiers envoyés",
   "Uploading icon.": "Icône en cours d'envoi.",
+  "Uploading logo.": "",
   "Uploading\u2026": "En cours d'envoi…",
   "User already subscribed.": "Utilisateur déjà abonné.",
   "User avatar": "Avatar de l'utilisateur",
@@ -540,6 +568,7 @@
   "View file": "Voir le fichier",
   "View messages sent": "Voir les messages envoyés",
   "View private messages": "Voir les messages privés",
+  "View private messages to myself": "",
   "View source": "Voir la source",
   "View source / Edit topic": "Voir la source / Modifier le sujet",
   "View stream": "Voir le canal",
@@ -550,6 +579,7 @@
   "Who can add bots": "Qui peut ajouter des bots",
   "Who can add custom emoji": "Qui peut ajouter des emojis personnalisés",
   "Who can create streams": "Qui peut créer des canaux",
+  "Who can see users email addresses": "",
   "Working\u2026": "Travail en cours…",
   "Yes": "Oui",
   "Yes, delete this stream": "Oui, supprimer ce canal",
@@ -564,6 +594,7 @@
   "You are not subscribed to stream __stream__": "Vous n'êtes pas abonné au canal __stream__",
   "You can send emails to Zulip! Just copy and use this address as an email recipient, and:": "Vous pouvez envoyer des courriels à Zulip! Il suffit de copier et utiliser cette adresse comme destinataire d'un courriel, et:",
   "You cannot create a stream with no subscribers!": "Vous ne pouvez pas créer de canal ne comportant aucun abonné !",
+  "You have muted the topic <span class=\"topic\"></span> under the <span class=\"stream\"></span> stream.": "",
   "You have no active bots.": "Vous n'avez aucun robot actif.",
   "You have no inactive bots.": "Vous n'avez aucun robot inactif.",
   "You have not muted any topics yet.": "Vous n'avez désactivé aucun sujet.",
@@ -590,11 +621,14 @@
   "__wildcard_mention_token__ (Notify stream)": "__wildcard_mention_token__ (Canal de notification)",
   "and": "et",
   "cookie": "cookie",
+  "group private messages with __recipient__": "",
   "in 1 hour": "Dans 1 heure",
   "in 20 minutes": "Dans 20 minutes",
   "in 3 hours": "Dans 3 heures",
   "leafy green vegetable": "légume vert feuillu",
   "marketing": "marketing",
   "more conversations": "plus de conversations",
-  "more topics": "plus de sujets"
+  "more topics": "plus de sujets",
+  "private messages with __recipient__": "",
+  "private messages with yourself": ""
 }
