--- a/static/locale/hi/translations.json
+++ b/static/locale/hi/translations.json
@@ -1,6 +1,7 @@
 {
   "\"__file_name__\" was too large; the maximum file size is 25MiB.": "",
   "(This user has been deactivated)": "",
+  "(away)": "",
   "(no topic)": "",
   "(you)": "",
   "1 day": "",
@@ -16,14 +17,16 @@
   "<p>The stream <b>__stream_name__</b> does not exist.</p><p>Manage your subscriptions <a href='#streams/all'>on your Streams page</a>.</p>": "",
   "<strong>__name__</strong> is not subscribed to this stream. They will not be notified if you mention them.": "",
   "<strong>__name__</strong> is not subscribed to this stream. They will not be notified unless you subscribe them.": "",
+  "A square logo used to brand your Zulip organization.": "",
   "A stream needs to have a name": "",
   "A stream with this name already exists": "",
+  "A wide image, replacing the Zulip logo in the upper left corner of the Zulip apps.": "",
   "API key": "",
   "Action": "",
   "Actions": "",
   "Active bots": "",
   "Active now": "",
-  "Active users": "\u0938\u0915\u094d\u0930\u093f\u092f \u0909\u092a\u092f\u094b\u0917\u0915\u0930\u094d\u0924\u093e",
+  "Active users": "सक्रिय उपयोगकर्ता",
   "Add": "",
   "Add a new alert word": "",
   "Add a new bot": "",
@@ -32,7 +35,7 @@
   "Add a new profile field": "",
   "Add a new user group": "",
   "Add alert word": "",
-  "Add emoji": "",
+  "Add emoji": "इमोजी जोड़ें",
   "Add emoji reaction": "",
   "Add emoji reaction (:)": "",
   "Add extra emoji for members of the __realm_name__ organization.": "",
@@ -58,15 +61,15 @@
   "Alert words allow you to be notified as if you were @-mentioned when certain words or phrases are used in Zulip.": "",
   "All admins, and members with accounts at least 3 days old.": "",
   "All admins, and members with accounts at least N days old.": "",
-  "All messages": "\u0938\u092d\u0940 \u0938\u0902\u0926\u0947\u0936",
-  "All streams": "\u0938\u092d\u0940 \u0936\u093e\u0916\u093e\u092f\u0947 ",
+  "All messages": "सभी संदेश",
+  "All streams": "सभी शाखाये ",
   "Allow message deleting": "",
   "Allow message editing": "",
   "Allow subdomains": "",
   "Allowed domains": "",
   "Allowed domains: __domains__": "",
   "Already subscribed to __stream__": "",
-  "An API key can be used to programmatically access a Zulip account. Anyone with access to your API key has the ability to read your messages, send messages on your behalf, and otherwise impersonate you on Zulip, so you should guard your API key as carefully as you guard your password. <br /> We recommend creating bots and using the bots' accounts and API keys to access the Zulip API, unless the task requires access to your account.": "",
+  "An API key can be used to programmatically access a Zulip account. Anyone with access to your API key has the ability to read your messages, send messages on your behalf, and otherwise impersonate you on Zulip, so you should guard your API key as carefully as you guard your password. <br /> We recommend creating bots and using the bots' accounts and API keys to access the Zulip API, unless the task requires access to your account.": "एक Zulip अकाउंट को प्रोग्राम करने के लिए API कुंजी का उपयोग किया जा सकता है। आपकी API कुंजी तक पहुंच रखने वाले किसी भी व्यक्ति के पास आपके संदेशों को पढ़ने, अपनी ओर से संदेश भेजने, और अन्यथा Zulip पर आपको प्रतिरूपित करने की क्षमता है, इसलिए आपको अपनी API कुंजी को सावधानी से अपने पासवर्ड की रक्षा करना चाहिए। हम ज़ुल्फ़ एपीआई का उपयोग करने के लिए बॉट्स अकाउंट और एपीआई कुंजियों का उपयोग करके बॉट्स बनाने और उपयोग करने की सलाह देते हैं, जब तक कि कार्य को आपके खाते तक पहुंच की आवश्यकता न हो।",
   "An hour ago": "",
   "An unknown error occurred.": "",
   "Announce stream": "",
@@ -81,7 +84,7 @@
   "Are you sure you want to mention all <strong>__count__</strong> people in this stream?": "",
   "Are you sure you want to resend the invitation to <strong><span class=\"email\"></span></strong>?": "",
   "Are you sure you want to revoke the invitation to <strong><span class=\"email\"></span></strong>?": "",
-  "Attach files": "",
+  "Attach files": "फ़ाइल संलग्न करें",
   "Attachment deleted": "",
   "Audible desktop notifications": "",
   "Authentication methods": "",
@@ -94,7 +97,7 @@
   "Bot type": "",
   "By deactivating <strong><span class=\"user_name\"></span></strong> &lt;<span class=\"email\"></span>&gt;, they will be logged out immediately.": "",
   "By deactivating your account, you will be logged out immediately.": "",
-  "Cancel": "\u0930\u0926\u094d\u0926 \u0915\u0930\u0928\u093e",
+  "Cancel": "रद्द करना",
   "Change": "",
   "Change email": "",
   "Change full name": "",
@@ -105,20 +108,21 @@
   "Change previous and following messages to this topic": "",
   "Change stream permissions for #": "",
   "Change user info and roles": "",
-  "Changing email addresses has been disabled by your Zulip organization administrators. Contact an administrator for help.": "",
-  "Changing your name has been disabled by your Zulip organization administrators. Contact an administrator for help.": "",
+  "Changing email addresses has been disabled by your Zulip organization administrators. Contact an administrator for help.": "ईमेल पते को बदलना आपके जूलिप संगठन प्रशासकों द्वारा अक्षम कर दिया गया है। मदद के लिए किसी व्यवस्थापक से संपर्क करें।",
+  "Changing your name has been disabled by your Zulip organization administrators. Contact an administrator for help.": "आपका नाम बदलना आपके Zulip संगठन व्यवस्थापकों द्वारा अक्षम कर दिया गया है। मदद के लिए किसी व्यवस्थापक से संपर्क करें।",
   "Check all": "",
   "Choose avatar": "",
   "Choose custom color": "",
   "Clear avatar": "",
+  "Clear away status": "",
   "Clear emoji image": "",
   "Click anywhere on a message to reply.": "",
   "Click outside the input box to save. We\\'ll automatically notify anyone that was added or removed.": "",
-  "Close": "",
+  "Close": "बंद करे",
   "Collapse": "",
   "Compose a message to stream <b>__stream.name__</b>": "",
   "Configure default settings for new users joining this organization.": "",
-  "Configure regular expression patterns that will be automatically linkified when used in Zulip message bodies or topics.  For example to automatically linkify commit IDs and issue numbers (e.g. #123) to the corresponding items in a GitHub project, you could use the following:": "",
+  "Configure regular expression patterns that will be automatically linkified when used in Zulip message bodies or topics.  For example to automatically linkify commit IDs and issue numbers (e.g. #123) to the corresponding items in a GitHub project, you could use the following:": "ज़ूलिप संदेश निकायों या विषयों में उपयोग किए जाने पर नियमित अभिव्यक्ति पैटर्न कॉन्फ़िगर करें जो स्वचालित रूप से लिंक किए जाएंगे। उदाहरण के लिए GitHub प्रोजेक्ट में संबंधित आइटम्स के लिए स्वचालित रूप से प्रतिबद्ध ID और इश्यू नंबर (जैसे # 123) लिंक करने के लिए, आप निम्नलिखित का उपयोग कर सकते हैं:",
   "Configure the authentication methods for your organization.": "",
   "Configure the default streams new users are subscribed to when joining your organization.": "",
   "Convert emoticons before sending (<code>:)</code> becomes \ud83d\ude03)": "",
@@ -128,9 +132,9 @@
   "Copy from stream": "",
   "Copy link to conversation": "",
   "Copy zuliprc": "",
-  "Create": "\u0938\u0930\u094d\u091c\u0928 \u0915\u0930\u0928\u093e",
+  "Create": "सर्जन करना",
   "Create bot": "",
-  "Create new stream": "\u0928\u0908 \u0938\u094d\u091f\u094d\u0930\u0940\u092e \u092c\u0928\u093e\u090f\u0902",
+  "Create new stream": "नई स्ट्रीम बनाएं",
   "Create stream": "",
   "Creating bot": "",
   "Creating stream...": "",
@@ -140,6 +144,8 @@
   "Custom profile fields": "",
   "Customize avatar": "",
   "Date uploaded": "",
+  "Day": "",
+  "Day mode": "",
   "Deactivate": "",
   "Deactivate account": "",
   "Deactivate now": "",
@@ -157,13 +163,14 @@
   "Delete draft": "",
   "Delete file": "",
   "Delete icon": "",
-  "Delete message": "\u0938\u0902\u0926\u0947\u0936 \u0939\u091f\u093e\u090f",
+  "Delete logo": "",
+  "Delete message": "संदेश हटाए",
   "Delete stream": "",
   "Delete user group": "",
   "Deleted successfully!": "",
   "Deleting this stream will immediately unsubscribe everyone, and the stream's content will not be recoverable.": "",
   "Dense mode": "",
-  "Description": "\u0935\u093f\u0935\u0930\u0923",
+  "Description": "विवरण",
   "Disabled": "",
   "Discard": "",
   "Discard changes": "",
@@ -175,18 +182,18 @@
   "Download .zuliprc": "",
   "Download botserverrc": "",
   "Download config of all active outgoing webhook bots in Zulip Botserver format.": "",
-  "Download file": "\u0921\u093e\u0909\u0928\u0932\u094b\u0921 \u092b\u093e\u0907\u0932",
+  "Download file": "डाउनलोड फाइल",
   "Download zuliprc": "",
-  "Drafts": "",
+  "Drafts": "ड्राफ्ट",
   "Drafts older than <strong>__draft_lifetime__</strong> days are automatically removed": "",
   "EDITED": "",
-  "Edit": "\u0938\u0902\u092a\u093e\u0926\u093f\u0924 \u0915\u0930\u0947\u0902",
+  "Edit": "संपादित करें",
   "Edit bot": "",
   "Edit question": "",
   "Edit user": "",
   "Edit your profile": "",
   "Edited (__last_edit_timestr__)": "",
-  "Email": "\u0908\u092e\u0947\u0932",
+  "Email": "ईमेल",
   "Email address": "",
   "Email copied": "",
   "Email notifications": "",
@@ -231,7 +238,7 @@
   "Filter users": "",
   "First time? Read our <a href=\"/help/getting-your-organization-started-with-zulip#create-streams\" target=\"_blank\">guidelines</a> for creating and naming streams.": "",
   "Forgotten it?": "",
-  "Formatting": "",
+  "Formatting": "Formatting",
   "Full name": "",
   "Generate new API key": "",
   "Generic": "",
@@ -262,7 +269,7 @@
   "Joined": "",
   "Joining the organization": "",
   "Just now": "",
-  "Keyboard shortcuts": "",
+  "Keyboard shortcuts": "कुंजीपटल अल्प मार्ग",
   "Label": "",
   "Language settings": "",
   "Large number of subscribers": "",
@@ -284,7 +291,7 @@
   "Members and admins": "",
   "Members and admins, but only admins can add generic bots": "",
   "Members, admins, and guests": "",
-  "Mentioned in": "",
+  "Mentioned in": "में वर्णित",
   "Message actions": "",
   "Message editing": "",
   "Message feed": "",
@@ -297,16 +304,18 @@
   "Mobile notifications always (even when online)": "",
   "Mobile notifications when offline": "",
   "Mobile push notifications are not configured on this server.": "",
+  "More details are available <a href=\"/help/add-a-custom-linkification-filter\" target=\"_blank\">in the Help Center article</a>.": "",
   "More than 2 weeks ago": "",
-  "Mute stream": " \u0927\u093e\u0930\u093e \u092e\u094d\u092f\u0942\u091f \u0915\u0930\u0947\u0902",
+  "Mute stream": " धारा म्यूट करें",
   "Mute the stream <b>__stream.name__</b>": "",
-  "Mute the topic <b>__subject__</b>": "",
+  "Mute the topic <b>__topic__</b>": "",
   "Mute the topic <b>__topic_name__</b>": "",
-  "Mute topic": "\u0935\u093f\u0937\u092f \u092e\u094d\u092f\u0942\u091f \u0915\u0930\u0947\u0902",
+  "Mute topic": "विषय म्यूट करें",
   "Muted streams don't show up in \\\"All messages\\\" or generate notifications unless you are mentioned.": "",
-  "Muted topics": "\u092e\u094d\u092f\u0942\u091f \u0915\u093f\u090f \u0917\u090f \u0935\u093f\u0937\u092f",
+  "Muted topics": "म्यूट किए गए विषय",
   "N": "",
-  "Name": "\u0928\u093e\u092e",
+  "Name": "नाम",
+  "Narrow to __- message_recipient__": "",
   "Narrow to stream &quot;__display_recipient__&quot;": "",
   "Narrow to stream &quot;__display_recipient__&quot;, topic &quot;__topic__&quot;": "",
   "Narrow to stream <b>__stream.name__</b>": "",
@@ -324,14 +333,15 @@
   "New members can view complete message history.": "",
   "New password": "",
   "New password is too weak": "",
-  "New private message": "",
-  "New stream message": "",
+  "New private message": "नया निजी संदेश",
+  "New stream message": "नया स्ट्रीम संदेश",
   "New stream notifications:": "",
   "New task": "",
-  "New topic": "",
+  "New topic": "नया विषय",
   "New user notifications:": "",
   "Next week": "",
-  "Night mode": "\u0930\u093e\u0924\u094d\u0930\u0940 \u0938\u094d\u0935\u0930\u0941\u092a",
+  "Night": "",
+  "Night mode": "रात्री स्वरुप",
   "No": "",
   "No bots match your current filter.": "",
   "No changes made.": "",
@@ -346,7 +356,7 @@
   "Note that any bots that you maintain will be disabled.": "",
   "Nothing to preview": "",
   "Notification sound:": "",
-  "Notifications": "\u0938\u0942\u091a\u0928\u093e\u090f\u0902",
+  "Notifications": "सूचनाएं",
   "Notifications are triggered when a message arrives and Zulip isn't in focus or the message is offscreen.": "",
   "Notifications stream changed!": "",
   "Notifications stream disabled!": "",
@@ -358,12 +368,14 @@
   "Only organization administrators can add generic bots": "",
   "Only organization administrators can edit these settings.": "",
   "Only organization administrators can post.": "",
-  "Only organization admins are allowed to post to this stream.": "",
+  "Only organization admins are allowed to post to this stream.": "केवल संगठन व्यवस्थापक को इस स्ट्रीम में पोस्ट करने की अनुमति है।",
   "Optional": "",
+  "Or, to automatically linkify GitHub's <code>org/repo#1234</code> syntax:": "",
   "Organization": "",
   "Organization administrators can change this in the organization settings.": "",
   "Organization avatar": "",
   "Organization description": "",
+  "Organization logo": "",
   "Organization name": "",
   "Organization permissions": "",
   "Organization profile": "",
@@ -372,7 +384,7 @@
   "Other permissions": "",
   "Outgoing webhook message format": "",
   "Owner": "",
-  "Password": "\u092a\u093e\u0938\u0935\u0930\u094d\u0921",
+  "Password": "पासवर्ड",
   "Password is too weak": "",
   "Password should be at least __length__ characters long": "",
   "Pattern": "",
@@ -396,7 +408,6 @@
   "Quote and reply": "",
   "Reactivate": "",
   "Reactivate bot": "",
-  "Regular expression": "",
   "Remind me about this": "",
   "Reminder not set!": "",
   "Reminder set!": "",
@@ -418,13 +429,13 @@
   "Revoke invitation to <span class=\"email\"></span>": "",
   "Revoke now": "",
   "Role": "",
-  "Save": "\u092a\u0930\u093f\u0935\u0930\u094d\u0924\u0928\u094b\u0902 \u0915\u094b \u0938\u0941\u0930\u0915\u094d\u0937\u093f\u0924 \u0915\u0930\u0947\u0902",
+  "Save": "परिवर्तनों को सुरक्षित करें",
   "Save changes": "",
   "Save failed": "",
   "Saved": "",
   "Saved. Please <a class='reload_link'>reload</a> for the change to take effect.": "",
   "Saving": "",
-  "Search": "\u0916\u094b\u091c",
+  "Search": "खोज",
   "Search operators": "",
   "Search results": "",
   "Search subscribers": "",
@@ -435,9 +446,15 @@
   "Send digest emails when I'm away": "",
   "Send email notifications for new logins to my account": "",
   "Send emails introducing Zulip to new users": "",
-  "Send private message": "\u0928\u093f\u091c\u0940 \u0938\u0902\u0926\u0947\u0936 \u092d\u0947\u091c\u0947\u0902",
+  "Send private message": "निजी संदेश भेजें",
   "Sent!": "",
-  "Settings": "\u0938\u0947\u091f\u093f\u0902\u0917\u094d\u0938",
+  "Sent! Scroll down to view your message.": "",
+  "Sent! Your message is outside your current narrow.": "",
+  "Sent! Your message was sent to a stream you have muted.": "",
+  "Sent! Your message was sent to a topic you have muted.": "",
+  "Sent! Your recent message is outside the current search.": "",
+  "Set status to away": "",
+  "Settings": "सेटिंग्स",
   "Setup": "",
   "Setup two factor authentication": "",
   "Show counts for starred messages": "",
@@ -451,7 +468,7 @@
   "Slack's outgoing webhooks": "",
   "Sorry, the file was too large.": "",
   "Star": "",
-  "Stream": "\u0927\u093e\u0930\u093e",
+  "Stream": "धारा",
   "Stream color": "",
   "Stream created recently": "",
   "Stream creation": "",
@@ -465,8 +482,8 @@
   "Stream successfully created!": "",
   "Streams": "",
   "Submit": "",
-  "Subscribe": "",
-  "Subscribed": "\u0938\u0926\u0938\u094d\u092f\u0924\u093e \u0932\u093f\u092f\u093e",
+  "Subscribe": "सदस्यता लें",
+  "Subscribed": "सदस्यता लिया",
   "Subscribed successfully!": "",
   "Subscriber count": "",
   "Subscribers": "",
@@ -487,7 +504,7 @@
   "This action is permanent and cannot be undone. All users will permanently lose access to their Zulip accounts.": "",
   "This is a <span class=\"fa fa-globe\" aria-hidden=\"true\"></span> <b>public stream</b>. Any member of the organization can join without an invitation.": "",
   "This is a <span class=\"fa fa-lock\" aria-hidden=\"true\"></span> <b>private stream</b>. Only people who have been invited can access its content, but any member of the stream can invite others.": "",
-  "This is a private stream": "",
+  "This is a private stream": "यह एक निजी धारा है",
   "This organization is configured to restrict editing of message content to __minutes_to_edit__ minutes after it is sent.": "",
   "This stream is reserved for <strong>announcements</strong>. <br /> Are you sure you want to message all <strong>__count__</strong> people in this stream?": "",
   "Time settings": "",
@@ -496,8 +513,9 @@
   "Today": "",
   "Toggle subscription": "",
   "Tomorrow": "",
-  "Topic": "\u0935\u093f\u0937\u092f",
+  "Topic": "विषय",
   "Topic editing only": "",
+  "Topic muted": "",
   "Try again": "",
   "Two factor authentication": "",
   "Type": "",
@@ -507,8 +525,9 @@
   "Uncheck all": "",
   "Unknown": "",
   "Unless I say otherwise for a particular stream, I want:": "",
+  "Unmute": "",
   "Unmute the stream <b>__stream.name__</b>": "",
-  "Unmute the topic <b>__subject__</b>": "",
+  "Unmute the topic <b>__topic__</b>": "",
   "Unmute the topic <b>__topic_name__</b>": "",
   "Unpin stream <b>__stream.name__</b> from top": "",
   "Unstar": "",
@@ -523,10 +542,13 @@
   "Upload avatar": "",
   "Upload icon": "",
   "Upload image or GIF": "",
+  "Upload logo": "",
   "Upload new avatar": "",
   "Upload new icon": "",
+  "Upload new logo": "",
   "Uploaded files": "",
   "Uploading icon.": "",
+  "Uploading logo.": "",
   "Uploading\u2026": "",
   "User already subscribed.": "",
   "User avatar": "",
@@ -538,7 +560,7 @@
   "User role": "",
   "User settings": "",
   "User(s) invited successfully.": "",
-  "Username": "\u0909\u092a\u092f\u094b\u0917\u0915\u0930\u094d\u0924\u093e \u0928\u093e\u092e",
+  "Username": "उपयोगकर्ता नाम",
   "Username (a-z, 0-9, and dashes only)": "",
   "Users can edit the topic of any message": "",
   "Video chat provider": "",
@@ -546,6 +568,7 @@
   "View file": "",
   "View messages sent": "",
   "View private messages": "",
+  "View private messages to myself": "",
   "View source": "",
   "View source / Edit topic": "",
   "View stream": "",
@@ -571,6 +594,7 @@
   "You are not subscribed to stream __stream__": "",
   "You can send emails to Zulip! Just copy and use this address as an email recipient, and:": "",
   "You cannot create a stream with no subscribers!": "",
+  "You have muted the topic <span class=\"topic\"></span> under the <span class=\"stream\"></span> stream.": "",
   "You have no active bots.": "",
   "You have no inactive bots.": "",
   "You have not muted any topics yet.": "",
@@ -597,11 +621,14 @@
   "__wildcard_mention_token__ (Notify stream)": "",
   "and": "",
   "cookie": "",
+  "group private messages with __recipient__": "",
   "in 1 hour": "",
   "in 20 minutes": "",
   "in 3 hours": "",
   "leafy green vegetable": "",
   "marketing": "",
   "more conversations": "",
-  "more topics": ""
+  "more topics": "",
+  "private messages with __recipient__": "",
+  "private messages with yourself": ""
 }
