--- a/static/locale/it/translations.json
+++ b/static/locale/it/translations.json
@@ -1,7 +1,9 @@
 {
   "\"__file_name__\" was too large; the maximum file size is 25MiB.": "\"__file_name__\" è troppo grosso; la dimensione massima di un file è di 25MiB.",
   "(This user has been deactivated)": "(Questo utente è stato disattivato)",
+  "(away)": "",
   "(no topic)": "(nessun argomento)",
+  "(you)": "",
   "1 day": "1 giorno",
   "1 hour": "1 ora",
   "1 week": "1 settimana",
@@ -15,8 +17,10 @@
   "<p>The stream <b>__stream_name__</b> does not exist.</p><p>Manage your subscriptions <a href='#streams/all'>on your Streams page</a>.</p>": "<p>Il canale <b>__stream_name__</b> non esiste.</p><p>Gestisci le tue sottoscrizioni <a href='#streams/all'>nella tua pagina dei Canali</a>.</p>",
   "<strong>__name__</strong> is not subscribed to this stream. They will not be notified if you mention them.": "<strong>__name__</strong> non è sottoscritto a questo canale. Non riceverà notifiche se lo menzioni.",
   "<strong>__name__</strong> is not subscribed to this stream. They will not be notified unless you subscribe them.": "<strong>__name__</strong> non è sottoscritto a questo canale. Non riceverà notifiche a meno che tu lo sottoscriva.",
+  "A square logo used to brand your Zulip organization.": "",
   "A stream needs to have a name": "Un canale deve avere un nome",
   "A stream with this name already exists": "Esiste già un canale con questo nome",
+  "A wide image, replacing the Zulip logo in the upper left corner of the Zulip apps.": "",
   "API key": "Chiave API",
   "Action": "Azione",
   "Actions": "Azioni",
@@ -69,9 +73,9 @@
   "An hour ago": "Un'ora fa",
   "An unknown error occurred.": "Errore sconosciuto.",
   "Announce stream": "Canale degli annunci",
+  "Any member of this organization can add custom emoji.": "",
   "Any time": "Sempre",
   "Anyone in this organization can add bots": "Chiunque nell'organizzazione può aggiungere bot\n",
-  "Anyone in this organization can add custom emoji.": "Chiunque in quest'organizzazione può aggiungere emoji personalizzati.",
   "Apply this change to all current stream subscriptions?": "Applicare la modifica a tutte i canali sottoscritti?",
   "Are invitations required for joining the organization?": "E' richiesto un invito per entrare nell'organizzazione?",
   "Are you sure you want to create stream '__stream_name__' and subscribe __count__ users to it?": "Sei sicuro di voler creare il canale '__stream_name__' e sottoscrivere __count__ utenti?",
@@ -110,6 +114,7 @@
   "Choose avatar": "Scegli l'avatar",
   "Choose custom color": "Scegli un colore",
   "Clear avatar": "Cancella l'avatar",
+  "Clear away status": "",
   "Clear emoji image": "Cancella l'immagine dell'emoji",
   "Click anywhere on a message to reply.": "Clicca in un qualunque punto di un messaggio per rispondere.",
   "Click outside the input box to save. We\\'ll automatically notify anyone that was added or removed.": "Clicca fuori dall'area di selezione per salvare. Notificheremo automaticamente chiunque sia stato aggiunto o rimosso.",
@@ -139,6 +144,8 @@
   "Custom profile fields": "Campi profilo personalizzati",
   "Customize avatar": "Personalizza avatar",
   "Date uploaded": "Data di caricamento",
+  "Day": "",
+  "Day mode": "",
   "Deactivate": "Disattiva",
   "Deactivate account": "Disattiva account",
   "Deactivate now": "Disattiva ora",
@@ -156,6 +163,7 @@
   "Delete draft": "Cancella bozza",
   "Delete file": "Cancella file",
   "Delete icon": "Cancella icona",
+  "Delete logo": "",
   "Delete message": "Cancella messaggio",
   "Delete stream": "Cancella canale",
   "Delete user group": "Cancella gruppo di utenti",
@@ -201,7 +209,6 @@
   "Error adding subscription": "Errore nell'aggiunta della sottoscrizione",
   "Error checking subscription": "Errore nel controllo della sottoscrizione",
   "Error creating stream": "Errore nella creazione del canale",
-  "Error deactivating account": "Errore nella disattivazione dell'account",
   "Error deleting message": "Errore nella cancellazione del messaggio",
   "Error fetching message edit history": "Errore nel recuperare la cronologia delle modifiche al messaggio",
   "Error getting API key": "Errore nel recuperare le chiavi API",
@@ -211,7 +218,9 @@
   "Error removing subscription": "Errore nella cancellazione della sottoscrizione",
   "Error removing user from this stream.": "Errore nella rimozione dell'utente dal canale.",
   "Error saving edit": "Errore nel salvataggio delle modifiche",
+  "Error: Cannot deactivate the only organization administrator.": "",
   "Estimated messages per week": "Messaggi stimati per settimana",
+  "External link": "",
   "Failed": "Fallito",
   "Failed to change notifications stream!": "Errore nel cambiare il flusso delle notifiche!",
   "Failed to change signup notifications stream!": "Le notifiche del canale non sono state modificate!",
@@ -237,6 +246,7 @@
   "Go back": "Indietro",
   "Got it!": "Capito!",
   "Guest": "Ospite",
+  "Guest users cannot edit custom emoji.": "",
   "High contrast mode": "Modalità ad alto conrasto",
   "Hint": "Suggerimento",
   "Hint (up to 80 characters)": "Suggerimento (fino a 80 caratteri)",
@@ -280,6 +290,7 @@
   "Member": "Membro",
   "Members and admins": "Membri e amministratori",
   "Members and admins, but only admins can add generic bots": "Membri e amministratori, ma solo gli amministratori possono aggiungere bot generici",
+  "Members, admins, and guests": "",
   "Mentioned in": "Menzionato in",
   "Message actions": "Azioni sui messaggi",
   "Message editing": "Modifica dei messaggi",
@@ -293,18 +304,20 @@
   "Mobile notifications always (even when online)": "Notifiche su cellulare sempre (anche quando è online)",
   "Mobile notifications when offline": "Notifiche su cellulare quando offline",
   "Mobile push notifications are not configured on this server.": "Le notifiche push su cellulare non sono configurate su questo server.",
+  "More details are available <a href=\"/help/add-a-custom-linkification-filter\" target=\"_blank\">in the Help Center article</a>.": "",
   "More than 2 weeks ago": "Più di 2 settimane fa",
   "Mute stream": "Zittisci il canale",
   "Mute the stream <b>__stream.name__</b>": "Zittisci il canale <b>__stream.name__</b>",
-  "Mute the topic <b>__subject__</b>": "Zittisci l'argomento <b>__subject__</b>",
+  "Mute the topic <b>__topic__</b>": "",
   "Mute the topic <b>__topic_name__</b>": "Zittisci l'argomento <b>__topic_name__</b>",
   "Mute topic": "Silenzia l'argomento",
   "Muted streams don't show up in \\\"All messages\\\" or generate notifications unless you are mentioned.": "I canali silenziosi non appaiono in \\\"All messages\\\" e non generano notifiche a meno che tu non sia menzionato.",
   "Muted topics": "Argomenti silenziosi",
   "N": "N",
   "Name": "Nome",
+  "Narrow to __- message_recipient__": "",
   "Narrow to stream &quot;__display_recipient__&quot;": "Limita al canale &quot;__display_recipient__&quot;",
-  "Narrow to stream &quot;__display_recipient__&quot;, topic &quot;__subject__&quot;": "Limita al canale &quot;__display_recipient__&quot;, topic &quot;__subject__&quot;",
+  "Narrow to stream &quot;__display_recipient__&quot;, topic &quot;__topic__&quot;": "",
   "Narrow to stream <b>__stream.name__</b>": "Limita al canale <b>__stream.name__</b>",
   "Narrow to topic <b>__topic_name__</b>": "Limita all'argomento <b>__topic_name__</b>",
   "Narrow to your private messages with __display_reply_to__": "Riduci ai tuoi messaggi privati con __display_reply_to__",
@@ -327,6 +340,7 @@
   "New topic": "Nuovo argomento",
   "New user notifications:": "Nuove notifiche all'utente:",
   "Next week": "Settimana successiva",
+  "Night": "",
   "Night mode": "Modalità notturna",
   "No": "No",
   "No bots match your current filter.": "Nessun bot corrisponde al tuo filtro.",
@@ -341,6 +355,7 @@
   "None": "Nessuno",
   "Note that any bots that you maintain will be disabled.": "Tutti i bot che mantieni saranno disabilitati.",
   "Nothing to preview": "Nulla da mostrare",
+  "Notification sound:": "",
   "Notifications": "Notifiche",
   "Notifications are triggered when a message arrives and Zulip isn't in focus or the message is offscreen.": "Le notifiche si attivano quando arriva un messaggio e Zulip non ha il focus, oppure il messaggio è fuori dallo schermo.",
   "Notifications stream changed!": "Canale delle notifiche modificato!",
@@ -355,10 +370,12 @@
   "Only organization administrators can post.": "Solo gli amministratori possono inviare messaggi",
   "Only organization admins are allowed to post to this stream.": "Solo gli amministratori sono abilitati a scrivere su questo canale.",
   "Optional": "Opzionale",
+  "Or, to automatically linkify GitHub's <code>org/repo#1234</code> syntax:": "",
   "Organization": "Organizzazione",
   "Organization administrators can change this in the organization settings.": "Gli amministratori possono possono modificarlo nelle impostazioni dell'organizzazione",
   "Organization avatar": "Avatar dell'organizzazione",
   "Organization description": "Descrizione dell'organizzazione",
+  "Organization logo": "",
   "Organization name": "Nome dell'organizzazione",
   "Organization permissions": "Permessi dell'organizzazione",
   "Organization profile": "Profilo dell'organizzazione",
@@ -374,6 +391,7 @@
   "People to add": "Persone da aggiungere",
   "Pin stream <b>__stream.name__</b> to top": "Mantieni il canale  <b>__stream.name__</b> bloccato in cima",
   "Pin stream to top of left sidebar": "Mantieni il canale bloccato in cima all'area di sinistra",
+  "Play sound": "",
   "Please just upload one file.": "Per favore carica un solo file.",
   "Please re-enter your password to confirm your identity.": "Per favore inserisci di nuovo la password per confermare la tua identità.",
   "Please specify a date or time": "Per favore specifica una data o ora",
@@ -390,7 +408,6 @@
   "Quote and reply": "Cita e rispondi",
   "Reactivate": "Riattiva",
   "Reactivate bot": "Riattiva il bot",
-  "Regular expression": "Espressione regolare",
   "Remind me about this": "Ricordamelo",
   "Reminder not set!": "Promemoria non impostato!",
   "Reminder set!": "Promemoria impostato!",
@@ -431,6 +448,12 @@
   "Send emails introducing Zulip to new users": "Invia email per presentare Zulip ai nuovi utenti",
   "Send private message": "Invia messaggio privato",
   "Sent!": "Inviato!",
+  "Sent! Scroll down to view your message.": "",
+  "Sent! Your message is outside your current narrow.": "",
+  "Sent! Your message was sent to a stream you have muted.": "",
+  "Sent! Your message was sent to a topic you have muted.": "",
+  "Sent! Your recent message is outside the current search.": "",
+  "Set status to away": "",
   "Settings": "Impostazioni",
   "Setup": "Imposta",
   "Setup two factor authentication": "Imposta autenticazione a due fattori",
@@ -479,7 +502,7 @@
   "There are no messages to reply to.": "Non ci sono messaggi a cui rispondere.",
   "These settings are explained in detail in the <a target=\"_blank\" href=\"/help/stream-permissions\">help center</a>.": "Queste impostazioni sono spiegate in dettaglio nell' <a target=\"_blank\" href=\"/help/stream-permissions\">aiuto</a>.",
   "This action is permanent and cannot be undone. All users will permanently lose access to their Zulip accounts.": "Quest'azione è irreversibile e non può essere annullata. Tutti gli utenti perderanno definitivamente l'accesso ai loro account Zulip.",
-  "This is a <span class=\"fa fa-globe\" aria-hidden=\"true\"></span> <b>public stream</b>. Anybody in your organization can join.": "Questo è un <span class=\"fa fa-globe\" aria-hidden=\"true\"></span> canale pubblico</b>. Chiunque nella tua organizzazione può partecipare.",
+  "This is a <span class=\"fa fa-globe\" aria-hidden=\"true\"></span> <b>public stream</b>. Any member of the organization can join without an invitation.": "",
   "This is a <span class=\"fa fa-lock\" aria-hidden=\"true\"></span> <b>private stream</b>. Only people who have been invited can access its content, but any member of the stream can invite others.": "Questo è un <span class=\"fa fa-lock\" aria-hidden=\"true\"></span> <b>canale privato</b>. Solo gil utenti che sono stati invitati possono accedere al contenuto, ma tutti i membri de canale possono invitarne altri.",
   "This is a private stream": "Questo è un canale privato",
   "This organization is configured to restrict editing of message content to __minutes_to_edit__ minutes after it is sent.": "Quest'organizzazione è configurata per limitare la modifica del contenuto dei messaggi a __minutes_to_edit__ minuti dopo l'invio.",
@@ -492,6 +515,7 @@
   "Tomorrow": "Domani",
   "Topic": "Argomento",
   "Topic editing only": "Modifica solo degli argomenti",
+  "Topic muted": "Argomento silenziato",
   "Try again": "Riprova",
   "Two factor authentication": "Autenticazione a due fattori",
   "Type": "Tipo",
@@ -501,8 +525,9 @@
   "Uncheck all": "Deseleziona tutto",
   "Unknown": "Sconosciuto",
   "Unless I say otherwise for a particular stream, I want:": "Se no specifico niente per un particolare canale, voglio>",
+  "Unmute": "",
   "Unmute the stream <b>__stream.name__</b>": "Riattiva audio per il canale  <b>__stream.name__</b>",
-  "Unmute the topic <b>__subject__</b>": "Riattiva audio per l'argomento  <b>__subject__</b>",
+  "Unmute the topic <b>__topic__</b>": "",
   "Unmute the topic <b>__topic_name__</b>": "Riattiva audio per l'argomento  <b>__topic_name__</b>",
   "Unpin stream <b>__stream.name__</b> from top": "Non mantenere più <b>__stream.name__</b> bloccato in cima",
   "Unstar": "Rimuovi preferito",
@@ -517,10 +542,13 @@
   "Upload avatar": "Carica avatar",
   "Upload icon": "Carica icona",
   "Upload image or GIF": "Carica immagine o GIF",
+  "Upload logo": "",
   "Upload new avatar": "Carica un nuovo avatar",
   "Upload new icon": "Carica una nuova icona",
+  "Upload new logo": "",
   "Uploaded files": "File caricati",
   "Uploading icon.": "Caricamento icona.",
+  "Uploading logo.": "",
   "Uploading\u2026": "Caricamento...",
   "User already subscribed.": "Utente già sottoscritto",
   "User avatar": "Avatar dell'utente",
@@ -540,6 +568,7 @@
   "View file": "Mostra file",
   "View messages sent": "Mostra messaggi inviati",
   "View private messages": "Mostra messaggi privati",
+  "View private messages to myself": "",
   "View source": "Mostra sorgente",
   "View source / Edit topic": "Mostra sorgente / modifica argomento",
   "View stream": "Vedi il canale",
@@ -550,6 +579,7 @@
   "Who can add bots": "Chi può aggiungere bot",
   "Who can add custom emoji": "Chi può aggiungere emoji personalizzati",
   "Who can create streams": "Chi può creare canali",
+  "Who can see users email addresses": "",
   "Working\u2026": "Elaborazione...",
   "Yes": "Sì",
   "Yes, delete this stream": "Sì, cancella questo canale",
@@ -564,6 +594,7 @@
   "You are not subscribed to stream __stream__": "Non sei sottoscritto al canale __stream__",
   "You can send emails to Zulip! Just copy and use this address as an email recipient, and:": "Puoi inviare mail a Zulip! Basta copiare questo indirizzo come destinatario dell'email, e:",
   "You cannot create a stream with no subscribers!": "Non puoi creare un canale senza sottoscrittori!",
+  "You have muted the topic <span class=\"topic\"></span> under the <span class=\"stream\"></span> stream.": "",
   "You have no active bots.": "Non hai bot attivi.",
   "You have no inactive bots.": "Non hai bot inattivi.",
   "You have not muted any topics yet.": "Non hai ancora silenziato nessun argomento.",
@@ -590,11 +621,14 @@
   "__wildcard_mention_token__ (Notify stream)": "__wildcard_mention_token__ (Canale di notifica)",
   "and": "e",
   "cookie": "cookie",
+  "group private messages with __recipient__": "",
   "in 1 hour": "fra 1 ora",
   "in 20 minutes": "fra 20 minuti",
   "in 3 hours": "fra 3 ore",
   "leafy green vegetable": "Verdura a foglia verde",
   "marketing": "marketing",
   "more conversations": "Altre conversazioni",
-  "more topics": "Altri argomenti"
+  "more topics": "Altri argomenti",
+  "private messages with __recipient__": "",
+  "private messages with yourself": ""
 }
