--- a/static/locale/ja/translations.json
+++ b/static/locale/ja/translations.json
@@ -1,7 +1,9 @@
 {
   "\"__file_name__\" was too large; the maximum file size is 25MiB.": "\"__file_name__\" が大きすぎます。最大ファイルサイズは 25MiB です。",
   "(This user has been deactivated)": "ユーザーは無効化されています",
+  "(away)": "",
   "(no topic)": "(無名トピック)",
+  "(you)": "",
   "1 day": "1日",
   "1 hour": "1時間",
   "1 week": "1週間",
@@ -15,8 +17,10 @@
   "<p>The stream <b>__stream_name__</b> does not exist.</p><p>Manage your subscriptions <a href='#streams/all'>on your Streams page</a>.</p>": "",
   "<strong>__name__</strong> is not subscribed to this stream. They will not be notified if you mention them.": "<strong>__name__</strong>はこのストリームを購読してなくてメンションで通知されません。",
   "<strong>__name__</strong> is not subscribed to this stream. They will not be notified unless you subscribe them.": "",
+  "A square logo used to brand your Zulip organization.": "",
   "A stream needs to have a name": "ストリームには名前が必要です",
   "A stream with this name already exists": "このストリーム名はすでに存在します",
+  "A wide image, replacing the Zulip logo in the upper left corner of the Zulip apps.": "",
   "API key": "APIキー",
   "Action": "アクション",
   "Actions": "アクション",
@@ -69,9 +73,9 @@
   "An hour ago": "1時間前",
   "An unknown error occurred.": "不明なエラーが発生しました。",
   "Announce stream": "アナウンスストリーム",
+  "Any member of this organization can add custom emoji.": "",
   "Any time": "いつでも可能",
   "Anyone in this organization can add bots": "この組織のメンバーはボットを追加できます",
-  "Anyone in this organization can add custom emoji.": "この組織のメンバーはカスタム絵文字を追加できます。",
   "Apply this change to all current stream subscriptions?": "",
   "Are invitations required for joining the organization?": "この組織に参加しに招待が必要ですか？",
   "Are you sure you want to create stream '__stream_name__' and subscribe __count__ users to it?": "本当に '__stream_name__' ストリームを作成して、そのストリームを __count__ ユーザーに購読しますか？",
@@ -110,6 +114,7 @@
   "Choose avatar": "アバターを選択",
   "Choose custom color": "色を選択",
   "Clear avatar": "アバターを消去",
+  "Clear away status": "",
   "Clear emoji image": "絵文字画像を消去",
   "Click anywhere on a message to reply.": "",
   "Click outside the input box to save. We\\'ll automatically notify anyone that was added or removed.": "",
@@ -139,6 +144,8 @@
   "Custom profile fields": "",
   "Customize avatar": "アバターをカスタマイズ",
   "Date uploaded": "アップロード日時",
+  "Day": "",
+  "Day mode": "",
   "Deactivate": "無効",
   "Deactivate account": "アカウントを無効化",
   "Deactivate now": "すぐに無効にする",
@@ -156,6 +163,7 @@
   "Delete draft": "下書きを削除",
   "Delete file": "ファイルを削除",
   "Delete icon": "アイコンを削除",
+  "Delete logo": "",
   "Delete message": "メッセージを削除",
   "Delete stream": "ストリームを削除",
   "Delete user group": "ユーザーグループを削除する",
@@ -201,7 +209,6 @@
   "Error adding subscription": "購読の追加に失敗",
   "Error checking subscription": "購読のチェックに失敗",
   "Error creating stream": "ストリーム作成に失敗",
-  "Error deactivating account": "アカウントの無効化に失敗",
   "Error deleting message": "メッセージの削除に失敗",
   "Error fetching message edit history": "メッセージの編集履歴の取得に失敗",
   "Error getting API key": "APIキーの取得に失敗",
@@ -211,7 +218,9 @@
   "Error removing subscription": "購読解除に失敗",
   "Error removing user from this stream.": "このストリームからユーザーを削除するのに失敗",
   "Error saving edit": "編集内容の保存に失敗",
+  "Error: Cannot deactivate the only organization administrator.": "",
   "Estimated messages per week": "",
+  "External link": "",
   "Failed": "失敗しました",
   "Failed to change notifications stream!": "通知するストリームの変更に失敗しました！",
   "Failed to change signup notifications stream!": "",
@@ -237,6 +246,7 @@
   "Go back": "戻る",
   "Got it!": "できた！",
   "Guest": "",
+  "Guest users cannot edit custom emoji.": "",
   "High contrast mode": "ハイコントラストモード",
   "Hint": "ヒント",
   "Hint (up to 80 characters)": "ヒント（80文字以下）",
@@ -280,6 +290,7 @@
   "Member": "メンバー",
   "Members and admins": "",
   "Members and admins, but only admins can add generic bots": "",
+  "Members, admins, and guests": "",
   "Mentioned in": "メンション",
   "Message actions": "メッセージの操作",
   "Message editing": "メッセージ編集",
@@ -293,18 +304,20 @@
   "Mobile notifications always (even when online)": "",
   "Mobile notifications when offline": "",
   "Mobile push notifications are not configured on this server.": "",
+  "More details are available <a href=\"/help/add-a-custom-linkification-filter\" target=\"_blank\">in the Help Center article</a>.": "",
   "More than 2 weeks ago": "",
   "Mute stream": "ストリームをミュート",
   "Mute the stream <b>__stream.name__</b>": "<b>__stream.name__</b>ストリームをミュート",
-  "Mute the topic <b>__subject__</b>": "<b>__subject__</b>トピックをミュート",
+  "Mute the topic <b>__topic__</b>": "",
   "Mute the topic <b>__topic_name__</b>": "<b>__topic_name__</b>トピックをミュート",
   "Mute topic": "トピックをミュート",
   "Muted streams don't show up in \\\"All messages\\\" or generate notifications unless you are mentioned.": "",
   "Muted topics": "ミュート中のトピック",
   "N": "",
   "Name": "名前",
+  "Narrow to __- message_recipient__": "",
   "Narrow to stream &quot;__display_recipient__&quot;": "&quot;__display_recipient__&quot;ストリームだけ表示",
-  "Narrow to stream &quot;__display_recipient__&quot;, topic &quot;__subject__&quot;": "ストリーム&quot;__display_recipient__&quot;のトピック&quot;__subject__&quot;だけ表示",
+  "Narrow to stream &quot;__display_recipient__&quot;, topic &quot;__topic__&quot;": "",
   "Narrow to stream <b>__stream.name__</b>": "<b>__stream.name__</b>ストリームだけ表示",
   "Narrow to topic <b>__topic_name__</b>": "<b>__topic_name__</b>トピックだけ表示",
   "Narrow to your private messages with __display_reply_to__": "__display_reply_to__とのプライベートメッセージだけ表示",
@@ -327,6 +340,7 @@
   "New topic": "新しいトピック",
   "New user notifications:": "新しいストリーム通知：",
   "Next week": "来週",
+  "Night": "",
   "Night mode": "夜間モード",
   "No": "いいえ",
   "No bots match your current filter.": "ボットがフィルターに一致しません。",
@@ -341,6 +355,7 @@
   "None": "なし",
   "Note that any bots that you maintain will be disabled.": "あなたがメンテナンスしているボットが無効になることに注意してください。",
   "Nothing to preview": "プレビューするものがありません。",
+  "Notification sound:": "",
   "Notifications": "通知",
   "Notifications are triggered when a message arrives and Zulip isn't in focus or the message is offscreen.": "メッセージが届いてZulipがフォーカスしない、または画面上に表示されないときに通知されます。",
   "Notifications stream changed!": "通知するストリームが変更されました！",
@@ -355,10 +370,12 @@
   "Only organization administrators can post.": "",
   "Only organization admins are allowed to post to this stream.": "",
   "Optional": "任意",
+  "Or, to automatically linkify GitHub's <code>org/repo#1234</code> syntax:": "",
   "Organization": "組織",
   "Organization administrators can change this in the organization settings.": "",
   "Organization avatar": "組織のアバター",
   "Organization description": "",
+  "Organization logo": "",
   "Organization name": "組織名",
   "Organization permissions": "組織の権限",
   "Organization profile": "組織のプロフィール",
@@ -374,6 +391,7 @@
   "People to add": "追加する人",
   "Pin stream <b>__stream.name__</b> to top": "ストリーム<b>__stream.name__</b>を上部に固定",
   "Pin stream to top of left sidebar": "左サイドバーのトップにストリームを固定",
+  "Play sound": "",
   "Please just upload one file.": "ファイルを1つだけアップロードしてください。",
   "Please re-enter your password to confirm your identity.": "パスワードを確認するために再入力してください。",
   "Please specify a date or time": "日付や時刻を指定してください",
@@ -390,7 +408,6 @@
   "Quote and reply": "引用して返信",
   "Reactivate": "再有効化",
   "Reactivate bot": "ボットを再有効化",
-  "Regular expression": "正規表現",
   "Remind me about this": "",
   "Reminder not set!": "",
   "Reminder set!": "",
@@ -431,6 +448,12 @@
   "Send emails introducing Zulip to new users": "",
   "Send private message": "プライベートメッセージを送信",
   "Sent!": "送信しました！",
+  "Sent! Scroll down to view your message.": "",
+  "Sent! Your message is outside your current narrow.": "",
+  "Sent! Your message was sent to a stream you have muted.": "",
+  "Sent! Your message was sent to a topic you have muted.": "",
+  "Sent! Your recent message is outside the current search.": "",
+  "Set status to away": "",
   "Settings": "設定",
   "Setup": "",
   "Setup two factor authentication": "２要素認証を設定",
@@ -479,7 +502,7 @@
   "There are no messages to reply to.": "",
   "These settings are explained in detail in the <a target=\"_blank\" href=\"/help/stream-permissions\">help center</a>.": "この設定は<a target=\"_blank\" href=\"/help/stream-permissions\">ヘルプセンター</a>に詳しく説明されます。",
   "This action is permanent and cannot be undone. All users will permanently lose access to their Zulip accounts.": "",
-  "This is a <span class=\"fa fa-globe\" aria-hidden=\"true\"></span> <b>public stream</b>. Anybody in your organization can join.": "これは<span class=\"fa fa-globe\" aria-hidden=\"true\"></span> <b>公開ストリーム</b>です。この組織の人はだれでも参加できます。",
+  "This is a <span class=\"fa fa-globe\" aria-hidden=\"true\"></span> <b>public stream</b>. Any member of the organization can join without an invitation.": "",
   "This is a <span class=\"fa fa-lock\" aria-hidden=\"true\"></span> <b>private stream</b>. Only people who have been invited can access its content, but any member of the stream can invite others.": "",
   "This is a private stream": "このストリームは非公開です",
   "This organization is configured to restrict editing of message content to __minutes_to_edit__ minutes after it is sent.": "この組織は、送信後 __minutes_to_edit__ 分間メッセージの編集ができないように設定されています。",
@@ -492,6 +515,7 @@
   "Tomorrow": "明日",
   "Topic": "トピック",
   "Topic editing only": "トピックだけ編集できます。",
+  "Topic muted": "",
   "Try again": "再試行",
   "Two factor authentication": "２要素認証",
   "Type": "",
@@ -501,8 +525,9 @@
   "Uncheck all": "すべて選択解除",
   "Unknown": "不明",
   "Unless I say otherwise for a particular stream, I want:": "個別に設定していないストリームには以下の設定を使います。",
+  "Unmute": "",
   "Unmute the stream <b>__stream.name__</b>": "<b>__stream.name__</b>ストリームのミュートを解除",
-  "Unmute the topic <b>__subject__</b>": "トピック<b>__subject__</b>をミュート",
+  "Unmute the topic <b>__topic__</b>": "",
   "Unmute the topic <b>__topic_name__</b>": "<b>__topic_name__</b>トピックのミュートを解除",
   "Unpin stream <b>__stream.name__</b> from top": "ストリーム<b>__stream.name__</b>を上部に固定しない",
   "Unstar": "スター外し",
@@ -517,10 +542,13 @@
   "Upload avatar": "アバターをアップロード",
   "Upload icon": "アイコンをアップロード",
   "Upload image or GIF": "画像やGIFをアップロード",
+  "Upload logo": "",
   "Upload new avatar": "新たにアバターをアップロード",
   "Upload new icon": "新しいアイコンをアップロード",
+  "Upload new logo": "",
   "Uploaded files": "アップロードしたファイル",
   "Uploading icon.": "アイコンをアップロードしています。",
+  "Uploading logo.": "",
   "Uploading\u2026": "アップロード中...",
   "User already subscribed.": "ユーザーはすでに購読済みです。",
   "User avatar": "アバター",
@@ -540,6 +568,7 @@
   "View file": "ファイルを表示",
   "View messages sent": "送信済みメッセージを表示",
   "View private messages": "プライベートメッセージを表示",
+  "View private messages to myself": "",
   "View source": "ソースを表示",
   "View source / Edit topic": "ソースを表示 / トピックを編集",
   "View stream": "ストリームを表示",
@@ -550,6 +579,7 @@
   "Who can add bots": "ボット追加許可",
   "Who can add custom emoji": "カスタム絵文字追加許可",
   "Who can create streams": "ストリーム作成許可",
+  "Who can see users email addresses": "",
   "Working\u2026": "処理中...",
   "Yes": "はい",
   "Yes, delete this stream": "はい、このストリームを削除します",
@@ -564,6 +594,7 @@
   "You are not subscribed to stream __stream__": "__stream__ ストリームを購読していません。",
   "You can send emails to Zulip! Just copy and use this address as an email recipient, and:": "Zulipへメールを送信できます。このメールアドレスをコピーしてメールの宛先にしてください。",
   "You cannot create a stream with no subscribers!": "",
+  "You have muted the topic <span class=\"topic\"></span> under the <span class=\"stream\"></span> stream.": "",
   "You have no active bots.": "オンラインのボットがありません。",
   "You have no inactive bots.": "オフラインのボットがありません。",
   "You have not muted any topics yet.": "トピックをミュートしていません。",
@@ -590,11 +621,14 @@
   "__wildcard_mention_token__ (Notify stream)": "",
   "and": "と",
   "cookie": "クッキー",
+  "group private messages with __recipient__": "",
   "in 1 hour": "1時間後に",
   "in 20 minutes": "20分後に",
   "in 3 hours": "3時間後に",
   "leafy green vegetable": "ホウレンソウ",
   "marketing": "経理部",
   "more conversations": "もっと会話を見る",
-  "more topics": "もっとトピックを見る"
+  "more topics": "もっとトピックを見る",
+  "private messages with __recipient__": "",
+  "private messages with yourself": ""
 }
