--- a/static/locale/pt/translations.json
+++ b/static/locale/pt/translations.json
@@ -1,7 +1,9 @@
 {
   "\"__file_name__\" was too large; the maximum file size is 25MiB.": "Arquivo \"__file_name__\" muito grande; o tamanho máximo deve ser 25MB.",
   "(This user has been deactivated)": "(Este usuário foi desativado)",
+  "(away)": "",
   "(no topic)": "(sem tópico)",
+  "(you)": "",
   "1 day": "1 dia",
   "1 hour": "1 hora",
   "1 week": "1 semana",
@@ -15,8 +17,10 @@
   "<p>The stream <b>__stream_name__</b> does not exist.</p><p>Manage your subscriptions <a href='#streams/all'>on your Streams page</a>.</p>": "<p>O fluxo <b>__stream_name__</b> não existe.</p><p>Gerencie suas inscrições <a href='#streams/all'>em sua página de Fluxos</a>.</p>",
   "<strong>__name__</strong> is not subscribed to this stream. They will not be notified if you mention them.": "<strong>__name__</strong>não está inscrito para este fluxo. Eles não serão notificados se você não menciona-los.",
   "<strong>__name__</strong> is not subscribed to this stream. They will not be notified unless you subscribe them.": "<strong>__name__</strong> não estão inscritos neste fluxo. Eles não serão notificados a menos que você os inscreva.",
+  "A square logo used to brand your Zulip organization.": "",
   "A stream needs to have a name": "Um fluxo precisa ter um nome",
   "A stream with this name already exists": "Um fluxo com esse nome já existe",
+  "A wide image, replacing the Zulip logo in the upper left corner of the Zulip apps.": "",
   "API key": "Chave API",
   "Action": "Ação",
   "Actions": "Ações",
@@ -69,9 +73,9 @@
   "An hour ago": "Uma hora atrás",
   "An unknown error occurred.": "Ocorreu um erro desconhecido.",
   "Announce stream": "Fluxo de anúncio",
+  "Any member of this organization can add custom emoji.": "",
   "Any time": "A qualquer momento",
   "Anyone in this organization can add bots": "Qualquer um nessa organização pode adicionar bots",
-  "Anyone in this organization can add custom emoji.": "Qualquer um nessa organização pode adicionar emoji personalizado",
   "Apply this change to all current stream subscriptions?": "Aplicar esta alteração a todas as inscrições de fluxo atuais?",
   "Are invitations required for joining the organization?": "Convites são necessários para ingressar na organização?",
   "Are you sure you want to create stream '__stream_name__' and subscribe __count__ users to it?": "Tem certeza de que deseja criar o fluxo '__stream_name__' e inscrever __count__ usuários nele?",
@@ -110,6 +114,7 @@
   "Choose avatar": "Escolher avatar",
   "Choose custom color": "Escolher cor personalizada",
   "Clear avatar": "Remover avatar",
+  "Clear away status": "",
   "Clear emoji image": "Remover imagem do emoji",
   "Click anywhere on a message to reply.": "Clique em qualquer lugar na mensagem para responder.",
   "Click outside the input box to save. We\\'ll automatically notify anyone that was added or removed.": "Clique fora da caixa de entrada para salvar. Notificaremos automaticamente quem foi adicionado ou removido.",
@@ -139,6 +144,8 @@
   "Custom profile fields": "Personalizar campos de perfil",
   "Customize avatar": "Personalizar avatar",
   "Date uploaded": "Data de envio",
+  "Day": "",
+  "Day mode": "",
   "Deactivate": "Desativar",
   "Deactivate account": "Conta desativada",
   "Deactivate now": "Desativar agora",
@@ -156,6 +163,7 @@
   "Delete draft": "Excluir rascunho",
   "Delete file": "Excluir arquivo",
   "Delete icon": "Excluir ícone",
+  "Delete logo": "",
   "Delete message": "Excluir mensagem",
   "Delete stream": "Excluir fluxo",
   "Delete user group": "Excluir grupo de usuário",
@@ -201,7 +209,6 @@
   "Error adding subscription": "Erro ao adicionar inscrição",
   "Error checking subscription": "Erro ao verificar inscrição",
   "Error creating stream": "Erro ao criar fluxo",
-  "Error deactivating account": "Erro ao desativar conta",
   "Error deleting message": "Erro ao excluir mensagem",
   "Error fetching message edit history": "Erro ao buscar o histórico de edição de mensagens",
   "Error getting API key": "Erro ao obter a chave API",
@@ -211,7 +218,9 @@
   "Error removing subscription": "Erro ao remover inscrição",
   "Error removing user from this stream.": "Erro ao remover usuário do fluxo",
   "Error saving edit": "Erro ao salvar edição",
+  "Error: Cannot deactivate the only organization administrator.": "",
   "Estimated messages per week": "Mensagens estimadas por semana",
+  "External link": "",
   "Failed": "Falha",
   "Failed to change notifications stream!": "Falha ao alterar fluxo de notificações!",
   "Failed to change signup notifications stream!": "Falha ao alterar o fluxo de alterações de inscrição.",
@@ -237,6 +246,7 @@
   "Go back": "Voltar",
   "Got it!": "Consegui!",
   "Guest": "Convidado",
+  "Guest users cannot edit custom emoji.": "",
   "High contrast mode": "Modo de alto contraste",
   "Hint": "Dica",
   "Hint (up to 80 characters)": "Dica (até 80 caracteres)",
@@ -280,6 +290,7 @@
   "Member": "Membro",
   "Members and admins": "Membros e administradores",
   "Members and admins, but only admins can add generic bots": "Membros e administradores, mas apenas administradores podem adicionar bots genéricos",
+  "Members, admins, and guests": "",
   "Mentioned in": "Mencionado em",
   "Message actions": "Ações de mensagem",
   "Message editing": "Edição de mensagens",
@@ -293,18 +304,20 @@
   "Mobile notifications always (even when online)": "Notificações móveis sempre (mesmo quando online)",
   "Mobile notifications when offline": "Notificações móveis quando offline",
   "Mobile push notifications are not configured on this server.": "As notificações móveis via push não estão configuradas neste servidor.",
+  "More details are available <a href=\"/help/add-a-custom-linkification-filter\" target=\"_blank\">in the Help Center article</a>.": "",
   "More than 2 weeks ago": "Mais que 2 semanas atrás",
   "Mute stream": "Silenciar fluxo",
   "Mute the stream <b>__stream.name__</b>": "Silenciar o fluxo <b>__stream.name__</b>",
-  "Mute the topic <b>__subject__</b>": "Silenciar o tópico <b>__subject__</b>",
+  "Mute the topic <b>__topic__</b>": "",
   "Mute the topic <b>__topic_name__</b>": "Silenciar o tópico <b>__topic_name__</b>",
   "Mute topic": "Silenciar tópico",
   "Muted streams don't show up in \\\"All messages\\\" or generate notifications unless you are mentioned.": "Fluxos silenciados não aparecem em \\\"Todas as mensagens \\\" ou gera notificações a menos que você seja mencionado.",
   "Muted topics": "Silenciar tópicos",
   "N": "N",
   "Name": "Nome",
+  "Narrow to __- message_recipient__": "",
   "Narrow to stream &quot;__display_recipient__&quot;": "Limitar ao fluxo &quot;__display_recipient__&quot;",
-  "Narrow to stream &quot;__display_recipient__&quot;, topic &quot;__subject__&quot;": "Limitar ao fluxo quot;__display_recipient__&quot;, tópico &quot;__subject__&quot;",
+  "Narrow to stream &quot;__display_recipient__&quot;, topic &quot;__topic__&quot;": "",
   "Narrow to stream <b>__stream.name__</b>": "Limitar ao fluxo <b>__stream.name__</b>",
   "Narrow to topic <b>__topic_name__</b>": "Limitar ao tópico <b>__topic_name__</b>",
   "Narrow to your private messages with __display_reply_to__": "Limitar às suas mensagens privadas com __display_reply_to__",
@@ -327,6 +340,7 @@
   "New topic": "Novo tópico",
   "New user notifications:": "Novas notificações de usuário:",
   "Next week": "Próxima semana",
+  "Night": "",
   "Night mode": "Modo noturno",
   "No": "Não",
   "No bots match your current filter.": "Nenhum bot corresponde ao seu filtro atual.",
@@ -341,6 +355,7 @@
   "None": "Nenhum",
   "Note that any bots that you maintain will be disabled.": "Note que qualquer bot que você mantém será desabilitado.",
   "Nothing to preview": "Nada para visualizar",
+  "Notification sound:": "",
   "Notifications": "Notificações",
   "Notifications are triggered when a message arrives and Zulip isn't in focus or the message is offscreen.": "Notificações são acionadas quando uma mensagem chega e o Zulip não está em foco ou a mensagem está fora da tela.",
   "Notifications stream changed!": "Fluxo de notificações alterado!",
@@ -355,10 +370,12 @@
   "Only organization administrators can post.": "Apenas administradores da organização podem postar.",
   "Only organization admins are allowed to post to this stream.": "Apenas administradores da organização são permitidos de postar neste fluxo.",
   "Optional": "Opcional",
+  "Or, to automatically linkify GitHub's <code>org/repo#1234</code> syntax:": "",
   "Organization": "Organização",
   "Organization administrators can change this in the organization settings.": "Administradores da organização podem alterar isso nas configurações da organização.",
   "Organization avatar": "Avatar da organização",
   "Organization description": "Descrição da organização",
+  "Organization logo": "",
   "Organization name": "Nome da organização",
   "Organization permissions": "Permissões da organização",
   "Organization profile": "Perfil da organização",
@@ -374,6 +391,7 @@
   "People to add": "Pessoas a adicionar",
   "Pin stream <b>__stream.name__</b> to top": "Fixar fluxo <b>__stream.name__</b> no topo",
   "Pin stream to top of left sidebar": "Fixar fluxo no topo da barra lateral esquerda",
+  "Play sound": "",
   "Please just upload one file.": "Por favor, envie apenas um arquivo.",
   "Please re-enter your password to confirm your identity.": "Por favor, digite novamente sua senha para confirmar sua identidade.",
   "Please specify a date or time": "Por favor, especifique uma data ou hora",
@@ -390,7 +408,6 @@
   "Quote and reply": "Citar e responder",
   "Reactivate": "Reativar",
   "Reactivate bot": "Reativar bot",
-  "Regular expression": "Expressão regular",
   "Remind me about this": "Alerte-me sobre isso",
   "Reminder not set!": "Lembrete não definido!",
   "Reminder set!": "Lembrete definido!",
@@ -431,6 +448,12 @@
   "Send emails introducing Zulip to new users": "Enviar e-mails de introdução ao Zulip para novos usuários",
   "Send private message": "Enviar mensagem privada",
   "Sent!": "Enviado!",
+  "Sent! Scroll down to view your message.": "",
+  "Sent! Your message is outside your current narrow.": "",
+  "Sent! Your message was sent to a stream you have muted.": "",
+  "Sent! Your message was sent to a topic you have muted.": "",
+  "Sent! Your recent message is outside the current search.": "",
+  "Set status to away": "",
   "Settings": "Configurações",
   "Setup": "Configuração",
   "Setup two factor authentication": "Configurar autenticação de dois fatores",
@@ -479,7 +502,7 @@
   "There are no messages to reply to.": "Não há mensagens para responder.",
   "These settings are explained in detail in the <a target=\"_blank\" href=\"/help/stream-permissions\">help center</a>.": "Essas configurações são explicadas em detalhes na <a target=\"_blank\" href=\"/help/stream-permissions\">central de ajuda</a>.",
   "This action is permanent and cannot be undone. All users will permanently lose access to their Zulip accounts.": "Esta ação é permanente e não pode ser desfeita. Todos os usuários perderão permanentemente o acesso às suas contas no Zulip.",
-  "This is a <span class=\"fa fa-globe\" aria-hidden=\"true\"></span> <b>public stream</b>. Anybody in your organization can join.": "Este é um <span class=\"fa fa-globe\" aria-hidden=\"true\"></span> <b>fluxo público</b>. Qualquer pessoa na sua organização pode ingressar.",
+  "This is a <span class=\"fa fa-globe\" aria-hidden=\"true\"></span> <b>public stream</b>. Any member of the organization can join without an invitation.": "",
   "This is a <span class=\"fa fa-lock\" aria-hidden=\"true\"></span> <b>private stream</b>. Only people who have been invited can access its content, but any member of the stream can invite others.": "Este é um <span class=\"fa fa-lock\" aria-hidden=\"true\"></span><b>fluxo privado</b>. Somente pessoas que foram convidadas podem acessar seu conteúdo, mas qualquer membro do fluxo pode convidar outras pessoas.",
   "This is a private stream": "Este é um fluxo privado",
   "This organization is configured to restrict editing of message content to __minutes_to_edit__ minutes after it is sent.": "Esta organização está configurada para restringir a edição do conteúdo da mensagem __minutes_to_edit__ minutos após ser enviada.",
@@ -492,6 +515,7 @@
   "Tomorrow": "Amanhã",
   "Topic": "Tópico",
   "Topic editing only": "Apenas edição de tópicos",
+  "Topic muted": "Tópico silenciado",
   "Try again": "Tentar novamente",
   "Two factor authentication": "Autenticação de dois fatores",
   "Type": "Tipo",
@@ -501,8 +525,9 @@
   "Uncheck all": "Desmarcar tudo",
   "Unknown": "Desconhecido",
   "Unless I say otherwise for a particular stream, I want:": "A menos que eu diga o contrário para um fluxo específico, eu quero:",
+  "Unmute": "Cancelar o silenciamento",
   "Unmute the stream <b>__stream.name__</b>": "Cancelar o silenciamento do fluxo <b>__stream.name__</b>",
-  "Unmute the topic <b>__subject__</b>": "Cancelar o silenciamento do tópico <b>__subject__</b>",
+  "Unmute the topic <b>__topic__</b>": "",
   "Unmute the topic <b>__topic_name__</b>": "Cancelar o silenciamento do tópico <b>__topic_name__</b>",
   "Unpin stream <b>__stream.name__</b> from top": "Desfixar fluxo <b>__stream.name__</b> do topo",
   "Unstar": "Remover marcação",
@@ -517,10 +542,13 @@
   "Upload avatar": "Enviar avatar",
   "Upload icon": "Enviar ícone",
   "Upload image or GIF": "Enviar imagem ou GIF",
+  "Upload logo": "",
   "Upload new avatar": "Enviar novo avatar",
   "Upload new icon": "Enviar novo ícone",
+  "Upload new logo": "",
   "Uploaded files": "Arquivos enviados",
   "Uploading icon.": "Enviando ícone.",
+  "Uploading logo.": "",
   "Uploading\u2026": "Enviando...",
   "User already subscribed.": "Usuário já inscrito.",
   "User avatar": "Avatar do usuário",
@@ -540,6 +568,7 @@
   "View file": "Visualizar arquivo",
   "View messages sent": "Visualizar mensagens enviadas",
   "View private messages": "Visualizar mensagens privadas",
+  "View private messages to myself": "",
   "View source": "Visualizar fonte",
   "View source / Edit topic": "Visualizar fonte / Editar tópico",
   "View stream": "Visualizar fluxo",
@@ -550,6 +579,7 @@
   "Who can add bots": "Quem pode adicionar bots",
   "Who can add custom emoji": "Quem pode adicionar emoji personalizado",
   "Who can create streams": "Quem pode criar fluxos",
+  "Who can see users email addresses": "",
   "Working\u2026": "Trabalhando...",
   "Yes": "Sim",
   "Yes, delete this stream": "Sim, excluir este fluxo",
@@ -564,6 +594,7 @@
   "You are not subscribed to stream __stream__": "Você não está inscrito no fluxo __stream__",
   "You can send emails to Zulip! Just copy and use this address as an email recipient, and:": "Você pode enviar e-mails para o Zulip! Basta copiar e usar este endereço como um destinatário de e-mail e:",
   "You cannot create a stream with no subscribers!": "Você não pode criar um fluxo sem inscritos!",
+  "You have muted the topic <span class=\"topic\"></span> under the <span class=\"stream\"></span> stream.": "",
   "You have no active bots.": "Você não tem bots ativos.",
   "You have no inactive bots.": "Você não tem bots inativos.",
   "You have not muted any topics yet.": "Você não silenciou nenhum tópico ainda.",
@@ -590,11 +621,14 @@
   "__wildcard_mention_token__ (Notify stream)": "__wildcard_mention_token__ (Notificar fluxo)",
   "and": "e",
   "cookie": "cookie",
+  "group private messages with __recipient__": "",
   "in 1 hour": "Em 1 hora",
   "in 20 minutes": "em 20 minutos",
   "in 3 hours": "em 3 horas",
   "leafy green vegetable": "vegetais verdes folhosos",
   "marketing": "marketing",
   "more conversations": "mais conversas",
-  "more topics": "mais tópicos"
+  "more topics": "mais tópicos",
+  "private messages with __recipient__": "",
+  "private messages with yourself": ""
 }
