--- a/static/locale/ru/translations.json
+++ b/static/locale/ru/translations.json
@@ -1,7 +1,9 @@
 {
   "\"__file_name__\" was too large; the maximum file size is 25MiB.": "\"__file_name__\" слишком большой; максимальный размер 25MiB.",
   "(This user has been deactivated)": "(Этот пользователь был отключен)",
+  "(away)": "",
   "(no topic)": "(без темы)",
+  "(you)": "",
   "1 day": "1 день",
   "1 hour": "1 час",
   "1 week": "1 неделя",
@@ -15,8 +17,10 @@
   "<p>The stream <b>__stream_name__</b> does not exist.</p><p>Manage your subscriptions <a href='#streams/all'>on your Streams page</a>.</p>": "<p>Канал <b>__stream_name__</b> не существует\\.</p><p>Управляй своими подписками на <a href='#streams/all'>своей странице Каналы</a>\\.</p> ",
   "<strong>__name__</strong> is not subscribed to this stream. They will not be notified if you mention them.": "<strong>__name__</strong> не подписан(-ы) на этот канал. Они не будут уведомлены, если Вы упомянете их.",
   "<strong>__name__</strong> is not subscribed to this stream. They will not be notified unless you subscribe them.": "<strong>__name__</strong> не подписан(ы) на этот канал. Они не будут получать уведомления, пока вы их не подпишете.",
+  "A square logo used to brand your Zulip organization.": "",
   "A stream needs to have a name": "Укажите название канала",
   "A stream with this name already exists": "Канал с таким именем уже существует",
+  "A wide image, replacing the Zulip logo in the upper left corner of the Zulip apps.": "",
   "API key": "API ключ",
   "Action": "Действие",
   "Actions": "Действия",
@@ -69,9 +73,9 @@
   "An hour ago": "Час назад",
   "An unknown error occurred.": "Произошла неизвестная ошибка.",
   "Announce stream": "Анонсировать новый канал",
+  "Any member of this organization can add custom emoji.": "",
   "Any time": "Любое время",
   "Anyone in this organization can add bots": "Любой в этой организации может добавлять ботов",
-  "Anyone in this organization can add custom emoji.": "Любой в этой организации может добавлять эмодзи.",
   "Apply this change to all current stream subscriptions?": "Применить это изменение ко всем подпискам текущего канала?",
   "Are invitations required for joining the organization?": "Необходимо ли приглашение чтобы присоединиться к организации?",
   "Are you sure you want to create stream '__stream_name__' and subscribe __count__ users to it?": "Вы уверены, что хотите создать канал '__stream_name__' и подписать на него __count__ пользователей?",
@@ -110,6 +114,7 @@
   "Choose avatar": "Выберите аватар",
   "Choose custom color": "Выберите произвольный цвет",
   "Clear avatar": "Очистить аватар",
+  "Clear away status": "",
   "Clear emoji image": "Очистить изображение эмодзи",
   "Click anywhere on a message to reply.": "Кликните в любое место сообщения чтобы ответить.",
   "Click outside the input box to save. We\\'ll automatically notify anyone that was added or removed.": "Для сохранения нажмите вне поля ввода. Мы автоматически уведомим всех, кто был добавлен или удален.",
@@ -139,6 +144,8 @@
   "Custom profile fields": "Дополнительные поля профиля",
   "Customize avatar": "Настроить аватар",
   "Date uploaded": "Дата загрузки",
+  "Day": "",
+  "Day mode": "",
   "Deactivate": "Отключить",
   "Deactivate account": "Отключить учетную запись",
   "Deactivate now": "Отключить сейчас",
@@ -156,6 +163,7 @@
   "Delete draft": "Удалить черновик",
   "Delete file": "Удалить файл",
   "Delete icon": "Удалить иконку",
+  "Delete logo": "",
   "Delete message": "Удалить сообщение",
   "Delete stream": "Удалить канал",
   "Delete user group": "",
@@ -201,7 +209,6 @@
   "Error adding subscription": "Ошибка добавления подписки",
   "Error checking subscription": "Ошибка проверки подписки",
   "Error creating stream": "Ошибка создания канала",
-  "Error deactivating account": "Ошибка отключения учетной записи",
   "Error deleting message": "Ошибка удаления сообщения",
   "Error fetching message edit history": "Ошибка получения истории редактирования сообщения",
   "Error getting API key": "Ошибка получения API-ключа",
@@ -211,7 +218,9 @@
   "Error removing subscription": "Ошибка удаления подписки",
   "Error removing user from this stream.": "Ошибка удаления пользователя с канала.",
   "Error saving edit": "Ошибка сохранения изменений",
+  "Error: Cannot deactivate the only organization administrator.": "",
   "Estimated messages per week": "Примерно сообщений в неделю",
+  "External link": "",
   "Failed": "Не удалось",
   "Failed to change notifications stream!": "Не удалось изменить канал для уведомлений!",
   "Failed to change signup notifications stream!": "Не удалось изменить канал для уведомлений о регистрациях!",
@@ -237,6 +246,7 @@
   "Go back": "Вернуться",
   "Got it!": "Понял!",
   "Guest": "",
+  "Guest users cannot edit custom emoji.": "",
   "High contrast mode": "Высоко-контрастный режим",
   "Hint": "Совет",
   "Hint (up to 80 characters)": "Подсказка (до 80 символов)",
@@ -280,6 +290,7 @@
   "Member": "",
   "Members and admins": "",
   "Members and admins, but only admins can add generic bots": "",
+  "Members, admins, and guests": "",
   "Mentioned in": "Упомянут в",
   "Message actions": "Действия с сообщением",
   "Message editing": "Редактирование сообщений",
@@ -293,18 +304,20 @@
   "Mobile notifications always (even when online)": "Мобильные уведомления всегда (даже когда онлайн)",
   "Mobile notifications when offline": "Мобильные уведомления когда оффлайн",
   "Mobile push notifications are not configured on this server.": "",
+  "More details are available <a href=\"/help/add-a-custom-linkification-filter\" target=\"_blank\">in the Help Center article</a>.": "",
   "More than 2 weeks ago": "Более 2-х недель назад",
   "Mute stream": "Заглушить канал",
   "Mute the stream <b>__stream.name__</b>": "Заглушить поток <b>__stream.name__</b>",
-  "Mute the topic <b>__subject__</b>": "Заглушить тему <b>__subject__</b>",
+  "Mute the topic <b>__topic__</b>": "",
   "Mute the topic <b>__topic_name__</b>": "Выключить оповещения из темы <b>__topic_name__</b>",
   "Mute topic": "Заглушить тему",
   "Muted streams don't show up in \\\"All messages\\\" or generate notifications unless you are mentioned.": "Заглушенный каналы не отображаются в \\\"Все сообщения\\\" и не показывают уведомления если вы не упомянуты.",
   "Muted topics": "Заглушенные темы",
   "N": "N",
   "Name": "Имя",
+  "Narrow to __- message_recipient__": "",
   "Narrow to stream &quot;__display_recipient__&quot;": "Показать только канал &quot;__display_recipient__&quot;",
-  "Narrow to stream &quot;__display_recipient__&quot;, topic &quot;__subject__&quot;": "Показать только тему &quot;__subject__&quot; в канале &quot;__display_recipient__&quot;",
+  "Narrow to stream &quot;__display_recipient__&quot;, topic &quot;__topic__&quot;": "",
   "Narrow to stream <b>__stream.name__</b>": "Показать только сообщения канала <b>__stream.name__</b>",
   "Narrow to topic <b>__topic_name__</b>": "Показать только тему <b>__topic_name__</b>",
   "Narrow to your private messages with __display_reply_to__": "Показать только личную переписку с __display_reply_to__",
@@ -327,6 +340,7 @@
   "New topic": "Новая тема",
   "New user notifications:": "Новые уведомления пользователя:",
   "Next week": "Следующая неделя",
+  "Night": "",
   "Night mode": "Ночной режим",
   "No": "Нет",
   "No bots match your current filter.": "Нет ботов попадающих под текущий фильтр.",
@@ -341,6 +355,7 @@
   "None": "Пусто",
   "Note that any bots that you maintain will be disabled.": "Обратите внимание, все ваши боты будут отключены.",
   "Nothing to preview": "Пустое сообщение",
+  "Notification sound:": "",
   "Notifications": "Оповещения",
   "Notifications are triggered when a message arrives and Zulip isn't in focus or the message is offscreen.": "Уведомления появляются, когда приходит сообщение, а Zulip не находится в фокусе или сообщение выключено.",
   "Notifications stream changed!": "Оповещения канала изменены!",
@@ -355,10 +370,12 @@
   "Only organization administrators can post.": "Только администраторы организации могут писать",
   "Only organization admins are allowed to post to this stream.": "Только администратор организации может отправлять сообщения в этот канал.",
   "Optional": "Необязательно",
+  "Or, to automatically linkify GitHub's <code>org/repo#1234</code> syntax:": "",
   "Organization": "Организация",
   "Organization administrators can change this in the organization settings.": "Администраторы организации могут изменить это в настройках организации.",
   "Organization avatar": "Аватар организации",
   "Organization description": "Описание организации.",
+  "Organization logo": "",
   "Organization name": "Название организации",
   "Organization permissions": "Разрешения организации",
   "Organization profile": "Профиль организации",
@@ -374,6 +391,7 @@
   "People to add": "Кого добавить",
   "Pin stream <b>__stream.name__</b> to top": "Закрепить <b>__stream.name__</b> сверху списка каналов",
   "Pin stream to top of left sidebar": "Закрепить наверху в списке каналов",
+  "Play sound": "",
   "Please just upload one file.": "Просто загрузите один файл.",
   "Please re-enter your password to confirm your identity.": "Введите пароль повторно, чтобы подтвердить свою личность.",
   "Please specify a date or time": "Пожалуйста, укажите дату или время",
@@ -390,7 +408,6 @@
   "Quote and reply": "Ответить с цитированием",
   "Reactivate": "Активировать",
   "Reactivate bot": "Включить бота",
-  "Regular expression": "Регулярное выражение",
   "Remind me about this": "Напомнить мне об этом",
   "Reminder not set!": "Напоминание не установлено!",
   "Reminder set!": "Напоминание установлено!",
@@ -431,6 +448,12 @@
   "Send emails introducing Zulip to new users": "Отправлять ознакомительное письмо о Zulip новым пользователям",
   "Send private message": "Отправить личное сообщение",
   "Sent!": "Отправлено!",
+  "Sent! Scroll down to view your message.": "",
+  "Sent! Your message is outside your current narrow.": "",
+  "Sent! Your message was sent to a stream you have muted.": "",
+  "Sent! Your message was sent to a topic you have muted.": "",
+  "Sent! Your recent message is outside the current search.": "",
+  "Set status to away": "",
   "Settings": "Настройки",
   "Setup": "Настройка",
   "Setup two factor authentication": "Настройка двухфакторной аутентификации",
@@ -479,7 +502,7 @@
   "There are no messages to reply to.": "Нет сообщений для ответа.",
   "These settings are explained in detail in the <a target=\"_blank\" href=\"/help/stream-permissions\">help center</a>.": "Эти настройки подробно освещены в <a target=\"_blank\" href=\"/help/stream-permissions\">центре помощи</a>.",
   "This action is permanent and cannot be undone. All users will permanently lose access to their Zulip accounts.": "Это действие является перманентным и не может быть отменено. Все пользователи потеряют доступ к своим учетным записям Zulip.",
-  "This is a <span class=\"fa fa-globe\" aria-hidden=\"true\"></span> <b>public stream</b>. Anybody in your organization can join.": "Это действие является окончательным и не может быть отменено. Все пользователи окончательно потеряют доступ к своим аккаунтам в Zulip.",
+  "This is a <span class=\"fa fa-globe\" aria-hidden=\"true\"></span> <b>public stream</b>. Any member of the organization can join without an invitation.": "",
   "This is a <span class=\"fa fa-lock\" aria-hidden=\"true\"></span> <b>private stream</b>. Only people who have been invited can access its content, but any member of the stream can invite others.": "Это <span class=\"fa fa-lock\" aria-hidden=\"true\"></span> <b>закрытый канал</b>. Только приглашенные люди имеют доступ к его содержанию, но любой участник канала может пригласить других.",
   "This is a private stream": "Это закрытый канал",
   "This organization is configured to restrict editing of message content to __minutes_to_edit__ minutes after it is sent.": "Согласно настройкам этой организации, редактировать сообщение можно только в течение __minutes_to_edit__ минут после отправки.",
@@ -492,6 +515,7 @@
   "Tomorrow": "Завтра",
   "Topic": "Тема",
   "Topic editing only": "Доступно только редактирование темы",
+  "Topic muted": "Тема заглушена",
   "Try again": "Попробуйте еще",
   "Two factor authentication": "Двухфакторная аутентификация",
   "Type": "Тип",
@@ -501,8 +525,9 @@
   "Uncheck all": "Снять отметки со всего",
   "Unknown": "Неизвестный",
   "Unless I say otherwise for a particular stream, I want:": "Если не указано иначе для конкретного канала, я хочу:",
+  "Unmute": "Включить",
   "Unmute the stream <b>__stream.name__</b>": "Включить оповещения из канала <b>__stream.name__</b>",
-  "Unmute the topic <b>__subject__</b>": "Включить оповещения из темы <b>__subject__</b>",
+  "Unmute the topic <b>__topic__</b>": "",
   "Unmute the topic <b>__topic_name__</b>": "Включить оповещения из темы <b>__topic_name__</b>",
   "Unpin stream <b>__stream.name__</b> from top": "Открепить канал <b>__stream.name__</b> сверху списка",
   "Unstar": "Снять отметку",
@@ -517,10 +542,13 @@
   "Upload avatar": "Загрузить аватар",
   "Upload icon": "Загрузить иконку",
   "Upload image or GIF": "Загрузить изображение или GIF",
+  "Upload logo": "",
   "Upload new avatar": "Загрузить новый аватар",
   "Upload new icon": "Загрузить новую иконку",
+  "Upload new logo": "",
   "Uploaded files": "Загруженные файлы",
   "Uploading icon.": "Загрузка иконки.",
+  "Uploading logo.": "",
   "Uploading\u2026": "Загрузка\\u2026",
   "User already subscribed.": "Пользователь уже подписан.",
   "User avatar": "Аватар пользователя",
@@ -540,6 +568,7 @@
   "View file": "Показать файл",
   "View messages sent": "Просмотр отправленных сообщений",
   "View private messages": "Показать личные сообщения",
+  "View private messages to myself": "",
   "View source": "Исходный текст",
   "View source / Edit topic": "Исходный текст / Редактирование темы",
   "View stream": "Просмотр канала",
@@ -550,6 +579,7 @@
   "Who can add bots": "Кто может добавлять ботов",
   "Who can add custom emoji": "Кто может добавлять эмодзи",
   "Who can create streams": "Кто может создавать каналы",
+  "Who can see users email addresses": "",
   "Working\u2026": "Работаем\\u2026",
   "Yes": "Да",
   "Yes, delete this stream": "Да, удалить этот канал",
@@ -564,6 +594,7 @@
   "You are not subscribed to stream __stream__": "Вы не подписаны на канал __stream__",
   "You can send emails to Zulip! Just copy and use this address as an email recipient, and:": "Вы можете слать письма прямо в Zulip! Просто отправьте письмо на указанный email адрес, и:",
   "You cannot create a stream with no subscribers!": "Вы не можете создать канал без подписчиков!",
+  "You have muted the topic <span class=\"topic\"></span> under the <span class=\"stream\"></span> stream.": "",
   "You have no active bots.": "У вас нет активных ботов.",
   "You have no inactive bots.": "У вас нет неактивных ботов.",
   "You have not muted any topics yet.": "У вас нет приглушенных тем.",
@@ -590,11 +621,14 @@
   "__wildcard_mention_token__ (Notify stream)": "__wildcard_mention_token__ (канал уведомлений)",
   "and": "и",
   "cookie": "куки",
+  "group private messages with __recipient__": "",
   "in 1 hour": "через 1 час",
   "in 20 minutes": "через 20 минут",
   "in 3 hours": "через 3 часа",
   "leafy green vegetable": "листвяной зеленый овощ",
   "marketing": "маркетинг",
   "more conversations": "еще беседы",
-  "more topics": "еще темы"
+  "more topics": "еще темы",
+  "private messages with __recipient__": "",
+  "private messages with yourself": ""
 }
