--- a/static/locale/tr/translations.json
+++ b/static/locale/tr/translations.json
@@ -1,7 +1,9 @@
 {
   "\"__file_name__\" was too large; the maximum file size is 25MiB.": "\"__file_name__\" çok büyüktü ; maksimum dosya boyutu 25MiB'dir.",
   "(This user has been deactivated)": "(Bu kullanıcı devre dışı bırakılmış)",
+  "(away)": "",
   "(no topic)": "(konu yok)",
+  "(you)": "",
   "1 day": "1 gun",
   "1 hour": "1 saat",
   "1 week": "1 hafta",
@@ -15,8 +17,10 @@
   "<p>The stream <b>__stream_name__</b> does not exist.</p><p>Manage your subscriptions <a href='#streams/all'>on your Streams page</a>.</p>": "<p> <b>__stream_name__</b> adli kanal mevcut değil. </p><p>Aboneliklerinizi yönetmek için  <a href='#streams/all'>kanallar sayfanızı </a>ziyaret edebilirsiniz.</p>",
   "<strong>__name__</strong> is not subscribed to this stream. They will not be notified if you mention them.": "",
   "<strong>__name__</strong> is not subscribed to this stream. They will not be notified unless you subscribe them.": "<strong>__name__</strong> bu kanala abone değil. Kendisini üye yapmadığınız taktidrde bildirim almayacak.",
+  "A square logo used to brand your Zulip organization.": "",
   "A stream needs to have a name": "Kanalın bir adı olmalıdır",
   "A stream with this name already exists": "Bu adla bir kanal hali hazırda mevcut.",
+  "A wide image, replacing the Zulip logo in the upper left corner of the Zulip apps.": "",
   "API key": "API anahtarı (key)",
   "Action": "Eylem",
   "Actions": "Eylemler",
@@ -70,9 +74,9 @@
   "An hour ago": "",
   "An unknown error occurred.": "Bilinmeyen bir hata oluştu",
   "Announce stream": "Bilgilendirme kanalı",
+  "Any member of this organization can add custom emoji.": "",
   "Any time": "",
   "Anyone in this organization can add bots": "Bu organizasyonun her kullanıcısı bot ekleyebilir",
-  "Anyone in this organization can add custom emoji.": "Bu organizasyondaki herkes yeni özel emoji ekleyebilir.",
   "Apply this change to all current stream subscriptions?": "Bu değişiklik tüm kanal üyeliklerine uygulansın mı?",
   "Are invitations required for joining the organization?": "",
   "Are you sure you want to create stream '__stream_name__' and subscribe __count__ users to it?": "'__stream_name__' kalanılını oluşturup __count__ kullanıcıyı bu kanala üye yapmak istediğinizden emin misiniz?",
@@ -111,6 +115,7 @@
   "Choose avatar": "Avatar seçiniz",
   "Choose custom color": "Özel renk reç",
   "Clear avatar": "Avatarı temizle",
+  "Clear away status": "",
   "Clear emoji image": "Emoji resmini temizle",
   "Click anywhere on a message to reply.": "Cevap vermek için ileti üzerinde herhangi bir yere tıklayın.",
   "Click outside the input box to save. We\\'ll automatically notify anyone that was added or removed.": "Kayıt etmek için girdi kutusunun dışına tıklayınız. Eklenen veya çıkarılan herkese otomatik olarak bilgi gönderilecektir.",
@@ -140,6 +145,8 @@
   "Custom profile fields": "Özel profil alanları",
   "Customize avatar": "Avatar özelleştir",
   "Date uploaded": "Yüklenme tarihi",
+  "Day": "",
+  "Day mode": "",
   "Deactivate": "Devreden çıkar",
   "Deactivate account": "Hesabı devreden çıkar",
   "Deactivate now": "Şimdi devreden çıkar",
@@ -157,6 +164,7 @@
   "Delete draft": "Taslak sil",
   "Delete file": "Dosya sil",
   "Delete icon": "Ikon sil",
+  "Delete logo": "",
   "Delete message": "İletiyi silin",
   "Delete stream": "Kanal sil",
   "Delete user group": "",
@@ -202,7 +210,6 @@
   "Error adding subscription": "Üyelik eklerken hata",
   "Error checking subscription": "Üyelik kontrol etmede hata",
   "Error creating stream": "Kanal oluşturmada hata",
-  "Error deactivating account": "Hesap devre dışı alımında hata",
   "Error deleting message": "",
   "Error fetching message edit history": "İleti düzenleme tarihçesini getirmede hata",
   "Error getting API key": "API anahtarı (key) getirirken hata",
@@ -212,7 +219,9 @@
   "Error removing subscription": "Üyelik kaldırırken hata",
   "Error removing user from this stream.": "Bu kanaldan kullanıcı çıkarırken hata.",
   "Error saving edit": "Düzenlemeyi kaydederken hata oluştu",
+  "Error: Cannot deactivate the only organization administrator.": "",
   "Estimated messages per week": "",
+  "External link": "",
   "Failed": "Başarısız oldu",
   "Failed to change notifications stream!": "Bildirim kanalı değiştirilemedi!",
   "Failed to change signup notifications stream!": "Yeni kayıt olanların bildirildiği kanal değiştirilemedi!",
@@ -238,6 +247,7 @@
   "Go back": "Geri git",
   "Got it!": "Tamam !",
   "Guest": "",
+  "Guest users cannot edit custom emoji.": "",
   "High contrast mode": "Yüksek kontrast modu",
   "Hint": "",
   "Hint (up to 80 characters)": "",
@@ -281,6 +291,7 @@
   "Member": "",
   "Members and admins": "",
   "Members and admins, but only admins can add generic bots": "",
+  "Members, admins, and guests": "",
   "Mentioned in": "Anılan yer",
   "Message actions": "İleti eylemleri",
   "Message editing": "İleti değiştirme",
@@ -294,18 +305,20 @@
   "Mobile notifications always (even when online)": "Mobil bildirimler sürekli (çevrim içiyken bile)",
   "Mobile notifications when offline": "Mobil bildirimler çevrim dışıyken",
   "Mobile push notifications are not configured on this server.": "",
+  "More details are available <a href=\"/help/add-a-custom-linkification-filter\" target=\"_blank\">in the Help Center article</a>.": "",
   "More than 2 weeks ago": "",
   "Mute stream": "Kanalı sustur",
   "Mute the stream <b>__stream.name__</b>": "<b>__stream.name__</b>kanalını sessize al",
-  "Mute the topic <b>__subject__</b>": "<b>__subject__</b> konusunu sessize al",
+  "Mute the topic <b>__topic__</b>": "",
   "Mute the topic <b>__topic_name__</b>": "<b>__topic_name__</b>konusunu sessize al",
   "Mute topic": "Konuyu susturun",
   "Muted streams don't show up in \\\"All messages\\\" or generate notifications unless you are mentioned.": "Sessize alınmış kanallar, isminiz anılmadığı taktirde \\\"Tüm iletiler\\\" 'de görünmez ve uyarı üretmezler.",
   "Muted topics": "Susturulmuş konular",
   "N": "",
   "Name": "İsim",
+  "Narrow to __- message_recipient__": "",
   "Narrow to stream &quot;__display_recipient__&quot;": "&quot;__display_recipient__&quot; Kanala odakla",
-  "Narrow to stream &quot;__display_recipient__&quot;, topic &quot;__subject__&quot;": "&quot;__display_recipient__&quot;, topic &quot;__subject__&quot; kanalına odakla",
+  "Narrow to stream &quot;__display_recipient__&quot;, topic &quot;__topic__&quot;": "",
   "Narrow to stream <b>__stream.name__</b>": "<b>__stream.name__</b> kanalına odakla",
   "Narrow to topic <b>__topic_name__</b>": "<b>__topic_name__</b> konusuna odakla",
   "Narrow to your private messages with __display_reply_to__": "__display_reply_to__ ile özel iletilerinize odakla",
@@ -328,6 +341,7 @@
   "New topic": "Yeni konu",
   "New user notifications:": "Yeni kullanıcı bildirimleri:",
   "Next week": "Gelecek hafta",
+  "Night": "",
   "Night mode": "Gece modu",
   "No": "Hayır",
   "No bots match your current filter.": "Şu anki süzgecinizle eşleşen bot bulunmuyor.",
@@ -342,6 +356,7 @@
   "None": "Hiçbiri",
   "Note that any bots that you maintain will be disabled.": "Yönettiğiniz botların devre dışı kalacağını unutmayın.",
   "Nothing to preview": "Önizleme yapacak bir şey yok",
+  "Notification sound:": "",
   "Notifications": "Bildirimler",
   "Notifications are triggered when a message arrives and Zulip isn't in focus or the message is offscreen.": "Bildirimler yeni bir ileti geldiğinde Zulip ekranda odaklı değil veya ileti ekran dışında bir yerdeyse gönderilir.",
   "Notifications stream changed!": "Bildirim kanalı değişti!",
@@ -356,10 +371,12 @@
   "Only organization administrators can post.": "",
   "Only organization admins are allowed to post to this stream.": "Bu kanala sadece organizasyon adminleri yazabilirler.",
   "Optional": "İsteğe bağlı",
+  "Or, to automatically linkify GitHub's <code>org/repo#1234</code> syntax:": "",
   "Organization": "Organizasyon",
   "Organization administrators can change this in the organization settings.": "Bu ayarı organizasyon yöneticileri organizasyon ayarları sayfasında değiştirebilir.",
   "Organization avatar": "Organizasyon avatarı",
   "Organization description": "",
+  "Organization logo": "",
   "Organization name": "Organizasyon adı",
   "Organization permissions": "Organizasyon izinleri",
   "Organization profile": "Organizasyon profili",
@@ -375,6 +392,7 @@
   "People to add": "Eklenecek kişiler",
   "Pin stream <b>__stream.name__</b> to top": "<b>__stream.name__</b> kanalını tepeye sabitle",
   "Pin stream to top of left sidebar": "Kanalı kenar çubuğunun tepesine sabitle",
+  "Play sound": "",
   "Please just upload one file.": "Lütfen sadece bir dosya yükleyiniz.",
   "Please re-enter your password to confirm your identity.": "Lütfen kimliğinizi doğrulamak için parolanızı yeniden giriniz.",
   "Please specify a date or time": "",
@@ -391,7 +409,6 @@
   "Quote and reply": "Alıntılayarak yanıtla",
   "Reactivate": "Yeniden faal yap",
   "Reactivate bot": "Botu yeniden faal yap",
-  "Regular expression": "Regular expression",
   "Remind me about this": "Bunun hakkında hatırtlat",
   "Reminder not set!": "",
   "Reminder set!": "Hatırlatma ayarlandı!",
@@ -432,6 +449,12 @@
   "Send emails introducing Zulip to new users": "Yeni kullanıcılara Zulip tanıtım e-postası gönder",
   "Send private message": "Özel ileti gönder",
   "Sent!": "Gönderildi!",
+  "Sent! Scroll down to view your message.": "",
+  "Sent! Your message is outside your current narrow.": "",
+  "Sent! Your message was sent to a stream you have muted.": "",
+  "Sent! Your message was sent to a topic you have muted.": "",
+  "Sent! Your recent message is outside the current search.": "",
+  "Set status to away": "",
   "Settings": "Ayarlar",
   "Setup": "",
   "Setup two factor authentication": "",
@@ -480,7 +503,7 @@
   "There are no messages to reply to.": "",
   "These settings are explained in detail in the <a target=\"_blank\" href=\"/help/stream-permissions\">help center</a>.": "",
   "This action is permanent and cannot be undone. All users will permanently lose access to their Zulip accounts.": "Bu işlem kalıcıdır ve geri alınamaz. Tüm kullanıcılar kalıcı olarak Zulip hesaplarına erişimlerini kaybedecekler.",
-  "This is a <span class=\"fa fa-globe\" aria-hidden=\"true\"></span> <b>public stream</b>. Anybody in your organization can join.": "",
+  "This is a <span class=\"fa fa-globe\" aria-hidden=\"true\"></span> <b>public stream</b>. Any member of the organization can join without an invitation.": "",
   "This is a <span class=\"fa fa-lock\" aria-hidden=\"true\"></span> <b>private stream</b>. Only people who have been invited can access its content, but any member of the stream can invite others.": "",
   "This is a private stream": "",
   "This organization is configured to restrict editing of message content to __minutes_to_edit__ minutes after it is sent.": "Bu organizasyonda ileti içeriklerinin değiştirilebilmesi süresi ileti gönderildikten __minutes_to_edit__ dakika olarak ayarlanmış.",
@@ -493,6 +516,7 @@
   "Tomorrow": "Yarın",
   "Topic": "Konu",
   "Topic editing only": "Sadece konu değiştirme",
+  "Topic muted": "",
   "Try again": "Tekrar dene",
   "Two factor authentication": "",
   "Type": "Tür",
@@ -502,8 +526,9 @@
   "Uncheck all": "Tüm seçilenleri iptal et",
   "Unknown": "Bilinmeyen",
   "Unless I say otherwise for a particular stream, I want:": "Belli bir kanal için aksini belirtmediğim taktirde olmasını istediğim:",
+  "Unmute": "",
   "Unmute the stream <b>__stream.name__</b>": " <b>__stream.name__</b> kanalını sessizden çıkar",
-  "Unmute the topic <b>__subject__</b>": "<b>__subject__</b> konusunu sessizden çıkar",
+  "Unmute the topic <b>__topic__</b>": "",
   "Unmute the topic <b>__topic_name__</b>": "<b>__topic_name__</b> konusunu sessizden çıkar",
   "Unpin stream <b>__stream.name__</b> from top": "<b>__stream.name__</b> kanalını tepeye sabitlemeden çıkar",
   "Unstar": "Yıldızı kaldır",
@@ -518,10 +543,13 @@
   "Upload avatar": "Avatar yükle",
   "Upload icon": "İkon yükle",
   "Upload image or GIF": "",
+  "Upload logo": "",
   "Upload new avatar": "Yeni avatar yükle",
   "Upload new icon": "Yeni ikon yükle",
+  "Upload new logo": "",
   "Uploaded files": "Yüklenmiş dosyalar",
   "Uploading icon.": "İkon yukleniyor.",
+  "Uploading logo.": "",
   "Uploading\u2026": "Yükleniyor...",
   "User already subscribed.": "Kullanıcı zaten üye.",
   "User avatar": "Kullanıcı avatarı",
@@ -541,6 +569,7 @@
   "View file": "Dosya göster",
   "View messages sent": "Gönderilen iletileri görüntüle",
   "View private messages": "Özel iletileri görüntüle",
+  "View private messages to myself": "",
   "View source": "Kaynak göster",
   "View source / Edit topic": "Kaynak görüntüle / Konu güncelle",
   "View stream": "Kanal görüntüle",
@@ -551,6 +580,7 @@
   "Who can add bots": "Kimler bot ekleyebilir",
   "Who can add custom emoji": "Kimler özel emoji ekleyebilir",
   "Who can create streams": "Kimler kanal oluşturabilir",
+  "Who can see users email addresses": "",
   "Working\u2026": "Çalışıyor...",
   "Yes": "Evet",
   "Yes, delete this stream": "Evet, bu kanalı sil",
@@ -565,6 +595,7 @@
   "You are not subscribed to stream __stream__": "__stream__ kanalına üye değilsiniz",
   "You can send emails to Zulip! Just copy and use this address as an email recipient, and:": "Zulip'e e-posta gönderebilirsiniz!. Tek yapmanız gereken bu adresi e-posta alıcısı alıp kullanmak, ve:",
   "You cannot create a stream with no subscribers!": "Abonesi olmayan bir kanal oluşturamazsınız!",
+  "You have muted the topic <span class=\"topic\"></span> under the <span class=\"stream\"></span> stream.": "",
   "You have no active bots.": "Faal botunuz bulunmuyor.",
   "You have no inactive bots.": "Devre dışı botunuz bulunmuyor.",
   "You have not muted any topics yet.": "Henüz sessize aldığınız bir konu yok.",
@@ -591,11 +622,14 @@
   "__wildcard_mention_token__ (Notify stream)": "__wildcard_mention_token__ (Notify stream)",
   "and": "ve",
   "cookie": "çerez",
+  "group private messages with __recipient__": "",
   "in 1 hour": "1 saat içinde",
   "in 20 minutes": "20 dakika içinde",
   "in 3 hours": "3 saat içinde",
   "leafy green vegetable": "",
   "marketing": "pazarlama",
   "more conversations": "daha fazla görüşme",
-  "more topics": "daha fazla konu"
+  "more topics": "daha fazla konu",
+  "private messages with __recipient__": "",
+  "private messages with yourself": ""
 }
