--- a/static/locale/zh_Hans/translations.json
+++ b/static/locale/zh_Hans/translations.json
@@ -1,7 +1,9 @@
 {
   "\"__file_name__\" was too large; the maximum file size is 25MiB.": "\"__file_name__\"看起来太大了，最大限制是25M。",
   "(This user has been deactivated)": "(此用户已被禁用)",
+  "(away)": "",
   "(no topic)": "(无主题)",
+  "(you)": "（您）",
   "1 day": "1日",
   "1 hour": "1小时",
   "1 week": "1星期",
@@ -15,8 +17,10 @@
   "<p>The stream <b>__stream_name__</b> does not exist.</p><p>Manage your subscriptions <a href='#streams/all'>on your Streams page</a>.</p>": "<p>频道<b>__stream_name__</b>不存在</p><p>管理您的订阅<a href='#streams/all'>在频道页面</a></p>",
   "<strong>__name__</strong> is not subscribed to this stream. They will not be notified if you mention them.": "<strong>__name__</strong>没有订阅此频道。当你提及他们时不会收到通知",
   "<strong>__name__</strong> is not subscribed to this stream. They will not be notified unless you subscribe them.": "<strong>__name__</strong>没有订阅此频道。如需接收通知必须订阅",
+  "A square logo used to brand your Zulip organization.": "",
   "A stream needs to have a name": "频道需要一个名字",
   "A stream with this name already exists": "具有此名称的频道已经存在了",
+  "A wide image, replacing the Zulip logo in the upper left corner of the Zulip apps.": "",
   "API key": "API Key",
   "Action": "可用",
   "Actions": "操作",
@@ -37,7 +41,7 @@
   "Add extra emoji for members of the __realm_name__ organization.": "允许社群 __realm_name__ 的成员添加额外的表情包。",
   "Add linkifier": "添加链接器",
   "Add member...": "添加成员..",
-  "Add members of your organization to mentionable user groups.": "添加组织成员到用户组",
+  "Add members of your organization to mentionable user groups.": "添加社群成员到用户组",
   "Add new default stream": "添加默认频道",
   "Add option": "添加选项",
   "Add profile field": "新增资料字段",
@@ -69,11 +73,11 @@
   "An hour ago": "一小时前",
   "An unknown error occurred.": "发生了一个未知错误。",
   "Announce stream": "公布频道信息",
+  "Any member of this organization can add custom emoji.": "社群成员都可以添加自定义表情",
   "Any time": "任何时候",
-  "Anyone in this organization can add bots": "组织内任何人可以添加机器人",
-  "Anyone in this organization can add custom emoji.": "在这个圈子中任何人都可以添加自定义表情符号。",
+  "Anyone in this organization can add bots": "社群内任何人可以添加机器人",
   "Apply this change to all current stream subscriptions?": "应用到所有当前频道用户",
-  "Are invitations required for joining the organization?": "加入组织是否需要邀请？",
+  "Are invitations required for joining the organization?": "加入社群是否需要邀请？",
   "Are you sure you want to create stream '__stream_name__' and subscribe __count__ users to it?": "你确定要创建频道  '__stream_name__' 和 签订 __count__ 用户到这里？",
   "Are you sure you want to delete <b>__group_name__</b>?": "确认删除<b>__group_name__</b>？",
   "Are you sure you want to do this?": "确定这样做？",
@@ -104,22 +108,23 @@
   "Change previous and following messages to this topic": "修改前后消息到该话题",
   "Change stream permissions for #": "修改频道权限 #",
   "Change user info and roles": "修改用户信息和角色",
-  "Changing email addresses has been disabled by your Zulip organization administrators. Contact an administrator for help.": "更改邮件地址相关设置已被你所在的Zulip社区的管理员所禁止，详情请咨询管理员。",
-  "Changing your name has been disabled by your Zulip organization administrators. Contact an administrator for help.": "更改你的名字相关设置已被你所在的Zulip社区管理员所禁止，详情请咨询管理员。",
+  "Changing email addresses has been disabled by your Zulip organization administrators. Contact an administrator for help.": "更改邮件地址相关设置已被你所在的Zulip社群的管理员所禁止，详情请咨询管理员。",
+  "Changing your name has been disabled by your Zulip organization administrators. Contact an administrator for help.": "更改你的名字相关设置已被你所在的Zulip社群管理员所禁止，详情请咨询管理员。",
   "Check all": "选择所有",
   "Choose avatar": "选择头像",
   "Choose custom color": "选择自定义颜色",
   "Clear avatar": "清除头像",
+  "Clear away status": "",
   "Clear emoji image": "清除表情图像",
   "Click anywhere on a message to reply.": "点击任意位置回复",
   "Click outside the input box to save. We\\'ll automatically notify anyone that was added or removed.": "点击输入框以外的地方来保存设置。服务器将自动通知你添加和删除的用户",
   "Close": "关闭",
   "Collapse": "折叠",
   "Compose a message to stream <b>__stream.name__</b>": "发消息到频道&quot;<b>__stream.name__</b>&quot;",
-  "Configure default settings for new users joining this organization.": "配置新用户加入组织的默认设置",
+  "Configure default settings for new users joining this organization.": "配置新用户加入社群的默认设置",
   "Configure regular expression patterns that will be automatically linkified when used in Zulip message bodies or topics.  For example to automatically linkify commit IDs and issue numbers (e.g. #123) to the corresponding items in a GitHub project, you could use the following:": "配置在Zulip消息体或主题中使用时将自动链接至正则表达式模式。 例如，要将提交ID和issue号码(例如＃123)自动链接到GitHub项目中的相应项目，可以使用以下内容：",
-  "Configure the authentication methods for your organization.": "为你的组织配置身份验证方式。",
-  "Configure the default streams new users are subscribed to when joining your organization.": "设置新用户在加入是默认订阅的频道",
+  "Configure the authentication methods for your organization.": "为你的社群配置身份验证方式。",
+  "Configure the default streams new users are subscribed to when joining your organization.": "设置新用户在加入社群时默认订阅的频道",
   "Convert emoticons before sending (<code>:)</code> becomes \ud83d\ude03)": "发送前自动转换表情 (<code>:)</code>转换成 😃)",
   "Cookie Bot": "Cookie Bot",
   "Copied!": "复制",
@@ -139,10 +144,12 @@
   "Custom profile fields": "自定义配置文件字段",
   "Customize avatar": "自定义头像",
   "Date uploaded": "上传日期",
+  "Day": "",
+  "Day mode": "",
   "Deactivate": "禁用",
   "Deactivate account": "关闭账户",
   "Deactivate now": "禁用",
-  "Deactivate organization": "禁用组织",
+  "Deactivate organization": "禁用社群",
   "Deactivate your account": "关闭你的账户",
   "Deactivated users": "不活动成员",
   "Deactivation encountered an error. Please reload and try again.": "禁用时发生错误。请刷新后再试",
@@ -156,6 +163,7 @@
   "Delete draft": "删除草稿",
   "Delete file": "删除文件",
   "Delete icon": "删除图标",
+  "Delete logo": "",
   "Delete message": "删除消息",
   "Delete stream": "删除频道",
   "Delete user group": "删除用户组",
@@ -201,7 +209,6 @@
   "Error adding subscription": "订阅时发生错误",
   "Error checking subscription": "检查订阅关系时发生错误",
   "Error creating stream": "创建频道时发生错误",
-  "Error deactivating account": "关闭账户错误。",
   "Error deleting message": "删除消息时出错",
   "Error fetching message edit history": "获取消息编辑记录错误",
   "Error getting API key": "获取 API Key 时发生错误",
@@ -211,7 +218,9 @@
   "Error removing subscription": "退订时发生错误",
   "Error removing user from this stream.": "将用户从此频道中移除时出错。",
   "Error saving edit": "保存更改发生了错误",
+  "Error: Cannot deactivate the only organization administrator.": "错误：不能禁用唯一的社群管理员",
   "Estimated messages per week": "估计每周消息数量",
+  "External link": "外部链接",
   "Failed": "失败",
   "Failed to change notifications stream!": "更改频道通知失败！",
   "Failed to change signup notifications stream!": "修改频道登录通知失败",
@@ -237,6 +246,7 @@
   "Go back": "返回上一层",
   "Got it!": "了解了！",
   "Guest": "访客",
+  "Guest users cannot edit custom emoji.": "访客用户不能编辑自定义表情",
   "High contrast mode": "高对比度模式",
   "Hint": "提示",
   "Hint (up to 80 characters)": "提示(到达80个字符)",
@@ -245,7 +255,7 @@
   "Inactive bots": "无效的机器人",
   "Include content of private messages": "包含私信内容",
   "Include message content in missed message emails": "在错过消息提醒邮件中包含消息内容",
-  "Include organization name in subject of missed message emails": "在错过消息提醒邮件中包含组织名称",
+  "Include organization name in subject of missed message emails": "在错过消息提醒邮件中包含社群名称",
   "Incoming webhooks can only send messages.": "传入的webhooks只能发送消息。",
   "Interface": "接口",
   "Invalid slash command. Check if you are missing a space after the command.": "无效命令。检查命令结尾是否缺少空格",
@@ -270,7 +280,7 @@
   "Local time": "本地时间",
   "Looking for our <a href=\"/integrations\" target=\"_blank\">Integrations</a> or <a href=\"/api\" target=\"_blank\">API</a> documentation?": "看看我们的<a href=\"/integrations\" target=\"_blank\">模块集成库</a>或者<a href=\"/api\" target=\"_blank\">API文档</a>？",
   "Make this message take up less space on the screen": "使得该消息占用较少的屏幕空间",
-  "Manage organization": "管理社区",
+  "Manage organization": "管理社群",
   "Manage user groups": "管理用户组",
   "Mark all messages as read": "标记所有消息为已读",
   "Mark all messages in <b>__stream.name__</b> as read": "标记频道&quot;<b>__stream.name__</b>&quot;中的所有消息为已读",
@@ -280,6 +290,7 @@
   "Member": "成员",
   "Members and admins": "成员和管理员",
   "Members and admins, but only admins can add generic bots": "成员和管理员，只有管理员能添加通用机器人",
+  "Members, admins, and guests": "成员，管理员和访客",
   "Mentioned in": "提到",
   "Message actions": "消息动作",
   "Message editing": "消息编辑",
@@ -293,18 +304,20 @@
   "Mobile notifications always (even when online)": "移动端通知(在线)",
   "Mobile notifications when offline": "离线时移动端通知",
   "Mobile push notifications are not configured on this server.": "服务器未配置移动端推送通知",
+  "More details are available <a href=\"/help/add-a-custom-linkification-filter\" target=\"_blank\">in the Help Center article</a>.": "",
   "More than 2 weeks ago": "超过2周",
   "Mute stream": "静音频道",
   "Mute the stream <b>__stream.name__</b>": "频道&quot;<b>__stream.name__</b>&quot;开启免打扰",
-  "Mute the topic <b>__subject__</b>": "话题&quot;<b>__subject__</b>&quot;开启免打扰",
+  "Mute the topic <b>__topic__</b>": "",
   "Mute the topic <b>__topic_name__</b>": "话题&quot;<b>__topic_name__</b>&quot;开启免打扰",
   "Mute topic": "静音主题",
   "Muted streams don't show up in \\\"All messages\\\" or generate notifications unless you are mentioned.": "开启免打扰频道不会出现在\\\"所有信息 \"\\中，也不会产生通知，除非您被@提醒。",
   "Muted topics": "已静音主题",
   "N": "N",
   "Name": "名称",
+  "Narrow to __- message_recipient__": "通过 __- 信息_接收人__筛选",
   "Narrow to stream &quot;__display_recipient__&quot;": "筛选频道&quot;__display_recipient__&quot;",
-  "Narrow to stream &quot;__display_recipient__&quot;, topic &quot;__subject__&quot;": "筛选频道&quot;__display_recipient__&quot;, 话题&quot;__subject__&quot;",
+  "Narrow to stream &quot;__display_recipient__&quot;, topic &quot;__topic__&quot;": "通过频道 &quot;__显示_接收人__&quot;, 主题 &quot;__主题__&quot筛选;",
   "Narrow to stream <b>__stream.name__</b>": "筛选频道&quot;<b>__stream.name__</b>&quot;",
   "Narrow to topic <b>__topic_name__</b>": "筛选话题&quot;<b>__topic_name__</b>&quot;",
   "Narrow to your private messages with __display_reply_to__": "筛选和&quot;__display_reply_to__&quot;的私信",
@@ -327,6 +340,7 @@
   "New topic": "新话题",
   "New user notifications:": "新用户通知",
   "Next week": "下周",
+  "Night": "",
   "Night mode": "夜间模式",
   "No": "否",
   "No bots match your current filter.": "没有机器人能匹配当前的过滤器。",
@@ -341,6 +355,7 @@
   "None": "没有",
   "Note that any bots that you maintain will be disabled.": "你维护的机器人也都将被禁用。",
   "Nothing to preview": "没有预览",
+  "Notification sound:": "通知声音：",
   "Notifications": "通知设置",
   "Notifications are triggered when a message arrives and Zulip isn't in focus or the message is offscreen.": "当消息到达并且Zulip不在焦点或该消息在屏幕外时，通知则会被触发。",
   "Notifications stream changed!": "频道通知已更改！",
@@ -348,21 +363,23 @@
   "Old password": "旧密码",
   "On __last_active__": "在__last_active__",
   "On __last_active_date__": "在__last_active_date__",
-  "Only organization administrators can add bots to this organization": "只有组织管理员可以将机器人添加到该组织",
+  "Only organization administrators can add bots to this organization": "只有组织管理员可以将机器人添加到该社群",
   "Only organization administrators can add custom emoji in this organization.": "只有社群管理员才能自定义表情在这个社群中。",
-  "Only organization administrators can add generic bots": "只有组织管理员可以添加通用机器人",
+  "Only organization administrators can add generic bots": "只有社群管理员可以添加通用机器人",
   "Only organization administrators can edit these settings.": "只有社群管理员才能编辑这些设置。",
-  "Only organization administrators can post.": "只有组织管理员才能发布。",
-  "Only organization admins are allowed to post to this stream.": "只有组织管理员可以发布到这个频道。",
+  "Only organization administrators can post.": "只有社群管理员才能发布。",
+  "Only organization admins are allowed to post to this stream.": "只有社群管理员可以发布到这个频道。",
   "Optional": "可选设置",
+  "Or, to automatically linkify GitHub's <code>org/repo#1234</code> syntax:": "",
   "Organization": "社群",
-  "Organization administrators can change this in the organization settings.": "组织管理员可以在组织设置中更改此设置。",
+  "Organization administrators can change this in the organization settings.": "社群管理员可以在社群设置中更改此设置。",
   "Organization avatar": "社群头像",
-  "Organization description": "组织描述",
+  "Organization description": "社群描述",
+  "Organization logo": "",
   "Organization name": "社群名称",
   "Organization permissions": "社群许可",
   "Organization profile": "社群资料",
-  "Organization settings": "社区设置",
+  "Organization settings": "社群设置",
   "Other notification settings": "其他通知设置",
   "Other permissions": "其他权限",
   "Outgoing webhook message format": "送出的webhook消息格式",
@@ -374,6 +391,7 @@
   "People to add": "添加用户",
   "Pin stream <b>__stream.name__</b> to top": "频道”<b>__stream.name__</b>“置顶",
   "Pin stream to top of left sidebar": "钉住频道在左侧栏的顶部",
+  "Play sound": "播放声音",
   "Please just upload one file.": "请上传一个文件",
   "Please re-enter your password to confirm your identity.": "请重新输入密码以确认你的身份。",
   "Please specify a date or time": "请注明日期或时间",
@@ -390,7 +408,6 @@
   "Quote and reply": "引用并回复",
   "Reactivate": "启用",
   "Reactivate bot": "重启机器人",
-  "Regular expression": "正则表达式",
   "Remind me about this": "提醒我",
   "Reminder not set!": "提醒没有设置!",
   "Reminder set!": "提醒已设置!",
@@ -405,7 +422,7 @@
   "Resending encountered an error. Please reload and try again.": "重发是发生错误。请刷新后再试",
   "Restore draft": "恢复草稿",
   "Restrict email domains of new users?": "限制新用户的电子邮件域?",
-  "Restrict posting to organization administrators": "限制发布到组织管理员",
+  "Restrict posting to organization administrators": "限制发布到社群管理员",
   "Restrict to a list of domains": "限制到一个域列表",
   "Retry": "重试",
   "Revoke": "撤销",
@@ -431,6 +448,12 @@
   "Send emails introducing Zulip to new users": "向新用户发送介绍Zulip的电子邮件",
   "Send private message": "发送私有消息",
   "Sent!": "已发送!",
+  "Sent! Scroll down to view your message.": "已发送！划到底部查看您的信息",
+  "Sent! Your message is outside your current narrow.": "已发送！您的信息不再您当前的筛选范围",
+  "Sent! Your message was sent to a stream you have muted.": "已发送！您的信息发送至已被静音的频道",
+  "Sent! Your message was sent to a topic you have muted.": "已发送！您的信息发送至已被静音的主题",
+  "Sent! Your recent message is outside the current search.": "已发送！您最近的消息在当前搜索之外",
+  "Set status to away": "",
   "Settings": "设置",
   "Setup": "设置",
   "Setup two factor authentication": "设置双重认证",
@@ -479,7 +502,7 @@
   "There are no messages to reply to.": "没有消息可回复",
   "These settings are explained in detail in the <a target=\"_blank\" href=\"/help/stream-permissions\">help center</a>.": "这些设置在<a target=\"_blank\" href=\"/help/stream-permissions\">帮助中心</a>中有详细说明。",
   "This action is permanent and cannot be undone. All users will permanently lose access to their Zulip accounts.": "这项操作是永久且不可撤销的。所有用户将永久失去对Zulip账户的访问权限。",
-  "This is a <span class=\"fa fa-globe\" aria-hidden=\"true\"></span> <b>public stream</b>. Anybody in your organization can join.": "这是一个<span class=\"fa fa-globe\" aria-hidden=\"true\"></span><b>公共频道</b>。所有组织成员都可以加入",
+  "This is a <span class=\"fa fa-globe\" aria-hidden=\"true\"></span> <b>public stream</b>. Any member of the organization can join without an invitation.": "这是一个<span class=\"fa fa-globe\" aria-hidden=\"true\"></span><b>公共频道</b>。任何社群的成员都可以在没有被邀请的情况下加入",
   "This is a <span class=\"fa fa-lock\" aria-hidden=\"true\"></span> <b>private stream</b>. Only people who have been invited can access its content, but any member of the stream can invite others.": "这是一个<span class=\"fa fa-lock\" aria-hidden=\"true\"></span><b>私有频道</b>。仅有邀请的用户可以对该频道进行访问，该频道的用户也可以邀请其它用户。",
   "This is a private stream": "这是一个私有频道",
   "This organization is configured to restrict editing of message content to __minutes_to_edit__ minutes after it is sent.": "这个社群组织已限制讯息发送间隔，请与 __minutes_to_edit__ 分钟后再发。",
@@ -492,6 +515,7 @@
   "Tomorrow": "明天",
   "Topic": "话题",
   "Topic editing only": "只能主题编辑",
+  "Topic muted": "免打扰话题",
   "Try again": "再试一次",
   "Two factor authentication": "双重认证",
   "Type": "类型",
@@ -501,8 +525,9 @@
   "Uncheck all": "全部不选",
   "Unknown": "未知",
   "Unless I say otherwise for a particular stream, I want:": "如果没有对频道作单独配置，则开启：",
+  "Unmute": "取消免打扰",
   "Unmute the stream <b>__stream.name__</b>": "频道&quot;<b>__stream.name__</b>&quot;关闭免打扰",
-  "Unmute the topic <b>__subject__</b>": "话题&quot;<b>__subject__</b>&quot;取消免打扰",
+  "Unmute the topic <b>__topic__</b>": "",
   "Unmute the topic <b>__topic_name__</b>": "话题&quot;<b>__topic_name__</b>&quot;关闭免打扰",
   "Unpin stream <b>__stream.name__</b> from top": "取消频道\"<b>__stream.name__</b>\"置顶",
   "Unstar": "取消星标",
@@ -517,10 +542,13 @@
   "Upload avatar": "上传头像",
   "Upload icon": "上传图标",
   "Upload image or GIF": "上传图片",
+  "Upload logo": "",
   "Upload new avatar": "上传一个新头像",
   "Upload new icon": "上传新图标",
+  "Upload new logo": "",
   "Uploaded files": "已上传文件",
   "Uploading icon.": "图标上传中",
+  "Uploading logo.": "",
   "Uploading\u2026": "上传",
   "User already subscribed.": "用户已经订阅",
   "User avatar": "用户头像",
@@ -540,6 +568,7 @@
   "View file": "显示文件",
   "View messages sent": "显示已发送消息",
   "View private messages": "显示私信",
+  "View private messages to myself": "",
   "View source": "显示源",
   "View source / Edit topic": "查看源 / 编辑主题",
   "View stream": "显示频道",
@@ -550,6 +579,7 @@
   "Who can add bots": "谁能添加机器人",
   "Who can add custom emoji": "谁能添加自定义表情",
   "Who can create streams": "谁能创建频道",
+  "Who can see users email addresses": "谁可以查看用户的电子邮件地址",
   "Working\u2026": "进行中",
   "Yes": "是",
   "Yes, delete this stream": "是的，删除该频道",
@@ -564,12 +594,13 @@
   "You are not subscribed to stream __stream__": "你没有订阅__stream__频道",
   "You can send emails to Zulip! Just copy and use this address as an email recipient, and:": "您可以发送电子邮件给Zulip！ 只需复制并使用此地址作为电子邮件收件人，并且：",
   "You cannot create a stream with no subscribers!": "创建频道时必须有订阅者",
+  "You have muted the topic <span class=\"topic\"></span> under the <span class=\"stream\"></span> stream.": "",
   "You have no active bots.": "你没有可用的机器人。",
   "You have no inactive bots.": "你没有不可用的机器人。",
   "You have not muted any topics yet.": "你还没有任何静音的话题",
   "You have not uploaded any files.": "目前没有上传任何文件。",
   "You have nothing to send!": "消息不能为空！",
-  "You must be an organization administrator to create a stream without subscribing.": "您必须是组织管理员才能在不订阅的情况下创建频道",
+  "You must be an organization administrator to create a stream without subscribing.": "您必须是社群管理员才能在不订阅的情况下创建频道",
   "You need to be running Zephyr mirroring in order to send messages!": "您需要运行Zephyr镜像服务以便发送消息！",
   "You subscribed to stream __stream__": "你订阅了 __stream__ 频道",
   "You unsubscribed from stream __stream__": "你取消订阅了 __stream__ 频道",
@@ -590,11 +621,14 @@
   "__wildcard_mention_token__ (Notify stream)": "__wildcard_mention_token__ (通知频道)",
   "and": "来",
   "cookie": "cookie",
+  "group private messages with __recipient__": "群组私信包含__收信人__",
   "in 1 hour": "1小时内",
   "in 20 minutes": "20分钟内",
   "in 3 hours": "3小时内",
   "leafy green vegetable": "绿叶蔬菜",
   "marketing": "销售",
   "more conversations": "更多会话",
-  "more topics": "更多话题"
+  "more topics": "更多话题",
+  "private messages with __recipient__": "私信包含__收信人__",
+  "private messages with yourself": "私信包含您自己"
 }
