--- a/static/locale/ca/translations.json
+++ b/static/locale/ca/translations.json
@@ -1,7 +1,9 @@
 {
   "\"__file_name__\" was too large; the maximum file size is 25MiB.": "",
   "(This user has been deactivated)": "",
+  "(away)": "",
   "(no topic)": "",
+  "(you)": "",
   "1 day": "1 dia",
   "1 hour": "1 hora",
   "1 week": "1 setmana",
@@ -15,10 +17,12 @@
   "<p>The stream <b>__stream_name__</b> does not exist.</p><p>Manage your subscriptions <a href='#streams/all'>on your Streams page</a>.</p>": "",
   "<strong>__name__</strong> is not subscribed to this stream. They will not be notified if you mention them.": "",
   "<strong>__name__</strong> is not subscribed to this stream. They will not be notified unless you subscribe them.": "",
+  "A square logo used to brand your Zulip organization.": "",
   "A stream needs to have a name": "",
   "A stream with this name already exists": "",
+  "A wide image, replacing the Zulip logo in the upper left corner of the Zulip apps.": "",
   "API key": "",
-  "Action": "Acció",
+  "Action": "Acci\u00f3",
   "Actions": "Accions",
   "Active bots": "",
   "Active now": "",
@@ -69,9 +73,9 @@
   "An hour ago": "",
   "An unknown error occurred.": "",
   "Announce stream": "",
+  "Any member of this organization can add custom emoji.": "",
   "Any time": "",
   "Anyone in this organization can add bots": "",
-  "Anyone in this organization can add custom emoji.": "",
   "Apply this change to all current stream subscriptions?": "",
   "Are invitations required for joining the organization?": "",
   "Are you sure you want to create stream '__stream_name__' and subscribe __count__ users to it?": "",
@@ -110,6 +114,7 @@
   "Choose avatar": "",
   "Choose custom color": "",
   "Clear avatar": "",
+  "Clear away status": "",
   "Clear emoji image": "",
   "Click anywhere on a message to reply.": "",
   "Click outside the input box to save. We\\'ll automatically notify anyone that was added or removed.": "",
@@ -139,6 +144,8 @@
   "Custom profile fields": "",
   "Customize avatar": "",
   "Date uploaded": "",
+  "Day": "",
+  "Day mode": "",
   "Deactivate": "",
   "Deactivate account": "",
   "Deactivate now": "",
@@ -156,13 +163,14 @@
   "Delete draft": "",
   "Delete file": "",
   "Delete icon": "",
+  "Delete logo": "",
   "Delete message": "",
   "Delete stream": "",
   "Delete user group": "",
   "Deleted successfully!": "",
   "Deleting this stream will immediately unsubscribe everyone, and the stream's content will not be recoverable.": "",
   "Dense mode": "",
-  "Description": "Descripció",
+  "Description": "Descripci\u00f3",
   "Disabled": "",
   "Discard": "",
   "Discard changes": "",
@@ -185,7 +193,7 @@
   "Edit user": "",
   "Edit your profile": "",
   "Edited (__last_edit_timestr__)": "",
-  "Email": "Correu electrònic",
+  "Email": "Correu electr\u00f2nic",
   "Email address": "",
   "Email copied": "",
   "Email notifications": "",
@@ -201,7 +209,6 @@
   "Error adding subscription": "",
   "Error checking subscription": "",
   "Error creating stream": "",
-  "Error deactivating account": "",
   "Error deleting message": "",
   "Error fetching message edit history": "",
   "Error getting API key": "",
@@ -211,7 +218,9 @@
   "Error removing subscription": "",
   "Error removing user from this stream.": "",
   "Error saving edit": "",
+  "Error: Cannot deactivate the only organization administrator.": "",
   "Estimated messages per week": "",
+  "External link": "",
   "Failed": "",
   "Failed to change notifications stream!": "",
   "Failed to change signup notifications stream!": "",
@@ -237,6 +246,7 @@
   "Go back": "",
   "Got it!": "",
   "Guest": "",
+  "Guest users cannot edit custom emoji.": "",
   "High contrast mode": "",
   "Hint": "",
   "Hint (up to 80 characters)": "",
@@ -280,6 +290,7 @@
   "Member": "",
   "Members and admins": "",
   "Members and admins, but only admins can add generic bots": "",
+  "Members, admins, and guests": "",
   "Mentioned in": "",
   "Message actions": "",
   "Message editing": "",
@@ -293,18 +304,20 @@
   "Mobile notifications always (even when online)": "",
   "Mobile notifications when offline": "",
   "Mobile push notifications are not configured on this server.": "",
+  "More details are available <a href=\"/help/add-a-custom-linkification-filter\" target=\"_blank\">in the Help Center article</a>.": "",
   "More than 2 weeks ago": "",
   "Mute stream": "Silenciar canal",
   "Mute the stream <b>__stream.name__</b>": "",
-  "Mute the topic <b>__subject__</b>": "",
+  "Mute the topic <b>__topic__</b>": "",
   "Mute the topic <b>__topic_name__</b>": "",
   "Mute topic": "Silenciar tema",
   "Muted streams don't show up in \\\"All messages\\\" or generate notifications unless you are mentioned.": "",
   "Muted topics": "",
   "N": "",
   "Name": "Nom",
+  "Narrow to __- message_recipient__": "",
   "Narrow to stream &quot;__display_recipient__&quot;": "",
-  "Narrow to stream &quot;__display_recipient__&quot;, topic &quot;__subject__&quot;": "",
+  "Narrow to stream &quot;__display_recipient__&quot;, topic &quot;__topic__&quot;": "",
   "Narrow to stream <b>__stream.name__</b>": "",
   "Narrow to topic <b>__topic_name__</b>": "",
   "Narrow to your private messages with __display_reply_to__": "",
@@ -327,6 +340,7 @@
   "New topic": "",
   "New user notifications:": "",
   "Next week": "",
+  "Night": "",
   "Night mode": "Mode nit",
   "No": "",
   "No bots match your current filter.": "",
@@ -341,6 +355,7 @@
   "None": "",
   "Note that any bots that you maintain will be disabled.": "",
   "Nothing to preview": "",
+  "Notification sound:": "",
   "Notifications": "Notificacions",
   "Notifications are triggered when a message arrives and Zulip isn't in focus or the message is offscreen.": "",
   "Notifications stream changed!": "",
@@ -355,10 +370,12 @@
   "Only organization administrators can post.": "",
   "Only organization admins are allowed to post to this stream.": "",
   "Optional": "",
+  "Or, to automatically linkify GitHub's <code>org/repo#1234</code> syntax:": "",
   "Organization": "",
   "Organization administrators can change this in the organization settings.": "",
   "Organization avatar": "",
   "Organization description": "",
+  "Organization logo": "",
   "Organization name": "",
   "Organization permissions": "",
   "Organization profile": "",
@@ -374,6 +391,7 @@
   "People to add": "",
   "Pin stream <b>__stream.name__</b> to top": "",
   "Pin stream to top of left sidebar": "",
+  "Play sound": "",
   "Please just upload one file.": "",
   "Please re-enter your password to confirm your identity.": "",
   "Please specify a date or time": "",
@@ -390,7 +408,6 @@
   "Quote and reply": "",
   "Reactivate": "",
   "Reactivate bot": "",
-  "Regular expression": "",
   "Remind me about this": "",
   "Reminder not set!": "",
   "Reminder set!": "",
@@ -431,6 +448,12 @@
   "Send emails introducing Zulip to new users": "",
   "Send private message": "Enviar missatge privat",
   "Sent!": "",
+  "Sent! Scroll down to view your message.": "",
+  "Sent! Your message is outside your current narrow.": "",
+  "Sent! Your message was sent to a stream you have muted.": "",
+  "Sent! Your message was sent to a topic you have muted.": "",
+  "Sent! Your recent message is outside the current search.": "",
+  "Set status to away": "",
   "Settings": "",
   "Setup": "",
   "Setup two factor authentication": "",
@@ -479,7 +502,7 @@
   "There are no messages to reply to.": "",
   "These settings are explained in detail in the <a target=\"_blank\" href=\"/help/stream-permissions\">help center</a>.": "",
   "This action is permanent and cannot be undone. All users will permanently lose access to their Zulip accounts.": "",
-  "This is a <span class=\"fa fa-globe\" aria-hidden=\"true\"></span> <b>public stream</b>. Anybody in your organization can join.": "",
+  "This is a <span class=\"fa fa-globe\" aria-hidden=\"true\"></span> <b>public stream</b>. Any member of the organization can join without an invitation.": "",
   "This is a <span class=\"fa fa-lock\" aria-hidden=\"true\"></span> <b>private stream</b>. Only people who have been invited can access its content, but any member of the stream can invite others.": "",
   "This is a private stream": "",
   "This organization is configured to restrict editing of message content to __minutes_to_edit__ minutes after it is sent.": "",
@@ -492,6 +515,7 @@
   "Tomorrow": "",
   "Topic": "Tema",
   "Topic editing only": "",
+  "Topic muted": "",
   "Try again": "",
   "Two factor authentication": "",
   "Type": "",
@@ -501,8 +525,9 @@
   "Uncheck all": "",
   "Unknown": "",
   "Unless I say otherwise for a particular stream, I want:": "",
+  "Unmute": "",
   "Unmute the stream <b>__stream.name__</b>": "",
-  "Unmute the topic <b>__subject__</b>": "",
+  "Unmute the topic <b>__topic__</b>": "",
   "Unmute the topic <b>__topic_name__</b>": "",
   "Unpin stream <b>__stream.name__</b> from top": "",
   "Unstar": "",
@@ -517,10 +542,13 @@
   "Upload avatar": "",
   "Upload icon": "",
   "Upload image or GIF": "",
+  "Upload logo": "",
   "Upload new avatar": "",
   "Upload new icon": "",
+  "Upload new logo": "",
   "Uploaded files": "",
   "Uploading icon.": "",
+  "Uploading logo.": "",
   "Uploading\u2026": "",
   "User already subscribed.": "",
   "User avatar": "",
@@ -540,6 +568,7 @@
   "View file": "",
   "View messages sent": "",
   "View private messages": "",
+  "View private messages to myself": "",
   "View source": "",
   "View source / Edit topic": "",
   "View stream": "",
@@ -550,6 +579,7 @@
   "Who can add bots": "",
   "Who can add custom emoji": "",
   "Who can create streams": "",
+  "Who can see users email addresses": "",
   "Working\u2026": "",
   "Yes": "",
   "Yes, delete this stream": "",
@@ -564,6 +594,7 @@
   "You are not subscribed to stream __stream__": "",
   "You can send emails to Zulip! Just copy and use this address as an email recipient, and:": "",
   "You cannot create a stream with no subscribers!": "",
+  "You have muted the topic <span class=\"topic\"></span> under the <span class=\"stream\"></span> stream.": "",
   "You have no active bots.": "",
   "You have no inactive bots.": "",
   "You have not muted any topics yet.": "",
@@ -590,11 +621,14 @@
   "__wildcard_mention_token__ (Notify stream)": "",
   "and": "",
   "cookie": "",
+  "group private messages with __recipient__": "",
   "in 1 hour": "",
   "in 20 minutes": "",
   "in 3 hours": "",
   "leafy green vegetable": "",
   "marketing": "",
   "more conversations": "",
-  "more topics": ""
+  "more topics": "",
+  "private messages with __recipient__": "",
+  "private messages with yourself": ""
 }
