--- a/static/locale/de/translations.json
+++ b/static/locale/de/translations.json
@@ -1,7 +1,9 @@
 {
   "\"__file_name__\" was too large; the maximum file size is 25MiB.": "\"__file_name__\" war zu groß; die maximal erlaubte Dateigröße ist 25MiB.",
   "(This user has been deactivated)": "(Dieser Nutzeraccount wurde deaktiviert)",
+  "(away)": "",
   "(no topic)": "(kein Thema)",
+  "(you)": "",
   "1 day": "1 Tag",
   "1 hour": "1 Stunde",
   "1 week": "1 Woche",
@@ -15,8 +17,10 @@
   "<p>The stream <b>__stream_name__</b> does not exist.</p><p>Manage your subscriptions <a href='#streams/all'>on your Streams page</a>.</p>": "<p>Der Stream <b>__stream_name__</b> existiert nicht.</p><p>Verwalte Deine Abbonnements <a href='#streams/all'>auf Deiner Streamseite</a>.</p>",
   "<strong>__name__</strong> is not subscribed to this stream. They will not be notified if you mention them.": "<strong>__name__</strong> hat diesen Stream nicht abonniert und wird keine Benachrichtigungen erhalten, es sei denn, die Person wird @-erwähnt.",
   "<strong>__name__</strong> is not subscribed to this stream. They will not be notified unless you subscribe them.": "<strong>__name__</strong> hat diesen Stream nicht abonniert und wird nicht Benachrichtigungen erhalten, falls er den Stream abonniert.",
+  "A square logo used to brand your Zulip organization.": "",
   "A stream needs to have a name": "Ein Stream benötigt einen Namen.",
   "A stream with this name already exists": "Es existiert schon ein Stream mit diesem Namen",
+  "A wide image, replacing the Zulip logo in the upper left corner of the Zulip apps.": "",
   "API key": "API-Schlüssel",
   "Action": "Aktion",
   "Actions": "Aktionen",
@@ -69,9 +73,9 @@
   "An hour ago": "Vor einer Stunde",
   "An unknown error occurred.": "Ein unbekannter Fehler ist aufgetreten.",
   "Announce stream": "Stream bekannt machen",
+  "Any member of this organization can add custom emoji.": "",
   "Any time": "Insgesamt",
   "Anyone in this organization can add bots": "Jeder in dieser Organisation kann Bots hinzufügen.",
-  "Anyone in this organization can add custom emoji.": "Jeder in dieser Organisation kann eigene Emojis hinzufügen.",
   "Apply this change to all current stream subscriptions?": "Diese Änderung auf alle momentanten Stream-Abonnements anwenden?",
   "Are invitations required for joining the organization?": "Werden Einladungen benötigt um der Organisation beizutreten?",
   "Are you sure you want to create stream '__stream_name__' and subscribe __count__ users to it?": "Bist Du sicher, dass Du den Stream '__stream_name__' mit __count__ Nutzern erstellen möchtest?",
@@ -110,6 +114,7 @@
   "Choose avatar": "Avatar auswählen",
   "Choose custom color": "Wähle eine benutzerdefinierte Farbe",
   "Clear avatar": "Avatar entfernen",
+  "Clear away status": "",
   "Clear emoji image": "Emoji-Bild entfernen",
   "Click anywhere on a message to reply.": "Klicke irgendwo auf eine Nachricht, um auf sie zu antworten.",
   "Click outside the input box to save. We\\'ll automatically notify anyone that was added or removed.": "Klicke zum Speichern außerhalb des Eingabefelds. Wir werden automatisch jeden benachrichten, der hinzugefügt oder entfernt wurde.",
@@ -139,6 +144,8 @@
   "Custom profile fields": "Nutzerdefinierte Profilfelder",
   "Customize avatar": "Avatar ändern",
   "Date uploaded": "Hochlade-Datum",
+  "Day": "",
+  "Day mode": "",
   "Deactivate": "Deaktivieren",
   "Deactivate account": "Account deaktivieren",
   "Deactivate now": "Jetzt deaktivieren",
@@ -156,6 +163,7 @@
   "Delete draft": "Entwurf löschen",
   "Delete file": "Datei löschen",
   "Delete icon": "Icon löschen",
+  "Delete logo": "",
   "Delete message": "Nachricht löschen",
   "Delete stream": "Stream löschen",
   "Delete user group": "Nutzergruppe löschen",
@@ -201,7 +209,6 @@
   "Error adding subscription": "Fehler beim Hinzufügen des Abonnements",
   "Error checking subscription": "Fehler beim Prüfen des Abonnements",
   "Error creating stream": "Fehler beim Erstellen des Streams",
-  "Error deactivating account": "Fehler beim Deaktivieren des Accounts",
   "Error deleting message": "Fehler beim Löschen der Nachricht",
   "Error fetching message edit history": "Fehler beim Abruf des Editier-Verlaufs",
   "Error getting API key": "Fehler beim Holen des API-Schlüssels",
@@ -211,7 +218,9 @@
   "Error removing subscription": "Fehler beim Entfernen des Abonnements",
   "Error removing user from this stream.": "Fehler beim Entfernen des Nutzers von diesem Stream.",
   "Error saving edit": "Fehler beim Speichern der Bearbeitung",
+  "Error: Cannot deactivate the only organization administrator.": "",
   "Estimated messages per week": "geschätzte Nachrichten pro Woche",
+  "External link": "",
   "Failed": "Gescheitert",
   "Failed to change notifications stream!": "Fehler bei Änderung des Benachrichtigungs-Streams!",
   "Failed to change signup notifications stream!": "Registrierungs-Benachrichtigungsstream konnte nicht geändert werden!",
@@ -237,6 +246,7 @@
   "Go back": "Zurückgehen",
   "Got it!": "Hab's verstanden!",
   "Guest": "",
+  "Guest users cannot edit custom emoji.": "",
   "High contrast mode": "Hoher Kontrast Modus",
   "Hint": "Bemerkung",
   "Hint (up to 80 characters)": "Tipp (bis zu 80 Zeichen)",
@@ -280,6 +290,7 @@
   "Member": "Mitglied",
   "Members and admins": "",
   "Members and admins, but only admins can add generic bots": "",
+  "Members, admins, and guests": "",
   "Mentioned in": "Erwähnt in",
   "Message actions": "Aktionen",
   "Message editing": "Nachricht bearbeiten",
@@ -293,18 +304,20 @@
   "Mobile notifications always (even when online)": "Mobile Benachrichtigungen immer (auch wenn online)",
   "Mobile notifications when offline": "Mobile Benachrichtigungen wenn offline",
   "Mobile push notifications are not configured on this server.": "",
+  "More details are available <a href=\"/help/add-a-custom-linkification-filter\" target=\"_blank\">in the Help Center article</a>.": "",
   "More than 2 weeks ago": "Vor mehr als 2 Wochen",
   "Mute stream": "Stream stummschalten",
   "Mute the stream <b>__stream.name__</b>": "Schalte den Stream <b>__stream.name__</b> stumm",
-  "Mute the topic <b>__subject__</b>": "Schalte das Thema <b>__subject__</b> stumm",
+  "Mute the topic <b>__topic__</b>": "",
   "Mute the topic <b>__topic_name__</b>": "Das Thema <b>__topic_name__</b> stummschalten",
   "Mute topic": "Thema stummschalten",
   "Muted streams don't show up in \\\"All messages\\\" or generate notifications unless you are mentioned.": "Stumgeschaltete Streams werden nicht in \"\\Alle Nachrichten\\\" angezeigt und senden keine Benachrichtigungen, außer wenn Du in einer Nachricht erwähnt wirst.",
   "Muted topics": "Stummgeschaltete Themen",
   "N": "N",
   "Name": "Name",
+  "Narrow to __- message_recipient__": "",
   "Narrow to stream &quot;__display_recipient__&quot;": "Begrenze auf &quot;__display_recipient__&quot;",
-  "Narrow to stream &quot;__display_recipient__&quot;, topic &quot;__subject__&quot;": "Begrenze auf Stream &quot;__display_recipient__&quot;, Thema &quot;__subject__&quot;",
+  "Narrow to stream &quot;__display_recipient__&quot;, topic &quot;__topic__&quot;": "",
   "Narrow to stream <b>__stream.name__</b>": "Begrenze auf den Stream <b>__stream.name__</b>",
   "Narrow to topic <b>__topic_name__</b>": "Auf Thema <b>__topic_name__</b> begrenzen",
   "Narrow to your private messages with __display_reply_to__": "Begrenze auf deine privaten Nachrichten mit __display_reply_to__",
@@ -327,6 +340,7 @@
   "New topic": "Neues Thema",
   "New user notifications:": "Neue Nutzer-Benachrichtigungen:",
   "Next week": "Nächste Woche",
+  "Night": "",
   "Night mode": "Nachtmodus",
   "No": "Nein",
   "No bots match your current filter.": "Dein aktueller Filter trifft auf keine Bots zu.",
@@ -341,6 +355,7 @@
   "None": "Nichts",
   "Note that any bots that you maintain will be disabled.": "Beachte, dass alle Deine Bots deaktiviert werden.",
   "Nothing to preview": "Keine Vorschau vorhanden",
+  "Notification sound:": "",
   "Notifications": "Benachrichtigungen",
   "Notifications are triggered when a message arrives and Zulip isn't in focus or the message is offscreen.": "Benachrichtigungen werden ausgelöst wenn eine Nachricht ankommt und Zulip nicht im Fokus, oder die Nachricht off-screen ist.",
   "Notifications stream changed!": "Stream für Benachrichtigungen wurde geändert!",
@@ -355,10 +370,12 @@
   "Only organization administrators can post.": "Nur Administratoren dieser Organisation können posten.",
   "Only organization admins are allowed to post to this stream.": "Nur Administratoren dieser Organisation können in diesen Stream schreiben.",
   "Optional": "Optional",
+  "Or, to automatically linkify GitHub's <code>org/repo#1234</code> syntax:": "",
   "Organization": "Organisation",
   "Organization administrators can change this in the organization settings.": "Dies kann von Organisationsadministratoren in den Organisationseinstellungen geändert werden. ",
   "Organization avatar": "Organisations-Avatar",
   "Organization description": "Beschreibung der Organisation",
+  "Organization logo": "",
   "Organization name": "Name der Organisation",
   "Organization permissions": "Organisationsberechtigungen",
   "Organization profile": "Organisationsprofil",
@@ -374,6 +391,7 @@
   "People to add": "Personen hinzufügen",
   "Pin stream <b>__stream.name__</b> to top": "Stream <b>__stream.name__</b> an der Oberseite anpinnen",
   "Pin stream to top of left sidebar": "Stream an die Seitenansicht oben links pinnen.",
+  "Play sound": "",
   "Please just upload one file.": "Bitte lade nur eine Datei hoch.",
   "Please re-enter your password to confirm your identity.": "Bitte gib Dein Passwort ein um Deine Identität zu bestätigen.",
   "Please specify a date or time": "Bitte gib ein Datum oder eine Zeit an",
@@ -390,7 +408,6 @@
   "Quote and reply": "Zitieren und antworten",
   "Reactivate": "Reaktivieren",
   "Reactivate bot": "Bot reaktivieren",
-  "Regular expression": "Regulärer Ausdruck",
   "Remind me about this": "Erinnere mich daran",
   "Reminder not set!": "Erinnerung nicht aktiviert!",
   "Reminder set!": "Erinnerung aktiviert!",
@@ -431,6 +448,12 @@
   "Send emails introducing Zulip to new users": "Emails mit Einführung zu Zulip an neue Nutzer versenden ",
   "Send private message": "Private Nachricht senden",
   "Sent!": "Gesendet!",
+  "Sent! Scroll down to view your message.": "",
+  "Sent! Your message is outside your current narrow.": "",
+  "Sent! Your message was sent to a stream you have muted.": "",
+  "Sent! Your message was sent to a topic you have muted.": "",
+  "Sent! Your recent message is outside the current search.": "",
+  "Set status to away": "",
   "Settings": "Einstellungen",
   "Setup": "Konfiguration",
   "Setup two factor authentication": "Einrichten der zwei Faktor Authentification",
@@ -479,7 +502,7 @@
   "There are no messages to reply to.": "Es gibt keine Nachrichten zum Antworten.",
   "These settings are explained in detail in the <a target=\"_blank\" href=\"/help/stream-permissions\">help center</a>.": "Im Detail werden die Einstellungen erläutert im <a target=\"_blank\" href=\"/help/stream-permissions\">help center </a>.",
   "This action is permanent and cannot be undone. All users will permanently lose access to their Zulip accounts.": "Diese Aktion ist dauerhaft und kann nicht rückgängig gemacht werden. Alle Nutzer werden dauerhaft Zugriff auf Ihre Zulip-Konten verlieren.",
-  "This is a <span class=\"fa fa-globe\" aria-hidden=\"true\"></span> <b>public stream</b>. Anybody in your organization can join.": "Dies ist ein <span class=\"fa fa-globe\" aria-hidden=\"true\"></span> <b>öffentlicher Stream</b>. Jeder in Deiner Organisation kann beitreten.",
+  "This is a <span class=\"fa fa-globe\" aria-hidden=\"true\"></span> <b>public stream</b>. Any member of the organization can join without an invitation.": "",
   "This is a <span class=\"fa fa-lock\" aria-hidden=\"true\"></span> <b>private stream</b>. Only people who have been invited can access its content, but any member of the stream can invite others.": "Dies ist ein <span class=\"fa fa-lock\" aria-hidden=\"true\"></span> <b>privater Stream</b>. Nur eingeladene Benutzer könne auf die Inhalte zugreifen, aber jedes Mitglied des Streams kann andere Benutzer einladen.",
   "This is a private stream": "Dies ist ein privat Stream.",
   "This organization is configured to restrict editing of message content to __minutes_to_edit__ minutes after it is sent.": "Diese Organisation ist konfiguriert, Nachrichten nur für __minutes_to_edit__  Minuten nach dem Senden bearbeitbar zu machen.",
@@ -492,6 +515,7 @@
   "Tomorrow": "Morgen",
   "Topic": "Thema",
   "Topic editing only": "Kann nur Thema bearbeiten",
+  "Topic muted": "Thema stummgestellt",
   "Try again": "Erneut versuchen",
   "Two factor authentication": "Zwei-Faktor-Authentifizierung",
   "Type": "Typ",
@@ -501,8 +525,9 @@
   "Uncheck all": "Alles abwählen",
   "Unknown": "Unbekannt",
   "Unless I say otherwise for a particular stream, I want:": "Wenn du es nicht anders einstellst, erhälst du:",
+  "Unmute": "Stummschaltung aufheben",
   "Unmute the stream <b>__stream.name__</b>": "Stummschaltung für den Stream <b>__stream.name__</b> deaktivieren",
-  "Unmute the topic <b>__subject__</b>": "Stummschaltung für das Thema <b>__subject__</b> deaktivieren",
+  "Unmute the topic <b>__topic__</b>": "",
   "Unmute the topic <b>__topic_name__</b>": "Stummschaltung für das Thema <b>__topic_name__</b> deaktivieren",
   "Unpin stream <b>__stream.name__</b> from top": "Stream <b>__stream.name__</b> von Oberkannte loslösen",
   "Unstar": "Markierung aufheben",
@@ -517,10 +542,13 @@
   "Upload avatar": "Avatar hochladen",
   "Upload icon": "Icon hochladen",
   "Upload image or GIF": "Bild oder GIF hochladen",
+  "Upload logo": "",
   "Upload new avatar": "Neuen Avatar hochladen",
   "Upload new icon": "Neues Icon hochladen",
+  "Upload new logo": "",
   "Uploaded files": "Hochgeladene Dateien",
   "Uploading icon.": "Icon wird hochgeladen.",
+  "Uploading logo.": "",
   "Uploading\u2026": "Lädt hoch...",
   "User already subscribed.": "Benutzer ist bereits Mitglied.",
   "User avatar": "Nutzeravatar",
@@ -540,6 +568,7 @@
   "View file": "Datei anzeigen",
   "View messages sent": "Versendete Nachrichten anzeigen",
   "View private messages": "Private Nachrichten anzeigen",
+  "View private messages to myself": "",
   "View source": "Rohnachricht anzeigen",
   "View source / Edit topic": "Rohnachricht anzeigen / Thema bearbeiten",
   "View stream": "Stream anzeigen",
@@ -550,6 +579,7 @@
   "Who can add bots": "Wer kann Bots hinzufügen",
   "Who can add custom emoji": "Wer kann eigene Emojis hinzufügen",
   "Who can create streams": "Wer kann Streams erstellen",
+  "Who can see users email addresses": "",
   "Working\u2026": "Arbeitet…",
   "Yes": "Ja",
   "Yes, delete this stream": "Ja, lösche diesen Stream",
@@ -564,6 +594,7 @@
   "You are not subscribed to stream __stream__": "Du hast den Stream __stream__ nicht abonniert",
   "You can send emails to Zulip! Just copy and use this address as an email recipient, and:": "Du kannst Zulip Emails schicken! Kopiere und benutze einfach diese Adresse als Empfänger der Email und:",
   "You cannot create a stream with no subscribers!": "Du kannst keinen Stream ohne Mitglieder erstellen!",
+  "You have muted the topic <span class=\"topic\"></span> under the <span class=\"stream\"></span> stream.": "",
   "You have no active bots.": "Du hast keine aktiven Bots.",
   "You have no inactive bots.": "Du hast keine inaktiven Bots.",
   "You have not muted any topics yet.": "Du hast noch keine Themen stummgestellt.",
@@ -590,11 +621,14 @@
   "__wildcard_mention_token__ (Notify stream)": "__wildcard_mention_token__ (Stream benachrichtigen)",
   "and": "und",
   "cookie": "Cookie",
+  "group private messages with __recipient__": "",
   "in 1 hour": "in 1 Stunde",
   "in 20 minutes": "in 20 Minuten",
   "in 3 hours": "in 3 Stunden",
   "leafy green vegetable": "grünes Blattgemüse",
   "marketing": "Marketing",
   "more conversations": "weitere Unterhaltungen",
-  "more topics": "mehr Themen"
+  "more topics": "mehr Themen",
+  "private messages with __recipient__": "",
+  "private messages with yourself": ""
 }
