--- a/static/locale/hu/translations.json
+++ b/static/locale/hu/translations.json
@@ -1,7 +1,9 @@
 {
   "\"__file_name__\" was too large; the maximum file size is 25MiB.": "\"__file_name__\" túl nagy! A max. fájlméret 25MiB.",
   "(This user has been deactivated)": "(Ezt a felhasználót megszüntettük)",
+  "(away)": "",
   "(no topic)": "(nincs téma)",
+  "(you)": "",
   "1 day": "1 nap",
   "1 hour": "1 óra",
   "1 week": "1 hét",
@@ -15,8 +17,10 @@
   "<p>The stream <b>__stream_name__</b> does not exist.</p><p>Manage your subscriptions <a href='#streams/all'>on your Streams page</a>.</p>": "",
   "<strong>__name__</strong> is not subscribed to this stream. They will not be notified if you mention them.": "",
   "<strong>__name__</strong> is not subscribed to this stream. They will not be notified unless you subscribe them.": "",
+  "A square logo used to brand your Zulip organization.": "",
   "A stream needs to have a name": "Az üzenetfolyamnak nevet kell adni",
   "A stream with this name already exists": "Ezzel a névvel már létezik üzenetfolyam",
+  "A wide image, replacing the Zulip logo in the upper left corner of the Zulip apps.": "",
   "API key": "API kulcs",
   "Action": "Tevékenység",
   "Actions": "Tevékenységek",
@@ -69,9 +73,9 @@
   "An hour ago": "",
   "An unknown error occurred.": "Ismeretlen hiba történt!",
   "Announce stream": "Kihirdető üzenetfolyam",
+  "Any member of this organization can add custom emoji.": "",
   "Any time": "Bármikor",
   "Anyone in this organization can add bots": "Ebből a szervezetből bárki hozzáadhat botokat",
-  "Anyone in this organization can add custom emoji.": "Ebből a szervezetből bárki hozzáadhat egyéni hangulatjeleket.",
   "Apply this change to all current stream subscriptions?": "Alkalmazzuk ezt a változtatást minden üzenetfolyam feliratkozásra?",
   "Are invitations required for joining the organization?": "Szükség van meghívóra a szervezethez való csatlakozáshoz?",
   "Are you sure you want to create stream '__stream_name__' and subscribe __count__ users to it?": "Biztosan létrehozod a(z) '__stream_name__' üzenetfolyamot és felírsz rá __count__ felhasználót?",
@@ -110,6 +114,7 @@
   "Choose avatar": "Avatar választása",
   "Choose custom color": "Egyéni szín választása",
   "Clear avatar": "Avatar törlése",
+  "Clear away status": "",
   "Clear emoji image": "Hangulatjel törlése",
   "Click anywhere on a message to reply.": "A válaszoláshoz kattints bárhová egy üzeneten.",
   "Click outside the input box to save. We\\'ll automatically notify anyone that was added or removed.": "Kattints a beviteli mezőn kívülre a mentéshez. Mindenkit automatikusan értesítünk, akit hozzáadtál vagy töröltél.",
@@ -139,6 +144,8 @@
   "Custom profile fields": "Egyéni profil mezők",
   "Customize avatar": "Avatar testreszabása",
   "Date uploaded": "Feltöltés dátuma",
+  "Day": "",
+  "Day mode": "",
   "Deactivate": "Kikapcsolás",
   "Deactivate account": "Fiók megszüntetése",
   "Deactivate now": "Deaktiválás most",
@@ -156,6 +163,7 @@
   "Delete draft": "Piszkozat törlése",
   "Delete file": "Fájl törlése",
   "Delete icon": "Ikon törlése",
+  "Delete logo": "",
   "Delete message": "Üzenet törlése",
   "Delete stream": "Folyam törlése",
   "Delete user group": "",
@@ -201,7 +209,6 @@
   "Error adding subscription": "Hiba a feliratkozás létrehozásakor",
   "Error checking subscription": "Feliratkozás ellenőrzési hiba",
   "Error creating stream": "Üzenetfolyam létrehozási hiba",
-  "Error deactivating account": "Hiba a fiók deaktiválásakor",
   "Error deleting message": "Üzenet törlési hiba",
   "Error fetching message edit history": "Hiba az üzenet-módosítások történetének betöltése közben",
   "Error getting API key": "API kulcs megszerzése nem sikerült",
@@ -211,7 +218,9 @@
   "Error removing subscription": "Feliratkozás megszüntetése sikertelen",
   "Error removing user from this stream.": "Nem sikerült a felhasználó eltávolítása az üzenetfolyamból.",
   "Error saving edit": "Nem sikerült a szerkesztés mentése",
+  "Error: Cannot deactivate the only organization administrator.": "",
   "Estimated messages per week": "Üzenetek becsült száma hetente",
+  "External link": "",
   "Failed": "Sikertelen",
   "Failed to change notifications stream!": "Nem sikerült megváltoztatni az értesítési üzenetfolyamot!",
   "Failed to change signup notifications stream!": "Nem sikerült a regisztrácók értesítési üzenetfolyamának módosítása!",
@@ -237,6 +246,7 @@
   "Go back": "Vissza",
   "Got it!": "Értem!",
   "Guest": "",
+  "Guest users cannot edit custom emoji.": "",
   "High contrast mode": "Nagy kontrasztú mód",
   "Hint": "Tipp",
   "Hint (up to 80 characters)": "",
@@ -280,6 +290,7 @@
   "Member": "",
   "Members and admins": "",
   "Members and admins, but only admins can add generic bots": "",
+  "Members, admins, and guests": "",
   "Mentioned in": "",
   "Message actions": "Üzenet tevékenységek",
   "Message editing": "",
@@ -293,18 +304,20 @@
   "Mobile notifications always (even when online)": "",
   "Mobile notifications when offline": "",
   "Mobile push notifications are not configured on this server.": "",
+  "More details are available <a href=\"/help/add-a-custom-linkification-filter\" target=\"_blank\">in the Help Center article</a>.": "",
   "More than 2 weeks ago": "",
   "Mute stream": "Üzenetfolyam némítása",
   "Mute the stream <b>__stream.name__</b>": "",
-  "Mute the topic <b>__subject__</b>": "",
+  "Mute the topic <b>__topic__</b>": "",
   "Mute the topic <b>__topic_name__</b>": "",
   "Mute topic": "Téma némítása",
   "Muted streams don't show up in \\\"All messages\\\" or generate notifications unless you are mentioned.": "",
   "Muted topics": "Némított témák",
   "N": "",
   "Name": "Név",
+  "Narrow to __- message_recipient__": "",
   "Narrow to stream &quot;__display_recipient__&quot;": "Szűkítés a következő folyamra: &quot;__display_recipient__&quot;",
-  "Narrow to stream &quot;__display_recipient__&quot;, topic &quot;__subject__&quot;": "Szűkítés a következő folyamra: &quot;__display_recipient__&quot;,, és témára: &quot;__subject__&quot;",
+  "Narrow to stream &quot;__display_recipient__&quot;, topic &quot;__topic__&quot;": "",
   "Narrow to stream <b>__stream.name__</b>": "",
   "Narrow to topic <b>__topic_name__</b>": "",
   "Narrow to your private messages with __display_reply_to__": "Szűkítés a következő felhasználóval váltott privát üzenetekre: __display_reply_to__",
@@ -327,6 +340,7 @@
   "New topic": "Új téma",
   "New user notifications:": "",
   "Next week": "",
+  "Night": "",
   "Night mode": "Éjszakai mód",
   "No": "",
   "No bots match your current filter.": "",
@@ -341,6 +355,7 @@
   "None": "",
   "Note that any bots that you maintain will be disabled.": "",
   "Nothing to preview": "",
+  "Notification sound:": "",
   "Notifications": "Értesítések",
   "Notifications are triggered when a message arrives and Zulip isn't in focus or the message is offscreen.": "",
   "Notifications stream changed!": "",
@@ -355,10 +370,12 @@
   "Only organization administrators can post.": "",
   "Only organization admins are allowed to post to this stream.": "Erre az üzenetfolyamra csak szervezeti adminisztrátorok írhatnak!",
   "Optional": "",
+  "Or, to automatically linkify GitHub's <code>org/repo#1234</code> syntax:": "",
   "Organization": "",
   "Organization administrators can change this in the organization settings.": "",
   "Organization avatar": "",
   "Organization description": "",
+  "Organization logo": "",
   "Organization name": "",
   "Organization permissions": "Szervezeti engedélyek",
   "Organization profile": "Szervezeti profil",
@@ -374,6 +391,7 @@
   "People to add": "",
   "Pin stream <b>__stream.name__</b> to top": "<b>__stream.name__</b> folyam kitűzése felülre",
   "Pin stream to top of left sidebar": "",
+  "Play sound": "",
   "Please just upload one file.": "",
   "Please re-enter your password to confirm your identity.": "",
   "Please specify a date or time": "",
@@ -390,7 +408,6 @@
   "Quote and reply": "",
   "Reactivate": "Újraaktiválás",
   "Reactivate bot": "",
-  "Regular expression": "",
   "Remind me about this": "",
   "Reminder not set!": "",
   "Reminder set!": "",
@@ -431,6 +448,12 @@
   "Send emails introducing Zulip to new users": "",
   "Send private message": "Privát üzenet küldése",
   "Sent!": "",
+  "Sent! Scroll down to view your message.": "",
+  "Sent! Your message is outside your current narrow.": "",
+  "Sent! Your message was sent to a stream you have muted.": "",
+  "Sent! Your message was sent to a topic you have muted.": "",
+  "Sent! Your recent message is outside the current search.": "",
+  "Set status to away": "",
   "Settings": "Beállítások",
   "Setup": "",
   "Setup two factor authentication": "",
@@ -479,7 +502,7 @@
   "There are no messages to reply to.": "",
   "These settings are explained in detail in the <a target=\"_blank\" href=\"/help/stream-permissions\">help center</a>.": "",
   "This action is permanent and cannot be undone. All users will permanently lose access to their Zulip accounts.": "",
-  "This is a <span class=\"fa fa-globe\" aria-hidden=\"true\"></span> <b>public stream</b>. Anybody in your organization can join.": "",
+  "This is a <span class=\"fa fa-globe\" aria-hidden=\"true\"></span> <b>public stream</b>. Any member of the organization can join without an invitation.": "",
   "This is a <span class=\"fa fa-lock\" aria-hidden=\"true\"></span> <b>private stream</b>. Only people who have been invited can access its content, but any member of the stream can invite others.": "",
   "This is a private stream": "Ez egy privát üzenetfolyam",
   "This organization is configured to restrict editing of message content to __minutes_to_edit__ minutes after it is sent.": "",
@@ -492,6 +515,7 @@
   "Tomorrow": "",
   "Topic": "Téma",
   "Topic editing only": "Csak témakör szerkesztése",
+  "Topic muted": "",
   "Try again": "",
   "Two factor authentication": "",
   "Type": "",
@@ -501,8 +525,9 @@
   "Uncheck all": "",
   "Unknown": "",
   "Unless I say otherwise for a particular stream, I want:": "",
+  "Unmute": "",
   "Unmute the stream <b>__stream.name__</b>": "<b>__stream.name__</b> folyam némításának feoldása",
-  "Unmute the topic <b>__subject__</b>": "<b>__subject__</b> téma visszanémítása",
+  "Unmute the topic <b>__topic__</b>": "",
   "Unmute the topic <b>__topic_name__</b>": "<b>__topic_name__</b> témakör némítás feloldása",
   "Unpin stream <b>__stream.name__</b> from top": "A következő folyam felülre tűzésének megszüntetése: <b>__stream.name__</b>",
   "Unstar": "",
@@ -517,10 +542,13 @@
   "Upload avatar": "Avatar feltöltése",
   "Upload icon": "",
   "Upload image or GIF": "",
+  "Upload logo": "",
   "Upload new avatar": "",
   "Upload new icon": "",
+  "Upload new logo": "",
   "Uploaded files": "",
   "Uploading icon.": "",
+  "Uploading logo.": "",
   "Uploading\u2026": "",
   "User already subscribed.": "",
   "User avatar": "",
@@ -540,6 +568,7 @@
   "View file": "",
   "View messages sent": "",
   "View private messages": "",
+  "View private messages to myself": "",
   "View source": "",
   "View source / Edit topic": "",
   "View stream": "",
@@ -550,6 +579,7 @@
   "Who can add bots": "",
   "Who can add custom emoji": "",
   "Who can create streams": "",
+  "Who can see users email addresses": "",
   "Working\u2026": "",
   "Yes": "",
   "Yes, delete this stream": "Igen, töröljük ezt a folyamot",
@@ -564,6 +594,7 @@
   "You are not subscribed to stream __stream__": "",
   "You can send emails to Zulip! Just copy and use this address as an email recipient, and:": "",
   "You cannot create a stream with no subscribers!": "",
+  "You have muted the topic <span class=\"topic\"></span> under the <span class=\"stream\"></span> stream.": "",
   "You have no active bots.": "",
   "You have no inactive bots.": "",
   "You have not muted any topics yet.": "",
@@ -590,11 +621,14 @@
   "__wildcard_mention_token__ (Notify stream)": "",
   "and": "",
   "cookie": "",
+  "group private messages with __recipient__": "",
   "in 1 hour": "",
   "in 20 minutes": "",
   "in 3 hours": "",
   "leafy green vegetable": "",
   "marketing": "",
   "more conversations": "",
-  "more topics": ""
+  "more topics": "",
+  "private messages with __recipient__": "",
+  "private messages with yourself": ""
 }
