--- a/static/locale/id_ID/translations.json
+++ b/static/locale/id_ID/translations.json
@@ -1,7 +1,9 @@
 {
   "\"__file_name__\" was too large; the maximum file size is 25MiB.": "\"__file_name__\" terlalu besar; ukuran file maksimum adalah 25MiB.",
   "(This user has been deactivated)": "(Pengguna ini telah dideaktivasi)",
+  "(away)": "",
   "(no topic)": "(tidak ada topik)",
+  "(you)": "",
   "1 day": "",
   "1 hour": "",
   "1 week": "",
@@ -15,8 +17,10 @@
   "<p>The stream <b>__stream_name__</b> does not exist.</p><p>Manage your subscriptions <a href='#streams/all'>on your Streams page</a>.</p>": "",
   "<strong>__name__</strong> is not subscribed to this stream. They will not be notified if you mention them.": "",
   "<strong>__name__</strong> is not subscribed to this stream. They will not be notified unless you subscribe them.": "",
+  "A square logo used to brand your Zulip organization.": "",
   "A stream needs to have a name": "Stream memerlukan sebuah nama",
   "A stream with this name already exists": "Stream dengan nama tersebut telah ada",
+  "A wide image, replacing the Zulip logo in the upper left corner of the Zulip apps.": "",
   "API key": "API key",
   "Action": "Aksi",
   "Actions": "Aksi",
@@ -69,9 +73,9 @@
   "An hour ago": "",
   "An unknown error occurred.": "Terjadi kesalahan yang tidak dikenal.",
   "Announce stream": "Stream pengumuman",
+  "Any member of this organization can add custom emoji.": "",
   "Any time": "",
   "Anyone in this organization can add bots": "",
-  "Anyone in this organization can add custom emoji.": "Semua orang pada organisasi ini dapat menambahkan custom emoji.",
   "Apply this change to all current stream subscriptions?": "Terapkan perubahan ini untuk semua siaran langgan?",
   "Are invitations required for joining the organization?": "",
   "Are you sure you want to create stream '__stream_name__' and subscribe __count__ users to it?": "Apakah Anda yakin Anda ingin membuat siaran '__stream_name__' dan melanggan __count__ pengguna ke dalam siaran tersebut?",
@@ -110,6 +114,7 @@
   "Choose avatar": "Pilih avatar",
   "Choose custom color": "Pilih warna khusus",
   "Clear avatar": "Hapus avatar",
+  "Clear away status": "",
   "Clear emoji image": "Bersihkan gambar emoji",
   "Click anywhere on a message to reply.": "",
   "Click outside the input box to save. We\\'ll automatically notify anyone that was added or removed.": "",
@@ -139,6 +144,8 @@
   "Custom profile fields": "",
   "Customize avatar": "Berhasil dihapus!",
   "Date uploaded": "Tanggal diunggah",
+  "Day": "",
+  "Day mode": "",
   "Deactivate": "Deaktivasi",
   "Deactivate account": "Deaktivasi akun",
   "Deactivate now": "Deaktivasi sekarang",
@@ -156,6 +163,7 @@
   "Delete draft": "Hapus konsep",
   "Delete file": "Hapus file",
   "Delete icon": "Hapus ikon",
+  "Delete logo": "",
   "Delete message": "Hapus pesan",
   "Delete stream": "Hapus stream",
   "Delete user group": "",
@@ -201,7 +209,6 @@
   "Error adding subscription": "Kesalahan dalam menambahkan langganan",
   "Error checking subscription": "Eror mengecek daftar langgan",
   "Error creating stream": "Eror membuat siaran",
-  "Error deactivating account": "Eror mendeaktivasi akun",
   "Error deleting message": "",
   "Error fetching message edit history": "Eror mengambil riwayat pesan",
   "Error getting API key": "Eror mengambil API key",
@@ -211,7 +218,9 @@
   "Error removing subscription": "Eror menghapus langgan",
   "Error removing user from this stream.": "",
   "Error saving edit": "Eror menyimpan suntingan",
+  "Error: Cannot deactivate the only organization administrator.": "",
   "Estimated messages per week": "",
+  "External link": "",
   "Failed": "Gagal",
   "Failed to change notifications stream!": "",
   "Failed to change signup notifications stream!": "",
@@ -237,6 +246,7 @@
   "Go back": "Kembali",
   "Got it!": "Dimengerti!",
   "Guest": "",
+  "Guest users cannot edit custom emoji.": "",
   "High contrast mode": "Mode kontras tinggi",
   "Hint": "",
   "Hint (up to 80 characters)": "",
@@ -280,6 +290,7 @@
   "Member": "",
   "Members and admins": "",
   "Members and admins, but only admins can add generic bots": "",
+  "Members, admins, and guests": "",
   "Mentioned in": "",
   "Message actions": "Aksi untuk pesan",
   "Message editing": "Pengeditan pesan",
@@ -293,18 +304,20 @@
   "Mobile notifications always (even when online)": "",
   "Mobile notifications when offline": "",
   "Mobile push notifications are not configured on this server.": "",
+  "More details are available <a href=\"/help/add-a-custom-linkification-filter\" target=\"_blank\">in the Help Center article</a>.": "",
   "More than 2 weeks ago": "",
   "Mute stream": "Senyapkan stream",
   "Mute the stream <b>__stream.name__</b>": "",
-  "Mute the topic <b>__subject__</b>": "",
+  "Mute the topic <b>__topic__</b>": "",
   "Mute the topic <b>__topic_name__</b>": "",
   "Mute topic": "Senyapkan topik",
   "Muted streams don't show up in \\\"All messages\\\" or generate notifications unless you are mentioned.": "",
   "Muted topics": "Topik yang didiamkan",
   "N": "",
   "Name": "Nama",
+  "Narrow to __- message_recipient__": "",
   "Narrow to stream &quot;__display_recipient__&quot;": "",
-  "Narrow to stream &quot;__display_recipient__&quot;, topic &quot;__subject__&quot;": "",
+  "Narrow to stream &quot;__display_recipient__&quot;, topic &quot;__topic__&quot;": "",
   "Narrow to stream <b>__stream.name__</b>": "",
   "Narrow to topic <b>__topic_name__</b>": "",
   "Narrow to your private messages with __display_reply_to__": "",
@@ -327,6 +340,7 @@
   "New topic": "Topik baru",
   "New user notifications:": "",
   "Next week": "",
+  "Night": "",
   "Night mode": "Mode malam",
   "No": "Tidak",
   "No bots match your current filter.": "",
@@ -341,6 +355,7 @@
   "None": "",
   "Note that any bots that you maintain will be disabled.": "",
   "Nothing to preview": "",
+  "Notification sound:": "",
   "Notifications": "Notifikasi",
   "Notifications are triggered when a message arrives and Zulip isn't in focus or the message is offscreen.": "",
   "Notifications stream changed!": "",
@@ -355,10 +370,12 @@
   "Only organization administrators can post.": "",
   "Only organization admins are allowed to post to this stream.": "",
   "Optional": "opsional",
+  "Or, to automatically linkify GitHub's <code>org/repo#1234</code> syntax:": "",
   "Organization": "Organisasi",
   "Organization administrators can change this in the organization settings.": "",
   "Organization avatar": "Avatar organisasi",
   "Organization description": "",
+  "Organization logo": "",
   "Organization name": "Nama organisasi",
   "Organization permissions": "Izin organisasi",
   "Organization profile": "Profil organisasi",
@@ -374,6 +391,7 @@
   "People to add": "Orang-orang untuk ditambahkan",
   "Pin stream <b>__stream.name__</b> to top": "Sematkan stream <b>__stream.name__</b> ke atas",
   "Pin stream to top of left sidebar": "Sematkan stream ke atas sidebar kiri",
+  "Play sound": "",
   "Please just upload one file.": "",
   "Please re-enter your password to confirm your identity.": "",
   "Please specify a date or time": "",
@@ -390,7 +408,6 @@
   "Quote and reply": "",
   "Reactivate": "",
   "Reactivate bot": "",
-  "Regular expression": "",
   "Remind me about this": "",
   "Reminder not set!": "",
   "Reminder set!": "",
@@ -431,6 +448,12 @@
   "Send emails introducing Zulip to new users": "",
   "Send private message": "Kirim pesan pribadi",
   "Sent!": "",
+  "Sent! Scroll down to view your message.": "",
+  "Sent! Your message is outside your current narrow.": "",
+  "Sent! Your message was sent to a stream you have muted.": "",
+  "Sent! Your message was sent to a topic you have muted.": "",
+  "Sent! Your recent message is outside the current search.": "",
+  "Set status to away": "",
   "Settings": "Pengaturan",
   "Setup": "",
   "Setup two factor authentication": "",
@@ -479,7 +502,7 @@
   "There are no messages to reply to.": "",
   "These settings are explained in detail in the <a target=\"_blank\" href=\"/help/stream-permissions\">help center</a>.": "",
   "This action is permanent and cannot be undone. All users will permanently lose access to their Zulip accounts.": "",
-  "This is a <span class=\"fa fa-globe\" aria-hidden=\"true\"></span> <b>public stream</b>. Anybody in your organization can join.": "",
+  "This is a <span class=\"fa fa-globe\" aria-hidden=\"true\"></span> <b>public stream</b>. Any member of the organization can join without an invitation.": "",
   "This is a <span class=\"fa fa-lock\" aria-hidden=\"true\"></span> <b>private stream</b>. Only people who have been invited can access its content, but any member of the stream can invite others.": "",
   "This is a private stream": "",
   "This organization is configured to restrict editing of message content to __minutes_to_edit__ minutes after it is sent.": "",
@@ -492,6 +515,7 @@
   "Tomorrow": "",
   "Topic": "Topik",
   "Topic editing only": "",
+  "Topic muted": "",
   "Try again": "",
   "Two factor authentication": "",
   "Type": "",
@@ -501,8 +525,9 @@
   "Uncheck all": "",
   "Unknown": "",
   "Unless I say otherwise for a particular stream, I want:": "",
+  "Unmute": "",
   "Unmute the stream <b>__stream.name__</b>": "",
-  "Unmute the topic <b>__subject__</b>": "",
+  "Unmute the topic <b>__topic__</b>": "",
   "Unmute the topic <b>__topic_name__</b>": "",
   "Unpin stream <b>__stream.name__</b> from top": "",
   "Unstar": "",
@@ -517,10 +542,13 @@
   "Upload avatar": "Unggah avatar",
   "Upload icon": "",
   "Upload image or GIF": "",
+  "Upload logo": "",
   "Upload new avatar": "",
   "Upload new icon": "",
+  "Upload new logo": "",
   "Uploaded files": "File yang telah diupload",
   "Uploading icon.": "",
+  "Uploading logo.": "",
   "Uploading\u2026": "",
   "User already subscribed.": "",
   "User avatar": "",
@@ -540,6 +568,7 @@
   "View file": "",
   "View messages sent": "",
   "View private messages": "",
+  "View private messages to myself": "",
   "View source": "",
   "View source / Edit topic": "",
   "View stream": "",
@@ -550,6 +579,7 @@
   "Who can add bots": "",
   "Who can add custom emoji": "",
   "Who can create streams": "",
+  "Who can see users email addresses": "",
   "Working\u2026": "",
   "Yes": "",
   "Yes, delete this stream": "",
@@ -564,6 +594,7 @@
   "You are not subscribed to stream __stream__": "",
   "You can send emails to Zulip! Just copy and use this address as an email recipient, and:": "",
   "You cannot create a stream with no subscribers!": "",
+  "You have muted the topic <span class=\"topic\"></span> under the <span class=\"stream\"></span> stream.": "",
   "You have no active bots.": "",
   "You have no inactive bots.": "",
   "You have not muted any topics yet.": "",
@@ -590,11 +621,14 @@
   "__wildcard_mention_token__ (Notify stream)": "",
   "and": "dan",
   "cookie": "",
+  "group private messages with __recipient__": "",
   "in 1 hour": "",
   "in 20 minutes": "",
   "in 3 hours": "",
   "leafy green vegetable": "",
   "marketing": "",
   "more conversations": "",
-  "more topics": ""
+  "more topics": "",
+  "private messages with __recipient__": "",
+  "private messages with yourself": ""
 }
