--- a/static/locale/sr/translations.json
+++ b/static/locale/sr/translations.json
@@ -1,6 +1,7 @@
 {
   "\"__file_name__\" was too large; the maximum file size is 25MiB.": "",
   "(This user has been deactivated)": "",
+  "(away)": "",
   "(no topic)": "",
   "(you)": "",
   "1 day": "",
@@ -16,8 +17,10 @@
   "<p>The stream <b>__stream_name__</b> does not exist.</p><p>Manage your subscriptions <a href='#streams/all'>on your Streams page</a>.</p>": "",
   "<strong>__name__</strong> is not subscribed to this stream. They will not be notified if you mention them.": "",
   "<strong>__name__</strong> is not subscribed to this stream. They will not be notified unless you subscribe them.": "",
+  "A square logo used to brand your Zulip organization.": "",
   "A stream needs to have a name": "",
   "A stream with this name already exists": "",
+  "A wide image, replacing the Zulip logo in the upper left corner of the Zulip apps.": "",
   "API key": "",
   "Action": "",
   "Actions": "",
@@ -111,6 +114,7 @@
   "Choose avatar": "",
   "Choose custom color": "",
   "Clear avatar": "",
+  "Clear away status": "",
   "Clear emoji image": "",
   "Click anywhere on a message to reply.": "",
   "Click outside the input box to save. We\\'ll automatically notify anyone that was added or removed.": "",
@@ -140,6 +144,8 @@
   "Custom profile fields": "",
   "Customize avatar": "",
   "Date uploaded": "",
+  "Day": "",
+  "Day mode": "",
   "Deactivate": "",
   "Deactivate account": "",
   "Deactivate now": "",
@@ -157,6 +163,7 @@
   "Delete draft": "",
   "Delete file": "",
   "Delete icon": "",
+  "Delete logo": "",
   "Delete message": "",
   "Delete stream": "",
   "Delete user group": "",
@@ -297,16 +304,18 @@
   "Mobile notifications always (even when online)": "",
   "Mobile notifications when offline": "",
   "Mobile push notifications are not configured on this server.": "",
+  "More details are available <a href=\"/help/add-a-custom-linkification-filter\" target=\"_blank\">in the Help Center article</a>.": "",
   "More than 2 weeks ago": "",
   "Mute stream": "",
   "Mute the stream <b>__stream.name__</b>": "",
-  "Mute the topic <b>__subject__</b>": "",
+  "Mute the topic <b>__topic__</b>": "",
   "Mute the topic <b>__topic_name__</b>": "",
   "Mute topic": "",
   "Muted streams don't show up in \\\"All messages\\\" or generate notifications unless you are mentioned.": "",
   "Muted topics": "",
   "N": "",
   "Name": "",
+  "Narrow to __- message_recipient__": "",
   "Narrow to stream &quot;__display_recipient__&quot;": "",
   "Narrow to stream &quot;__display_recipient__&quot;, topic &quot;__topic__&quot;": "",
   "Narrow to stream <b>__stream.name__</b>": "",
@@ -331,6 +340,7 @@
   "New topic": "",
   "New user notifications:": "",
   "Next week": "",
+  "Night": "",
   "Night mode": "",
   "No": "",
   "No bots match your current filter.": "",
@@ -360,10 +370,12 @@
   "Only organization administrators can post.": "",
   "Only organization admins are allowed to post to this stream.": "",
   "Optional": "",
+  "Or, to automatically linkify GitHub's <code>org/repo#1234</code> syntax:": "",
   "Organization": "",
   "Organization administrators can change this in the organization settings.": "",
   "Organization avatar": "",
   "Organization description": "",
+  "Organization logo": "",
   "Organization name": "",
   "Organization permissions": "",
   "Organization profile": "",
@@ -396,7 +408,6 @@
   "Quote and reply": "",
   "Reactivate": "",
   "Reactivate bot": "",
-  "Regular expression": "",
   "Remind me about this": "",
   "Reminder not set!": "",
   "Reminder set!": "",
@@ -437,6 +448,12 @@
   "Send emails introducing Zulip to new users": "",
   "Send private message": "",
   "Sent!": "",
+  "Sent! Scroll down to view your message.": "",
+  "Sent! Your message is outside your current narrow.": "",
+  "Sent! Your message was sent to a stream you have muted.": "",
+  "Sent! Your message was sent to a topic you have muted.": "",
+  "Sent! Your recent message is outside the current search.": "",
+  "Set status to away": "",
   "Settings": "\u041f\u043e\u0434\u0435\u0448\u0430\u0432\u0430\u045a\u0430",
   "Setup": "",
   "Setup two factor authentication": "",
@@ -498,6 +515,7 @@
   "Tomorrow": "",
   "Topic": "",
   "Topic editing only": "",
+  "Topic muted": "",
   "Try again": "",
   "Two factor authentication": "",
   "Type": "",
@@ -507,8 +525,9 @@
   "Uncheck all": "",
   "Unknown": "",
   "Unless I say otherwise for a particular stream, I want:": "",
+  "Unmute": "",
   "Unmute the stream <b>__stream.name__</b>": "",
-  "Unmute the topic <b>__subject__</b>": "",
+  "Unmute the topic <b>__topic__</b>": "",
   "Unmute the topic <b>__topic_name__</b>": "",
   "Unpin stream <b>__stream.name__</b> from top": "",
   "Unstar": "",
@@ -523,10 +542,13 @@
   "Upload avatar": "",
   "Upload icon": "",
   "Upload image or GIF": "",
+  "Upload logo": "",
   "Upload new avatar": "",
   "Upload new icon": "",
+  "Upload new logo": "",
   "Uploaded files": "",
   "Uploading icon.": "",
+  "Uploading logo.": "",
   "Uploading\u2026": "",
   "User already subscribed.": "",
   "User avatar": "",
@@ -546,6 +568,7 @@
   "View file": "",
   "View messages sent": "",
   "View private messages": "",
+  "View private messages to myself": "",
   "View source": "",
   "View source / Edit topic": "",
   "View stream": "",
@@ -571,6 +594,7 @@
   "You are not subscribed to stream __stream__": "",
   "You can send emails to Zulip! Just copy and use this address as an email recipient, and:": "",
   "You cannot create a stream with no subscribers!": "",
+  "You have muted the topic <span class=\"topic\"></span> under the <span class=\"stream\"></span> stream.": "",
   "You have no active bots.": "",
   "You have no inactive bots.": "",
   "You have not muted any topics yet.": "",
@@ -597,11 +621,14 @@
   "__wildcard_mention_token__ (Notify stream)": "",
   "and": "\u0438",
   "cookie": "",
+  "group private messages with __recipient__": "",
   "in 1 hour": "",
   "in 20 minutes": "",
   "in 3 hours": "",
   "leafy green vegetable": "",
   "marketing": "",
   "more conversations": "",
-  "more topics": ""
+  "more topics": "",
+  "private messages with __recipient__": "",
+  "private messages with yourself": ""
 }
